@@ -1,18 +1,4 @@
-/*
- * Copyright 2000-2016 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.jarFinder;
 
 import com.intellij.ide.JavaUiBundle;
@@ -34,43 +20,43 @@ import org.jetbrains.annotations.Nullable;
 import java.io.IOException;
 import java.io.StringReader;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Properties;
 
 /**
  * @author Sergey Evdokimov
  */
-public class IvyAttachSourceProvider extends AbstractAttachSourceProvider {
+final class IvyAttachSourceProvider extends AbstractAttachSourceProvider {
+
   private static final Logger LOG = Logger.getInstance(IvyAttachSourceProvider.class);
 
-  @NotNull
   @Override
-  public Collection<AttachSourcesAction> getActions(List<LibraryOrderEntry> orderEntries, PsiFile psiFile) {
+  public @NotNull Collection<? extends AttachSourcesAction> getActions(@NotNull List<? extends LibraryOrderEntry> orderEntries,
+                                                                       @NotNull PsiFile psiFile) {
     VirtualFile jar = getJarByPsiFile(psiFile);
-    if (jar == null) return Collections.emptyList();
+    if (jar == null) return List.of();
 
     VirtualFile jarsDir = jar.getParent();
-    if (jarsDir == null || !jarsDir.getName().equals("jars")) return Collections.emptyList();
+    if (jarsDir == null || !jarsDir.getName().equals("jars")) return List.of();
 
     VirtualFile artifactDir = jarsDir.getParent();
-    if (artifactDir == null) return Collections.emptyList();
+    if (artifactDir == null) return List.of();
 
     String jarNameWithoutExt = jar.getNameWithoutExtension();
     String artifactName = artifactDir.getName();
 
     if (!jarNameWithoutExt.startsWith(artifactName) || !jarNameWithoutExt.substring(artifactName.length()).startsWith("-")) {
-      return Collections.emptyList();
+      return List.of();
     }
 
     String version = jarNameWithoutExt.substring(artifactName.length() + 1);
 
     //noinspection SpellCheckingInspection
     VirtualFile propertiesFile = artifactDir.findChild("ivydata-" + version + ".properties");
-    if (propertiesFile == null) return Collections.emptyList();
+    if (propertiesFile == null) return List.of();
 
     Library library = getLibraryFromOrderEntriesList(orderEntries);
-    if (library == null) return Collections.emptyList();
+    if (library == null) return List.of();
 
     String sourceFileName = artifactName + '-' + version + "-sources.jar";
 
@@ -81,18 +67,18 @@ public class IvyAttachSourceProvider extends AbstractAttachSourceProvider {
         // File already downloaded.
         VirtualFile jarRoot = JarFileSystem.getInstance().getJarRootForLocalFile(srcFile);
         if (jarRoot == null || ArrayUtil.contains(jarRoot, (Object[])library.getFiles(OrderRootType.SOURCES))) {
-          return Collections.emptyList(); // Sources already attached.
+          return List.of(); // Sources already attached.
         }
 
-        return Collections.singleton(new AttachExistingSourceAction(jarRoot, library,
-                                                                    JavaUiBundle.message("ivi.attach.source.provider.action.name")));
+        return List.of(new AttachExistingSourceAction(jarRoot, library,
+                                                      JavaUiBundle.message("ivi.attach.source.provider.action.name")));
       }
     }
 
     String url = extractUrl(propertiesFile, artifactName);
-    if (StringUtil.isEmptyOrSpaces(url)) return Collections.emptyList();
+    if (StringUtil.isEmptyOrSpaces(url)) return List.of();
 
-    return Collections.singleton(new DownloadSourcesAction(psiFile.getProject(), "Downloading Ivy Sources", url) {
+    return List.of(new DownloadSourcesAction(psiFile.getProject(), "Downloading Ivy Sources", url) {
       @Override
       protected void storeFile(byte[] content) {
         try {
@@ -115,8 +101,7 @@ public class IvyAttachSourceProvider extends AbstractAttachSourceProvider {
     });
   }
 
-  @Nullable
-  private static String extractUrl(VirtualFile properties, String artifactName) {
+  private static @Nullable String extractUrl(VirtualFile properties, String artifactName) {
     String prefix = "artifact:" + artifactName + "#source#jar#";
 
     try {
