@@ -1,4 +1,4 @@
-// Copyright 2000-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.execution.configuration;
 
 import com.google.common.collect.ImmutableMap;
@@ -7,10 +7,7 @@ import org.jdom.Element;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.Collections;
-import java.util.LinkedHashMap;
-import java.util.Map;
-import java.util.Objects;
+import java.util.*;
 
 /**
  * Holds environment variables configuration:
@@ -21,7 +18,7 @@ import java.util.Objects;
  * Instances of this class are immutable objects, so it can be safely passed across threads.
  */
 public final class EnvironmentVariablesData {
-  public static final EnvironmentVariablesData DEFAULT = new EnvironmentVariablesData(Collections.emptyMap(), true, null);
+  public static final EnvironmentVariablesData DEFAULT = new EnvironmentVariablesData(Map.of(), true, null);
 
   private static final String ENVS = "envs";
   private static final String PASS_PARENT_ENVS = "pass-parent-envs";
@@ -43,8 +40,7 @@ public final class EnvironmentVariablesData {
   /**
    * @return immutable Map instance containing user-defined environment variables (iteration order is reliable user-specified)
    */
-  @NotNull
-  public Map<String, String> getEnvs() {
+  public @NotNull Map<String, String> getEnvs() {
     return myEnvs;
   }
 
@@ -70,8 +66,9 @@ public final class EnvironmentVariablesData {
     final int prime = 31;
     int result = myEnvs.hashCode();
     result = prime * result + (myPassParentEnvs ? 1 : 0);
-    if (myEnvironmentFile != null)
+    if (myEnvironmentFile != null) {
       result = prime * result + myEnvironmentFile.hashCode();
+    }
     return result;
   }
 
@@ -80,13 +77,12 @@ public final class EnvironmentVariablesData {
     return "envs=" + myEnvs + ", passParentEnvs=" + myPassParentEnvs + ", environmentFile=" + myEnvironmentFile;
   }
 
-  @NotNull
-  public static EnvironmentVariablesData readExternal(@NotNull Element element) {
+  public static @NotNull EnvironmentVariablesData readExternal(@NotNull Element element) {
     Element envsElement = element.getChild(ENVS);
     if (envsElement == null) {
       return DEFAULT;
     }
-    Map<String, String> envs = Collections.emptyMap();
+    Map<String, String> envs = Map.of();
     String passParentEnvsStr = envsElement.getAttributeValue(PASS_PARENT_ENVS);
     boolean passParentEnvs = passParentEnvsStr == null || Boolean.parseBoolean(passParentEnvsStr);
     for (Element envElement : envsElement.getChildren(ENV)) {
@@ -100,6 +96,12 @@ public final class EnvironmentVariablesData {
       }
     }
     return create(envs, passParentEnvs);
+  }
+
+  public void writeExternalNoDefault(@NotNull Element parent) {
+    if (!DEFAULT.equals(this)) {
+      writeExternal(parent);
+    }
   }
 
   public void writeExternal(@NotNull Element parent) {
@@ -122,26 +124,34 @@ public final class EnvironmentVariablesData {
     commandLine.withEnvironment(myEnvs);
   }
 
+  public static @NotNull EnvironmentVariablesData create(@NotNull Map<String, String> envs, boolean passParentEnvs) {
+    return create(envs, passParentEnvs, null);
+  }
+
   /**
    * @param envs Map instance containing user-defined environment variables
    *             (iteration order should be reliable user-specified, like {@link LinkedHashMap} or {@link ImmutableMap})
    * @param passParentEnvs true if system environment should be passed
+   * @param environmentFile path to .env file
    */
-  public static @NotNull EnvironmentVariablesData create(@NotNull Map<String, String> envs, boolean passParentEnvs) {
-    return passParentEnvs && envs.isEmpty() ? DEFAULT : new EnvironmentVariablesData(envs, passParentEnvs, null);
+  public static @NotNull EnvironmentVariablesData create(@NotNull Map<String, String> envs,
+                                                         boolean passParentEnvs,
+                                                         @Nullable String environmentFile) {
+    if (passParentEnvs && envs.isEmpty() && environmentFile == null) {
+      return DEFAULT;
+    }
+    return new EnvironmentVariablesData(envs, passParentEnvs, environmentFile);
   }
 
   public @NotNull EnvironmentVariablesData with(@NotNull Map<String, String> envs) {
-    return new EnvironmentVariablesData(envs, myPassParentEnvs, myEnvironmentFile);
+    return create(envs, myPassParentEnvs, myEnvironmentFile);
   }
 
-  @NotNull
-  public EnvironmentVariablesData with(boolean passParentEnvs) {
-    return new EnvironmentVariablesData(myEnvs, passParentEnvs, myEnvironmentFile);
+  public @NotNull EnvironmentVariablesData with(boolean passParentEnvs) {
+    return passParentEnvs == myPassParentEnvs ? this : create(myEnvs, passParentEnvs, myEnvironmentFile);
   }
 
-  @NotNull
-  public EnvironmentVariablesData with(@Nullable String environmentFile) {
-    return new EnvironmentVariablesData(myEnvs, myPassParentEnvs, environmentFile);
+  public @NotNull EnvironmentVariablesData with(@Nullable String environmentFile) {
+    return Objects.equals(environmentFile, myEnvironmentFile) ? this : create(myEnvs, myPassParentEnvs, environmentFile);
   }
 }
