@@ -1,8 +1,7 @@
-// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.ide.impl;
 
 import com.intellij.ide.ActivityTracker;
-import com.intellij.ide.CommonActionsManager;
 import com.intellij.ide.DataManager;
 import com.intellij.ide.projectView.impl.ProjectRootsUtil;
 import com.intellij.ide.structureView.*;
@@ -40,6 +39,7 @@ import com.intellij.openapi.wm.ToolWindow;
 import com.intellij.openapi.wm.ToolWindowId;
 import com.intellij.openapi.wm.ToolWindowManager;
 import com.intellij.psi.PsiElement;
+import com.intellij.ui.ExperimentalUI;
 import com.intellij.ui.components.JBPanelWithEmptyText;
 import com.intellij.ui.content.*;
 import com.intellij.ui.switcher.QuickActionProvider;
@@ -50,6 +50,7 @@ import com.intellij.util.ui.TimerUtil;
 import com.intellij.util.ui.UIUtil;
 import com.intellij.util.ui.update.MergingUpdateQueue;
 import com.intellij.util.ui.update.Update;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -58,9 +59,9 @@ import javax.swing.*;
 import java.awt.*;
 import java.awt.event.HierarchyEvent;
 import java.awt.event.HierarchyListener;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
 import static com.intellij.openapi.application.ApplicationManager.getApplication;
 
@@ -69,6 +70,10 @@ import static com.intellij.openapi.application.ApplicationManager.getApplication
  */
 public final class StructureViewWrapperImpl implements StructureViewWrapper, Disposable {
   public static final Topic<Runnable> STRUCTURE_CHANGED = new Topic<>("structure view changed", Runnable.class, Topic.BroadcastDirection.NONE);
+
+  @ApiStatus.Experimental
+  public static final DataKey<Optional<VirtualFile>> STRUCTURE_VIEW_TARGET_FILE_KEY = DataKey.create("STRUCTURE_VIEW_TARGET_FILE_KEY");
+
   private static final Logger LOG = Logger.getInstance(StructureViewWrapperImpl.class);
   private static final DataKey<StructureViewWrapper> WRAPPER_DATA_KEY = DataKey.create("WRAPPER_DATA_KEY");
   private static final int REFRESH_TIME = 100; // time to check if a context file selection is changed or not
@@ -161,6 +166,10 @@ public final class StructureViewWrapperImpl implements StructureViewWrapper, Dis
             }
           }
         }
+        if (ExperimentalUI.isNewUI() && myStructureView instanceof StructureViewComponent) {
+          DefaultActionGroup additional = ((StructureViewComponent)myStructureView).getDotsActions();
+          myToolWindow.setAdditionalGearActions(additional);
+        }
       }
     });
     Disposer.register(myToolWindow.getContentManager(), this);
@@ -201,22 +210,34 @@ public final class StructureViewWrapperImpl implements StructureViewWrapper, Dis
     }
     else {
       DataContext asyncDataContext = Utils.wrapDataContext(dataContext);
-      ReadAction.nonBlocking(() -> CommonDataKeys.VIRTUAL_FILE_ARRAY.getData(asyncDataContext))
+      ReadAction.nonBlocking(() -> getTargetVirtualFile(asyncDataContext))
         .coalesceBy(this, owner)
-        .finishOnUiThread(ModalityState.defaultModalityState(), files -> {
-          if (files != null && files.length == 1) {
-            setFile(files[0]);
-          }
-          else if (files != null && files.length > 1) {
-            setFile(null);
+        .finishOnUiThread(ModalityState.defaultModalityState(), file -> {
+          if (file != null) {
+            setFile(file);
           }
           else if (myFirstRun) {
             setFileFromSelectionHistory();
+          }
+          else {
+            setFile(null);
           }
           myFirstRun = false;
         })
         .submit(AppExecutorUtil.getAppExecutorService());
     }
+  }
+
+  private static @Nullable VirtualFile getTargetVirtualFile(@NotNull DataContext asyncDataContext) {
+    final var explicitlySpecifiedFile = STRUCTURE_VIEW_TARGET_FILE_KEY.getData(asyncDataContext);
+    // explicitlySpecifiedFile == null           means no value was specified for this key
+    // explicitlySpecifiedFile.isEmpty() == true means target virtual file (and structure view itself) is explicitly suppressed
+    //noinspection OptionalAssignedToNull
+    if (explicitlySpecifiedFile != null) {
+      return explicitlySpecifiedFile.orElse(null);
+    }
+    final var commonFiles = CommonDataKeys.VIRTUAL_FILE_ARRAY.getData(asyncDataContext);
+    return commonFiles != null && commonFiles.length == 1 ? commonFiles[0] : null;
   }
 
   private void setFileFromSelectionHistory() {
@@ -308,15 +329,10 @@ public final class StructureViewWrapperImpl implements StructureViewWrapper, Dis
   public void rebuild() {
     if (myProject.isDisposed()) return;
 
-    Dimension referenceSize = null;
-
     Container container = myToolWindow.getComponent();
     boolean wasFocused = UIUtil.isFocusAncestor(container);
 
     if (myStructureView != null) {
-      if (myStructureView instanceof StructureView.Scrollable) {
-        referenceSize = ((StructureView.Scrollable)myStructureView).getCurrentSize();
-      }
 
       myStructureView.storeState();
       Disposer.dispose(myStructureView);
@@ -365,10 +381,6 @@ public final class StructureViewWrapperImpl implements StructureViewWrapper, Dis
           myFileEditor = editor;
           Disposer.register(this, myStructureView);
 
-          if (myStructureView instanceof StructureView.Scrollable) {
-            ((StructureView.Scrollable)myStructureView).setReferenceSizeWhileInitializing(referenceSize);
-          }
-
           if (myStructureView instanceof StructureViewComposite) {
             final StructureViewComposite composite = (StructureViewComposite)myStructureView;
             final StructureViewComposite.StructureViewDescriptor[] views = composite.getStructureViews();
@@ -403,7 +415,7 @@ public final class StructureViewWrapperImpl implements StructureViewWrapper, Dis
     }
 
     for (int i = 0; i < myPanels.length; i++) {
-      final Content content = ContentFactory.SERVICE.getInstance().createContent(myPanels[i], names[i], false);
+      final Content content = ContentFactory.getInstance().createContent(myPanels[i], names[i], false);
       contentManager.addContent(content);
       if (i == 0 && myStructureView != null) {
         Disposer.register(content, myStructureView);
@@ -424,13 +436,17 @@ public final class StructureViewWrapperImpl implements StructureViewWrapper, Dis
   }
 
   private void updateHeaderActions(@Nullable StructureView structureView) {
-    List<AnAction> titleActions = Collections.emptyList();
+    List<AnAction> titleActions;
     if (structureView instanceof StructureViewComponent) {
-      JTree tree = ((StructureViewComponent)structureView).getTree();
-      CommonActionsManager commonActionManager = CommonActionsManager.getInstance();
-      titleActions = Arrays.asList(
-        commonActionManager.createExpandAllHeaderAction(tree),
-        commonActionManager.createCollapseAllHeaderAction(tree));
+      if (ExperimentalUI.isNewUI()) {
+        titleActions = List.of(((StructureViewComponent)structureView).getViewActions());
+      }
+      else {
+        titleActions = ((StructureViewComponent)structureView).addExpandCollapseActions();
+      }
+    }
+    else {
+      titleActions = Collections.emptyList();
     }
     myToolWindow.setTitleActions(titleActions);
   }
