@@ -1,18 +1,24 @@
-// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.fileEditor.impl;
 
 import com.intellij.ProjectTopics;
+import com.intellij.codeWithMe.ClientId;
 import com.intellij.featureStatistics.fusCollectors.LifecycleUsageTriggerCollector;
 import com.intellij.ide.IdeBundle;
 import com.intellij.ide.IdeEventQueue;
 import com.intellij.ide.actions.MaximizeEditorInSplitAction;
 import com.intellij.ide.actions.SplitAction;
+import com.intellij.ide.impl.ProjectUtil;
+import com.intellij.ide.lightEdit.LightEdit;
 import com.intellij.ide.ui.UISettings;
 import com.intellij.ide.ui.UISettingsListener;
 import com.intellij.injected.editor.VirtualFileWindow;
+import com.intellij.lang.LangBundle;
 import com.intellij.notebook.editor.BackedVirtualFile;
 import com.intellij.openapi.Disposable;
 import com.intellij.openapi.application.*;
+import com.intellij.openapi.client.ClientProjectSession;
+import com.intellij.openapi.client.ClientSessionsManager;
 import com.intellij.openapi.command.CommandProcessor;
 import com.intellij.openapi.components.PersistentStateComponent;
 import com.intellij.openapi.components.State;
@@ -67,12 +73,11 @@ import com.intellij.openapi.wm.IdeFocusManager;
 import com.intellij.pom.Navigatable;
 import com.intellij.reference.SoftReference;
 import com.intellij.ui.ComponentUtil;
+import com.intellij.ui.ExperimentalUI;
 import com.intellij.ui.docking.DockContainer;
 import com.intellij.ui.docking.DockManager;
 import com.intellij.ui.docking.impl.DockManagerImpl;
 import com.intellij.ui.tabs.impl.JBTabsImpl;
-import com.intellij.ui.tabs.impl.tabsLayout.TabsLayoutInfo;
-import com.intellij.ui.tabs.impl.tabsLayout.TabsLayoutSettingsManager;
 import com.intellij.util.*;
 import com.intellij.util.concurrency.AppExecutorUtil;
 import com.intellij.util.containers.ContainerUtil;
@@ -85,9 +90,7 @@ import com.intellij.util.ui.update.MergingUpdateQueue;
 import com.intellij.util.ui.update.Update;
 import one.util.streamex.StreamEx;
 import org.jdom.Element;
-import org.jetbrains.annotations.Nls;
-import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
+import org.jetbrains.annotations.*;
 import org.jetbrains.concurrency.AsyncPromise;
 import org.jetbrains.concurrency.Promise;
 
@@ -117,12 +120,11 @@ import static com.intellij.openapi.actionSystem.IdeActions.ACTION_OPEN_IN_RIGHT_
   @Storage(StoragePathMacros.PRODUCT_WORKSPACE_FILE),
   @Storage(value = StoragePathMacros.WORKSPACE_FILE, deprecated = true)
 })
-public class FileEditorManagerImpl extends FileEditorManagerEx implements PersistentStateComponent<Element>, Disposable {
+public abstract class FileEditorManagerImpl extends FileEditorManagerEx implements PersistentStateComponent<Element>, Disposable {
   private static final Logger LOG = Logger.getInstance(FileEditorManagerImpl.class);
   protected static final Key<Boolean> DUMB_AWARE = Key.create("DUMB_AWARE");
   public static final Key<Boolean> NOTHING_WAS_OPENED_ON_START = Key.create("NOTHING_WAS_OPENED_ON_START");
 
-  private static final FileEditorProvider[] EMPTY_PROVIDER_ARRAY = {};
   public static final Key<Boolean> CLOSING_TO_REOPEN = Key.create("CLOSING_TO_REOPEN");
   /**
    * Works on VirtualFile objects, and allows to disable the Preview Tab functionality for certain files.
@@ -149,8 +151,20 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
   private final List<Pair<VirtualFile, EditorWindow>> mySelectionHistory = new ArrayList<>();
   private Reference<EditorComposite> myLastSelectedComposite = new WeakReference<>(null);
 
-  private final MergingUpdateQueue myQueue = new MergingUpdateQueue("FileEditorManagerUpdateQueue", 50, true,
-                                                                    MergingUpdateQueue.ANY_COMPONENT, this);
+  private final MergingUpdateQueue queue = new MergingUpdateQueue("FileEditorManagerUpdateQueue", 50, true,
+                                                                  MergingUpdateQueue.ANY_COMPONENT, this);
+
+  private SoftReference<VirtualFile> fileToUpdateTitle;
+  private final SingleAlarm updateFileTitleAlarm = new SingleAlarm(() -> {
+    VirtualFile file = SoftReference.deref(fileToUpdateTitle);
+    if (file == null || !file.isValid()) {
+      return;
+    }
+    fileToUpdateTitle = null;
+    for (EditorsSplitters each : getAllSplitters()) {
+      each.updateFileName(file);
+    }
+  }, 50, this, Alarm.ThreadToUse.SWING_THREAD, ModalityState.NON_MODAL);
 
   private final BusyObject.Impl.Simple myBusyObject = new BusyObject.Impl.Simple();
 
@@ -163,7 +177,7 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
   private static final AtomicInteger ourOpenFilesSetModificationCount = new AtomicInteger();
 
   static final ModificationTracker OPEN_FILE_SET_MODIFICATION_COUNT = ourOpenFilesSetModificationCount::get;
-  private final List<EditorComposite> myOpenedEditors = new CopyOnWriteArrayList<>();
+  private final List<EditorComposite> myOpenedComposites = new CopyOnWriteArrayList<>();
 
   private final MessageListenerList<FileEditorManagerListener> myListenerList;
 
@@ -172,7 +186,7 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
     myDockManager = DockManager.getInstance(myProject);
     myListenerList = new MessageListenerList<>(myProject.getMessageBus(), FileEditorManagerListener.FILE_EDITOR_MANAGER);
 
-    myQueue.setTrackUiActivity(true);
+    queue.setTrackUiActivity(true);
 
     MessageBusConnection connection = project.getMessageBus().connect(this);
     connection.subscribe(DumbService.DUMB_MODE, new DumbService.DumbModeListener() {
@@ -213,7 +227,7 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
     }, myProject);
   }
 
-  private void registerEditor(Editor editor) {
+  private void registerEditor(@NotNull Editor editor) {
     Project project = editor.getProject();
     if (project == null || project.isDisposed()) {
       return;
@@ -233,7 +247,7 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
                     splitter.getProportion() == splitter.getMinimumProportion())) ||
                   (splitter.getProportion() == splitter.getMinProportion(false) ||
                    splitter.getProportion() == splitter.getMaximumProportion())) {
-                Set<kotlin.Pair<Splitter, Boolean>> pairs = MaximizeEditorInSplitAction.Companion.getSplittersToMaximize(project, editor1);
+                Set<kotlin.Pair<Splitter, Boolean>> pairs = MaximizeEditorInSplitAction.Companion.getSplittersToMaximize(project, editor1.getComponent());
                 for (kotlin.Pair<Splitter, Boolean> pair : pairs) {
                   Splitter s = pair.getFirst();
                   s.setProportion(pair.getSecond() ? s.getMaximumProportion() : s.getMinimumProportion());
@@ -252,8 +266,8 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
     FileEditorProvider.EP_FILE_EDITOR_PROVIDER.addExtensionPointListener(new ExtensionPointListener<>() {
       @Override
       public void extensionRemoved(@NotNull FileEditorProvider extension, @NotNull PluginDescriptor pluginDescriptor) {
-        for (EditorComposite editor : myOpenedEditors) {
-          for (FileEditorProvider provider : editor.getProviders()) {
+        for (EditorComposite editor : myOpenedComposites) {
+          for (FileEditorProvider provider : editor.getAllProviders()) {
             if (provider.equals(extension)) {
               closeFile(editor.getFile());
               break;
@@ -266,21 +280,21 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
 
   @Override
   public void dispose() {
+    fileToUpdateTitle = null;
   }
 
-  private void dumbModeFinished(Project project) {
+  private void dumbModeFinished(@NotNull Project project) {
     VirtualFile[] files = getOpenFiles();
     for (VirtualFile file : files) {
-      Set<FileEditorProvider> providers = new HashSet<>();
-      List<EditorWithProviderComposite> composites = getEditorComposites(file);
-      for (EditorWithProviderComposite composite : composites) {
-        ContainerUtil.addAll(providers, composite.getProviders());
-      }
+      List<EditorComposite> composites = getAllComposites(file);
+      List<FileEditorProvider> existingProviders = ContainerUtil.flatMap(composites, EditorComposite::getAllProviders);
+      Set<String> existingIds = ContainerUtil.map2Set(existingProviders, FileEditorProvider::getEditorTypeId);
+
       FileEditorProvider[] newProviders = FileEditorProviderManager.getInstance().getProviders(project, file);
-      List<FileEditorProvider> toOpen = new ArrayList<>(Arrays.asList(newProviders));
-      toOpen.removeAll(providers);
+      List<FileEditorProvider> toOpen = ContainerUtil.filter(newProviders, it -> !existingIds.contains(it.getEditorTypeId()));
+
       // need to open additional non dumb-aware editors
-      for (EditorWithProviderComposite composite : composites) {
+      for (EditorComposite composite : composites) {
         for (FileEditorProvider provider : toOpen) {
           FileEditor editor = provider.createEditor(myProject, file);
           composite.addEditor(editor, provider);
@@ -351,10 +365,10 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
     return result;
   }
 
-  private EditorsSplitters getActiveSplittersSync() {
+  private @NotNull EditorsSplitters getActiveSplittersSync() {
     assertDispatchThread();
     if (Registry.is("ide.navigate.to.recently.focused.editor", false)) {
-      ArrayList<EditorsSplitters> splitters = new ArrayList<>(getAllSplitters());
+      List<EditorsSplitters> splitters = new ArrayList<>(getAllSplitters());
       if (!splitters.isEmpty()) {
         splitters.sort((o1, o2) -> Long.compare(o2.getLastFocusGainedTime(), o1.getLastFocusGainedTime()));
         return splitters.get(0);
@@ -394,6 +408,9 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
           DockManager.getInstance(myProject).register(dockable, this);
           Disposer.register(this, dockable);
 
+          // prepare for toolwindow manager
+          result.setFocusable(false);
+
           mySplitters = result;
         }
       }
@@ -406,9 +423,9 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
     assertReadAccess();
     EditorWindow window = getSplitters().getCurrentWindow();
     if (window != null) {
-      EditorWithProviderComposite editor = window.getSelectedEditor();
-      if (editor != null) {
-        return editor.getPreferredFocusedComponent();
+      EditorComposite composite = window.getSelectedComposite();
+      if (composite != null) {
+        return composite.getPreferredFocusedComponent();
       }
     }
     return null;
@@ -420,8 +437,7 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
    * @return color of the {@code file} which corresponds to the
    *         file's status
    */
-  @NotNull
-  public Color getFileColor(@NotNull VirtualFile file) {
+  public @NotNull Color getFileColor(@NotNull VirtualFile file) {
     FileStatusManager fileStatusManager = FileStatusManager.getInstance(myProject);
     Color statusColor = fileStatusManager != null ? fileStatusManager.getStatus(file).getColor() : UIUtil.getLabelForeground();
     if (statusColor == null) statusColor = UIUtil.getLabelForeground();
@@ -432,15 +448,20 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
     return false;
   }
 
-  public @NotNull @NlsContexts.Tooltip String getFileTooltipText(@NotNull VirtualFile file) {
+  public @NotNull @NlsContexts.Tooltip String getFileTooltipText(@NotNull VirtualFile file, @NotNull EditorWindow window) {
+    String prefix = "";
+    EditorComposite composite = window.getComposite(file);
+    if (composite != null && composite.isPreview()) {
+      prefix = LangBundle.message("preview.editor.tab.tooltip.text") + " ";
+    }
     List<EditorTabTitleProvider> availableProviders = DumbService.getDumbAwareExtensions(myProject, EditorTabTitleProvider.EP_NAME);
     for (EditorTabTitleProvider provider : availableProviders) {
       String text = provider.getEditorTabTooltipText(myProject, file);
       if (text != null) {
-        return text;
+        return prefix + text;
       }
     }
-    return FileUtil.getLocationRelativeToUserHome(file.getPresentableUrl());
+    return prefix + FileUtil.getLocationRelativeToUserHome(file.getPresentableUrl());
   }
 
   @Override
@@ -455,7 +476,8 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
    * Updates tab color for the specified {@code file}. The {@code file}
    * should be opened in the myEditor, otherwise the method throws an assertion.
    */
-  private void updateFileColor(@NotNull VirtualFile file) {
+  @Override
+  public void updateFileColor(@NotNull VirtualFile file) {
     Set<EditorsSplitters> all = getAllSplitters();
     for (EditorsSplitters each : all) {
       each.updateFileColor(file);
@@ -463,6 +485,7 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
   }
 
   private void updateFileBackgroundColor(@NotNull VirtualFile file) {
+    if (ExperimentalUI.isNewUI()) return;
     Set<EditorsSplitters> all = getAllSplitters();
     for (EditorsSplitters each : all) {
       each.updateFileBackgroundColor(file);
@@ -485,7 +508,7 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
       return;
     }
     for (EditorsSplitters splitter : getAllSplitters()) {
-      splitter.findEditorComposites(file).stream()
+      splitter.getAllComposites(file).stream()
         .filter(EditorComposite::isPreview)
         .forEach(c -> c.setPreview(false));
       splitter.updateFileColor(file);
@@ -514,21 +537,8 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
   void updateFileName(@Nullable VirtualFile file) {
     // Queue here is to prevent title flickering when tab is being closed and two events arriving: with component==null and component==next focused tab
     // only the last event makes sense to handle
-    myQueue.queue(new Update("UpdateFileName " + (file == null ? "" : file.getPath())) {
-      @Override
-      public boolean isExpired() {
-        return myProject.isDisposed() || !myProject.isOpen() || (file == null ? super.isExpired() : !file.isValid());
-      }
-
-      @Override
-      public void run() {
-        SlowOperations.allowSlowOperations(() -> {
-          for (EditorsSplitters each : getAllSplitters()) {
-            each.updateFileName(file);
-          }
-        });
-      }
-    });
+    updateFileTitleAlarm.cancelAndRequest();
+    fileToUpdateTitle = new SoftReference<>(file);
   }
 
   private void updateFrameTitle() {
@@ -537,7 +547,7 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
 
   @Override
   public VirtualFile getFile(@NotNull FileEditor editor) {
-    EditorComposite editorComposite = getEditorComposite(editor);
+    EditorComposite editorComposite = getComposite(editor);
     VirtualFile tabFile = editorComposite == null ? null : editorComposite.getFile();
     VirtualFile editorFile = editor.getFile();
     if (!Objects.equals(editorFile, tabFile)) {
@@ -652,11 +662,18 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
   @Override
   public boolean hasOpenedFile() {
     EditorWindow currentWindow = getSplitters().getCurrentWindow();
-    return currentWindow != null && currentWindow.getSelectedEditor() != null;
+    return currentWindow != null && currentWindow.getSelectedComposite() != null;
   }
 
   @Override
   public VirtualFile getCurrentFile() {
+    if (!ClientId.isCurrentlyUnderLocalId()) {
+      ClientFileEditorManager clientManager = getClientFileEditorManager();
+      if (clientManager == null) {
+        return null;
+      }
+      return clientManager.getSelectedFile();
+    }
     return getActiveSplittersSync().getCurrentFile();
   }
 
@@ -668,14 +685,15 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
 
   @Override
   public EditorWindow getCurrentWindow() {
-    if (!ApplicationManager.getApplication().isDispatchThread()) return null;
-    EditorsSplitters splitters = getActiveSplittersSync();
-    return splitters == null ? null : splitters.getCurrentWindow();
+    if (!ApplicationManager.getApplication().isDispatchThread() || !ClientId.isCurrentlyUnderLocalId()) return null;
+    return getActiveSplittersSync().getCurrentWindow();
   }
 
   @Override
   public void setCurrentWindow(EditorWindow window) {
-    getActiveSplittersSync().setCurrentWindow(window, true);
+    if (ClientId.isCurrentlyUnderLocalId()) {
+      getActiveSplittersSync().setCurrentWindow(window, true);
+    }
   }
 
   public void closeFile(@NotNull VirtualFile file, @NotNull EditorWindow window, boolean transferFocus) {
@@ -704,39 +722,70 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
 
   public void closeFile(@NotNull VirtualFile file, boolean moveFocus, boolean closeAllCopies) {
     assertDispatchThread();
+    if (!closeAllCopies) {
+      if (ClientId.isCurrentlyUnderLocalId()) {
+        CommandProcessor.getInstance().executeCommand(myProject, () -> {
+          ourOpenFilesSetModificationCount.incrementAndGet();
+          runChange(splitters -> splitters.closeFile(file, moveFocus), getActiveSplittersSync());
+        }, "", null);
+      } else {
+        ClientFileEditorManager clientManager = getClientFileEditorManager();
+        if (clientManager != null) {
+          clientManager.closeFile(file, false);
+        }
+      }
+    }
+    else {
+      try (AccessToken ignored = ClientId.withClientId(ClientId.getLocalId())) {
+        CommandProcessor.getInstance().executeCommand(myProject, () -> {
+          ourOpenFilesSetModificationCount.incrementAndGet();
+          runChange(splitters -> splitters.closeFile(file, moveFocus), null);
+        }, "", null);
+      }
+      for (ClientFileEditorManager manager: getAllClientFileEditorManagers()) {
+        manager.closeFile(file, true);
+      }
+    }
+  }
 
-    CommandProcessor.getInstance().executeCommand(myProject, () -> {
-      ourOpenFilesSetModificationCount.incrementAndGet();
-      runChange(splitters -> splitters.closeFile(file, moveFocus), closeAllCopies ? null : getActiveSplittersSync());
-    }, "", null);
+  private List<ClientFileEditorManager> getAllClientFileEditorManagers() {
+    return myProject.getServices(ClientFileEditorManager.class, false);
+  }
+
+  @Override
+  public boolean isFileOpenWithRemotes(@NotNull VirtualFile file) {
+      if (isFileOpen(file)) {
+        return true;
+      }
+      for (ClientFileEditorManager m: getAllClientFileEditorManagers()) {
+        if (m.isFileOpen(file)) {
+          return true;
+        }
+      }
+      return false;
   }
 
   //-------------------------------------- Open File ----------------------------------------
 
   @Override
-  public @NotNull Pair<FileEditor[], FileEditorProvider[]> openFileWithProviders(@NotNull VirtualFile file,
+  public final @NotNull Pair<FileEditor[], FileEditorProvider[]> openFileWithProviders(@NotNull VirtualFile file,
                                                                                  boolean focusEditor,
                                                                                  boolean searchForSplitter) {
     FileEditorOpenOptions openOptions = new FileEditorOpenOptions()
       .withRequestFocus(focusEditor)
       .withReuseOpen(searchForSplitter);
-    return openFileWithProviders(file, openOptions);
+    return openFileWithProviders(file, null, openOptions);
   }
 
   @Override
-  public @NotNull Pair<FileEditor[], FileEditorProvider[]> openFileWithProviders(@NotNull VirtualFile file,
+  public final @NotNull Pair<FileEditor[], FileEditorProvider[]> openFileWithProviders(@NotNull VirtualFile file,
                                                                                  boolean focusEditor,
                                                                                  @NotNull EditorWindow window) {
     return openFileWithProviders(file, window, new FileEditorOpenOptions().withRequestFocus(focusEditor));
   }
 
-  private @NotNull Pair<FileEditor[], FileEditorProvider[]> openFileWithProviders(@NotNull VirtualFile file,
-                                                                                  @NotNull FileEditorOpenOptions options) {
-    return openFileWithProviders(file, null, options);
-  }
-
   @Override
-  public @NotNull Pair<FileEditor[], FileEditorProvider[]> openFileWithProviders(@NotNull VirtualFile file,
+  public final @NotNull Pair<FileEditor[], FileEditorProvider[]> openFileWithProviders(@NotNull VirtualFile file,
                                                                                  @Nullable EditorWindow window,
                                                                                  @NotNull FileEditorOpenOptions options) {
     if (!file.isValid()) {
@@ -768,10 +817,8 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
     return openFileImpl2(windowToOpenIn, file, options);
   }
 
-  @Nullable
-  private EditorWindow findWindowInAllSplitters(@NotNull VirtualFile file) {
-    EditorsSplitters activeSplitters = getActiveSplittersSync();
-    EditorWindow activeCurrentWindow = activeSplitters.getCurrentWindow();
+  private @Nullable EditorWindow findWindowInAllSplitters(@NotNull VirtualFile file) {
+    EditorWindow activeCurrentWindow = getActiveSplittersSync().getCurrentWindow();
     if (activeCurrentWindow != null && isFileOpenInWindow(file, activeCurrentWindow)) {
       return activeCurrentWindow;
     }
@@ -808,15 +855,14 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
            : splitters.getOrCreateCurrentWindow(file);
   }
 
-  public Pair<FileEditor[], FileEditorProvider[]> openFileInNewWindow(@NotNull VirtualFile file) {
+  public final Pair<FileEditor[], FileEditorProvider[]> openFileInNewWindow(@NotNull VirtualFile file) {
     if (forbidSplitFor(file)) {
       closeFile(file);
     }
     return ((DockManagerImpl)DockManager.getInstance(getProject())).createNewDockContainerFor(file, this);
   }
 
-  @Nullable
-  private Pair<FileEditor[], FileEditorProvider[]> openInRightSplit(@NotNull VirtualFile file) {
+  private @Nullable Pair<FileEditor[], FileEditorProvider[]> openInRightSplit(@NotNull VirtualFile file) {
     EditorsSplitters active = getSplitters();
     EditorWindow window = active.getCurrentWindow();
     if (window != null) {
@@ -831,16 +877,11 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
       if (split != null) {
         Ref<Pair<FileEditor[], FileEditorProvider[]>> ref = Ref.create();
         CommandProcessor.getInstance().executeCommand(myProject, () -> {
-          EditorWithProviderComposite[] editorsWithProvider = split.getEditors();
-          FileEditor[] editors = Arrays.stream(editorsWithProvider)
-            .map(el -> el.getEditors())
-            .flatMap(el -> Arrays.stream(el))
-            .toArray(FileEditor[]::new);
-
-          FileEditorProvider[] providers = Arrays.stream(editorsWithProvider)
-            .map(el -> el.getProviders())
-            .flatMap(el -> Arrays.stream(el))
-            .toArray(FileEditorProvider[]::new);
+          List<EditorComposite> composites = split.getAllComposites();
+          List<FileEditorWithProvider> editorsWithProviders = ContainerUtil.flatMap(composites, EditorComposite::getAllEditorsWithProviders);
+          FileEditor[] editors = ContainerUtil.map2Array(editorsWithProviders, FileEditor.class, FileEditorWithProvider::getFileEditor);
+          FileEditorProvider[] providers = ContainerUtil.map2Array(editorsWithProviders, FileEditorProvider.class,
+                                                                   FileEditorWithProvider::getProvider);
           ref.set(Pair.create(editors, providers));
         }, "", null);
 
@@ -850,8 +891,7 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
     return null;
   }
 
-  @NotNull
-  public static OpenMode getOpenMode(@NotNull AWTEvent event) {
+  public static @NotNull OpenMode getOpenMode(@NotNull AWTEvent event) {
     if (event instanceof MouseEvent) {
       boolean isMouseClick = event.getID() == MouseEvent.MOUSE_CLICKED ||
                   event.getID() == MouseEvent.MOUSE_PRESSED ||
@@ -881,7 +921,7 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
     return Boolean.TRUE.equals(file.getUserData(SplitAction.FORBID_TAB_SPLIT));
   }
 
-  public @NotNull Pair<FileEditor[], FileEditorProvider[]> openFileImpl2(@NotNull EditorWindow window,
+  public final @NotNull Pair<FileEditor[], FileEditorProvider[]> openFileImpl2(@NotNull EditorWindow window,
                                                                          @NotNull VirtualFile file,
                                                                          boolean focusEditor) {
     return openFileImpl2(window, file, new FileEditorOpenOptions().withRequestFocus(focusEditor));
@@ -906,11 +946,18 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
    *                passed file is valid.
    * @param entry   map between FileEditorProvider and FileEditorState. If this parameter
    */
-  @NotNull Pair<FileEditor[], FileEditorProvider[]> openFileImpl3(@NotNull EditorWindow window,
+  final @NotNull Pair<FileEditor[], FileEditorProvider[]> openFileImpl3(@NotNull EditorWindow window,
                                                                   @NotNull VirtualFile file,
                                                                   boolean focusEditor,
                                                                   @Nullable HistoryEntry entry) {
     return openFileImpl4(window, file, entry, new FileEditorOpenOptions().withRequestFocus(focusEditor));
+  }
+
+  protected final @Nullable ClientFileEditorManager getClientFileEditorManager() {
+    ClientId clientId = ClientId.getCurrent();
+    LOG.assertTrue(!ClientId.isLocal(clientId), "Trying to get ClientFileEditorManager for local ClientId");
+    ClientProjectSession session = ClientSessionsManager.getProjectSession(myProject, clientId);
+    return session == null ? null : session.getService(ClientFileEditorManager.class);
   }
 
   /**
@@ -923,23 +970,33 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
     assert ApplicationManager.getApplication().isDispatchThread() ||
            !ApplicationManager.getApplication().isReadAccessAllowed() : "must not attempt opening files under read action";
 
-    VirtualFile file = BackedVirtualFile.getOriginFileIfBacked(_file);
-    Ref<EditorWithProviderComposite> compositeRef = new Ref<>();
+    if (!ClientId.isCurrentlyUnderLocalId()) {
+      ClientFileEditorManager clientManager = getClientFileEditorManager();
+      if (clientManager == null) {
+        return Pair.createNonNull(FileEditor.EMPTY_ARRAY, FileEditorProvider.EMPTY_ARRAY);
+      }
+
+      List<FileEditorWithProvider> result = clientManager.openFile(_file, false);
+      FileEditor[] fileEditors = result.stream().map(FileEditorWithProvider::getFileEditor).toArray(FileEditor[]::new);
+      FileEditorProvider[] providers = result.stream().map(FileEditorWithProvider::getProvider).toArray(FileEditorProvider[]::new);
+      return Pair.createNonNull(fileEditors, providers);
+    }
+
+    VirtualFile file = getOriginalFile(_file);
+    Ref<EditorComposite> compositeRef = new Ref<>();
 
     if (!options.isReopeningOnStartup()) {
-      EdtInvocationManager.invokeAndWaitIfNeeded(() -> compositeRef.set(window.findFileComposite(file)));
+      EdtInvocationManager.invokeAndWaitIfNeeded(() -> compositeRef.set(window.getComposite(file)));
     }
 
     FileEditorProvider[] newProviders;
     AsyncFileEditorProvider.Builder[] builders;
     if (compositeRef.isNull()) {
+      if (!canOpenFile(file)) return EditorComposite.retrofit(null);
+
       // File is not opened yet. In this case we have to create editors
       // and select the created EditorComposite.
       newProviders = FileEditorProviderManager.getInstance().getProviders(myProject, file);
-      if (newProviders.length == 0) {
-        return Pair.createNonNull(FileEditor.EMPTY_ARRAY, EMPTY_PROVIDER_ARRAY);
-      }
-
       builders = new AsyncFileEditorProvider.Builder[newProviders.length];
       for (int i = 0; i < newProviders.length; i++) {
         try {
@@ -970,84 +1027,53 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
       if (myProject.isDisposed() || !file.isValid()) return;
 
       runBulkTabChange(window.getOwner(), splitters -> {
-        EditorWithProviderComposite composite = openFileImpl4Edt(window, file, entry, options, newProviders, builders);
+        EditorComposite composite = openFileImpl4Edt(window, file, entry, options, newProviders, builders);
         compositeRef.set(composite);
       });
     });
 
-    EditorWithProviderComposite composite = compositeRef.get();
-    return new Pair<>(composite == null ? FileEditor.EMPTY_ARRAY : composite.getEditors(),
-                      composite == null ? EMPTY_PROVIDER_ARRAY : composite.getProviders());
+    return EditorComposite.retrofit(compositeRef.get());
   }
 
-  private @Nullable EditorWithProviderComposite openFileImpl4Edt(@NotNull EditorWindow window,
-                                                                 @NotNull VirtualFile file,
-                                                                 @Nullable HistoryEntry entry,
-                                                                 @NotNull FileEditorOpenOptions options,
-                                                                 FileEditorProvider[] newProviders,
-                                                                 AsyncFileEditorProvider.Builder[] builders) {
+  protected final @Nullable EditorComposite openFileImpl4Edt(@NotNull EditorWindow window,
+                                                             @NotNull VirtualFile file,
+                                                             @Nullable HistoryEntry entry,
+                                                             @NotNull FileEditorOpenOptions options,
+                                                             FileEditorProvider @Nullable [] newProviders,
+                                                             AsyncFileEditorProvider.Builder @Nullable [] builders) {
     ((TransactionGuardImpl)TransactionGuard.getInstance()).assertWriteActionAllowed();
     LOG.assertTrue(file.isValid(), "Invalid file: " + file);
 
-    EditorWithProviderComposite composite = window.findFileComposite(file);
+    Project activeProject = ProjectUtil.getActiveProject();
+    if (activeProject != null && !activeProject.equals(myProject)) {
+      // allow focus switching only within a project
+      options = options.clone().withRequestFocus(false);
+    }
+
+    EditorComposite composite = window.getComposite(file);
     boolean newEditor = composite == null;
     if (newEditor) {
-      getProject().getMessageBus().syncPublisher(FileEditorManagerListener.Before.FILE_EDITOR_MANAGER).beforeFileOpened(this, file);
-
-      FileEditor[] newEditors = new FileEditor[newProviders.length];
-      for (int i = 0; i < newProviders.length; i++) {
-        try {
-          FileEditorProvider provider = newProviders[i];
-          FileEditor editor = builders[i] == null ? provider.createEditor(myProject, file) : builders[i].build();
-          LOG.assertTrue(editor.isValid(), "Invalid editor created by provider " +
-                                           (provider == null ? null : provider.getClass().getName()));
-          newEditors[i] = editor;
-          // Register PropertyChangeListener into editor
-          editor.addPropertyChangeListener(myEditorPropertyChangeListener);
-          editor.putUserData(DUMB_AWARE, DumbService.isDumbAware(provider));
-        }
-        catch (ProcessCanceledException e) {
-          throw e;
-        }
-        catch (Exception | AssertionError e) {
-          LOG.error(e);
-        }
-      }
-
-      // Now we have to create EditorComposite and insert it into the TabbedEditorComponent.
-      // After that we have to select opened editor.
-      composite = createComposite(file, newEditors, newProviders);
+      LOG.assertTrue(newProviders != null && builders != null);
+      composite = createComposite(file, newProviders, builders);
       if (composite == null) return null;
 
-      myOpenedEditors.add(composite);
+      getProject().getMessageBus().syncPublisher(FileEditorManagerListener.Before.FILE_EDITOR_MANAGER).beforeFileOpened(this, file);
+      myOpenedComposites.add(composite);
     }
 
-    FileEditor[] editors = composite.getEditors();
-    FileEditorProvider[] providers = composite.getProviders();
+    List<FileEditorWithProvider> editorsWithProviders = composite.getAllEditorsWithProviders();
 
-    window.setEditor(composite, options);
+    window.setComposite(composite, options);
 
-    for (int i = 0; i < editors.length; i++) {
-      restoreEditorState(file, providers[i], editors[i], entry, newEditor, options.isExactState());
+    for (FileEditorWithProvider editorWithProvider : editorsWithProviders) {
+      restoreEditorState(file, editorWithProvider, entry, newEditor, options.isExactState());
     }
-
     // Restore selected editor
-    FileEditorProvider selectedProvider;
-    if (entry == null) {
-      selectedProvider = ((FileEditorProviderManagerImpl)FileEditorProviderManager.getInstance())
-        .getSelectedFileEditorProvider(EditorHistoryManager.getInstance(myProject), file, providers);
-    }
-    else {
-      selectedProvider = entry.getSelectedProvider();
-    }
-    if (selectedProvider != null) {
-      for (int i = editors.length - 1; i >= 0; i--) {
-        FileEditorProvider provider = providers[i];
-        if (provider.equals(selectedProvider)) {
-          composite.setSelectedEditor(i);
-          break;
-        }
-      }
+    FileEditorProvider provider = entry != null ? entry.getSelectedProvider()
+                                                : FileEditorProviderManagerImpl.getInstanceImpl().getSelectedFileEditorProvider(composite);
+
+    if (provider != null) {
+      composite.setSelectedEditor(provider.getEditorTypeId());
     }
 
     // Notify editors about selection changes
@@ -1061,14 +1087,14 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
 
     // transfer focus into editor
     if (!ApplicationManager.getApplication().isUnitTestMode() && options.getRequestFocus()) {
-      EditorWithProviderComposite finalComposite = composite;
+      EditorComposite finalComposite = composite;
       Runnable focusRunnable = () -> {
-        if (splitters.getCurrentWindow() != window || window.getSelectedEditor() != finalComposite) {
+        if (splitters.getCurrentWindow() != window || window.getSelectedComposite() != finalComposite) {
           // While the editor was loading asynchronously, the user switched to another editor.
           // Don't steal focus.
           return;
         }
-        Window windowAncestor = SwingUtilities.getWindowAncestor(window.myPanel);
+        Window windowAncestor = SwingUtilities.getWindowAncestor(window.panel);
         if (windowAncestor != null &&
             windowAncestor.equals(KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusedWindow())) {
           JComponent component = finalComposite.getPreferredFocusedComponent();
@@ -1106,7 +1132,7 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
 
     if (newEditor) {
       getProject().getMessageBus().syncPublisher(FileEditorManagerListener.FILE_EDITOR_MANAGER)
-        .fileOpenedSync(this, file, Pair.pair(editors, providers));
+        .fileOpenedSync(this, file, editorsWithProviders);
 
       notifyPublisher(() -> {
         if (isFileOpen(file)) {
@@ -1119,34 +1145,58 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
     return composite;
   }
 
-  protected final @Nullable EditorWithProviderComposite createComposite(@NotNull VirtualFile file,
-                                                                        FileEditor @NotNull [] editors,
-                                                                        FileEditorProvider @NotNull [] providers) {
-    if (ArrayUtil.contains(null, editors) || ArrayUtil.contains(null, providers)) {
-      List<FileEditor> editorList = new ArrayList<>(editors.length);
-      List<FileEditorProvider> providerList = new ArrayList<>(providers.length);
-      for (int i = 0; i < editors.length; i++) {
-        FileEditor editor = editors[i];
+  protected @Nullable EditorComposite createComposite(@NotNull VirtualFile file,
+                                                      FileEditorProvider @NotNull [] providers,
+                                                      AsyncFileEditorProvider.Builder @NotNull [] builders) {
+    List<FileEditorWithProvider> editorsWithProviders = new ArrayList<>(providers.length);
+    for (int i = 0; i < providers.length; i++) {
+      try {
         FileEditorProvider provider = providers[i];
-        if (editor != null && provider != null) {
-          editorList.add(editor);
-          providerList.add(provider);
-        }
+        if (provider == null) continue;
+        FileEditor editor = builders[i] == null ? provider.createEditor(myProject, file) : builders[i].build();
+        LOG.assertTrue(editor.isValid(), "Invalid editor created by provider " + provider.getClass().getName());
+        editorsWithProviders.add(new FileEditorWithProvider(editor, provider));
       }
-      if (editorList.isEmpty()) return null;
-      editors = editorList.toArray(FileEditor.EMPTY_ARRAY);
-      providers = providerList.toArray(new FileEditorProvider[0]);
+      catch (ProcessCanceledException e) {
+        throw e;
+      }
+      catch (Exception | AssertionError e) {
+        LOG.error(e);
+      }
     }
-    return new EditorWithProviderComposite(file, editors, providers, this);
+
+    return createComposite(file, editorsWithProviders);
+  }
+
+  protected @Nullable EditorComposite createComposite(@NotNull VirtualFile file,
+                                                      @NotNull List<FileEditorWithProvider> editorsWithProviders) {
+    for (FileEditorWithProvider editorWithProvider : editorsWithProviders) {
+      FileEditor editor = editorWithProvider.getFileEditor();
+      editor.addPropertyChangeListener(myEditorPropertyChangeListener);
+      editor.putUserData(DUMB_AWARE, DumbService.isDumbAware(editorWithProvider.getProvider()));
+    }
+    return createCompositeInstance(file, editorsWithProviders);
+  }
+
+  @Contract("_, _ -> new")
+  protected @Nullable EditorComposite createCompositeInstance(@NotNull VirtualFile file,
+                                                              @NotNull List<FileEditorWithProvider> editorsWithProviders) {
+    if (!ClientId.isCurrentlyUnderLocalId()) {
+      ClientFileEditorManager clientManager = getClientFileEditorManager();
+      return clientManager == null ? null : clientManager.createComposite(file, editorsWithProviders);
+    }
+    // the only place this class in created, won't be needed when we get rid of EditorWithProviderComposite usages
+    //noinspection deprecation
+    return new EditorWithProviderComposite(file, editorsWithProviders, this);
   }
 
   private void restoreEditorState(@NotNull VirtualFile file,
-                                  @NotNull FileEditorProvider provider,
-                                  @NotNull FileEditor editor,
+                                  @NotNull FileEditorWithProvider editorWithProvider,
                                   HistoryEntry entry,
                                   boolean newEditor,
                                   boolean exactState) {
     FileEditorState state = null;
+    FileEditorProvider provider = editorWithProvider.getProvider();
     if (entry != null) {
       state = entry.getState(provider);
     }
@@ -1157,6 +1207,7 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
       state = EditorHistoryManager.getInstance(myProject).getState(file, provider);
     }
     if (state != null) {
+      FileEditor editor = editorWithProvider.getFileEditor();
       if (!isDumbAware(editor)) {
         FileEditorState finalState = state;
         DumbService.getInstance(getProject()).runWhenSmart(() -> editor.setState(finalState, exactState));
@@ -1185,49 +1236,33 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
 
   @Override
   public void setSelectedEditor(@NotNull VirtualFile file, @NotNull String fileEditorProviderId) {
-    ApplicationManager.getApplication().assertIsDispatchThread();
-    EditorWithProviderComposite composite = getCurrentEditorWithProviderComposite(file);
-    if (composite == null) {
-      List<EditorWithProviderComposite> composites = getEditorComposites(file);
-
-      if (composites.isEmpty()) return;
-      composite = composites.get(0);
-    }
-
-    FileEditorProvider[] editorProviders = composite.getProviders();
-    FileEditorProvider selectedProvider = composite.getSelectedWithProvider().getProvider();
-
-    for (int i = 0; i < editorProviders.length; i++) {
-      if (editorProviders[i].getEditorTypeId().equals(fileEditorProviderId) && !selectedProvider.equals(editorProviders[i])) {
-        composite.setSelectedEditor(i);
-        composite.getSelectedEditor().selectNotify();
+    if (!ClientId.isCurrentlyUnderLocalId()) {
+      ClientFileEditorManager clientManager = getClientFileEditorManager();
+      if(clientManager != null) {
+        clientManager.setSelectedEditor(file, fileEditorProviderId);
       }
+      return;
     }
+    EditorComposite composite = getComposite(file);
+    if (composite == null) return;
+
+    composite.setSelectedEditor(fileEditorProviderId);
+    // todo move to setSelectedEditor()?
+    composite.getSelectedEditor().selectNotify();
   }
 
-
   @Nullable
-  EditorWithProviderComposite newEditorComposite(@NotNull VirtualFile file) {
-    FileEditorProviderManager editorProviderManager = FileEditorProviderManager.getInstance();
-    FileEditorProvider[] providers = editorProviderManager.getProviders(myProject, file);
-    if (providers.length == 0) return null;
-    FileEditor[] editors = new FileEditor[providers.length];
-    for (int i = 0; i < providers.length; i++) {
-      FileEditorProvider provider = providers[i];
-      LOG.assertTrue(provider != null);
-      LOG.assertTrue(provider.accept(myProject, file));
-      FileEditor editor = provider.createEditor(myProject, file);
-      editors[i] = editor;
-      LOG.assertTrue(editor.isValid());
-      editor.addPropertyChangeListener(myEditorPropertyChangeListener);
-    }
+  EditorComposite newEditorComposite(@NotNull VirtualFile file) {
+    if (!canOpenFile(file)) return null;
 
-    EditorWithProviderComposite newComposite = new EditorWithProviderComposite(file, editors, providers, this);
+    FileEditorProvider[] providers = FileEditorProviderManager.getInstance().getProviders(myProject, file);
+    EditorComposite newComposite = createComposite(file, providers, new AsyncFileEditorProvider.Builder[providers.length]);
+    if (newComposite == null) return null;
+
     EditorHistoryManager editorHistoryManager = EditorHistoryManager.getInstance(myProject);
-    for (int i = 0; i < editors.length; i++) {
-      FileEditor editor = editors[i];
-
-      FileEditorProvider provider = providers[i];
+    for (FileEditorWithProvider editorWithProvider : newComposite.getAllEditorsWithProviders()) {
+      FileEditor editor = editorWithProvider.getFileEditor();
+      FileEditorProvider provider = editorWithProvider.getProvider();
 
       // Restore myEditor state
       FileEditorState state = editorHistoryManager.getState(file, provider);
@@ -1239,7 +1274,7 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
   }
 
   @Override
-  public @NotNull List<FileEditor> openFileEditor(@NotNull FileEditorNavigatable descriptor, boolean focusEditor) {
+  public final @NotNull List<FileEditor> openFileEditor(@NotNull FileEditorNavigatable descriptor, boolean focusEditor) {
     return openEditorImpl(descriptor, focusEditor).first;
   }
 
@@ -1270,7 +1305,7 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
         .withReuseOpen(!realDescriptor.isUseCurrentWindow())
         .withUsePreviewTab(realDescriptor.isUsePreviewTab())
         .withRequestFocus(focusEditor);
-      FileEditor[] editors = openFileWithProviders(file, openOptions).getFirst();
+      FileEditor[] editors = openFileWithProviders(file, null, openOptions).getFirst();
       ContainerUtil.addAll(result, editors);
 
       boolean navigated = false;
@@ -1311,18 +1346,9 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
   }
 
   private void setSelectedEditor(@NotNull FileEditor editor) {
-    EditorWithProviderComposite composite = getEditorComposite(editor);
+    EditorComposite composite = getComposite(editor);
     if (composite == null) return;
-
-    FileEditor[] editors = composite.getEditors();
-    for (int i = 0; i < editors.length; i++) {
-      FileEditor each = editors[i];
-      if (editor == each) {
-        composite.setSelectedEditor(i);
-        composite.getSelectedEditor().selectNotify();
-        break;
-      }
-    }
+    composite.setSelectedEditor(editor);
   }
 
   @Override
@@ -1331,39 +1357,57 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
   }
 
   @Override
-  public @Nullable Editor openTextEditor(@NotNull OpenFileDescriptor descriptor, boolean focusEditor) {
-    TextEditor textEditor = doOpenTextEditor(descriptor, focusEditor);
-    return textEditor == null ? null : textEditor.getEditor();
-  }
-
-  private @Nullable TextEditor doOpenTextEditor(@NotNull FileEditorNavigatable descriptor, boolean focusEditor) {
+  public final @Nullable Editor openTextEditor(@NotNull OpenFileDescriptor descriptor, boolean focusEditor) {
     Pair<List<FileEditor>, FileEditor> editorsWithSelected = openEditorImpl(descriptor, focusEditor);
     Collection<FileEditor> fileEditors = editorsWithSelected.first;
     FileEditor selectedEditor = editorsWithSelected.second;
 
     if (fileEditors.isEmpty()) return null;
-    else if (fileEditors.size() == 1) return ObjectUtils.tryCast(ContainerUtil.getFirstItem(fileEditors), TextEditor.class);
+    else if (fileEditors.size() == 1) {
+      TextEditor editor = ObjectUtils.tryCast(ContainerUtil.getFirstItem(fileEditors), TextEditor.class);
+      return editor != null ? editor.getEditor() : null;
+    }
 
     List<TextEditor> textEditors = ContainerUtil.mapNotNull(fileEditors, e -> ObjectUtils.tryCast(e, TextEditor.class));
     if (textEditors.isEmpty()) return null;
 
     TextEditor target = selectedEditor instanceof TextEditor ? (TextEditor)selectedEditor : textEditors.get(0);
     if (textEditors.size() > 1) {
-      EditorWithProviderComposite composite = getEditorComposite(target);
+      EditorComposite composite = getComposite(target);
       assert composite != null;
-      FileEditor[] editors = composite.getEditors();
-      FileEditorProvider[] providers = composite.getProviders();
+      List<FileEditorWithProvider> editorsWithProviders = composite.getAllEditorsWithProviders();
       String textProviderId = TextEditorProvider.getInstance().getEditorTypeId();
-      for (int i = 0; i < editors.length; i++) {
-        FileEditor editor = editors[i];
-        if (editor instanceof TextEditor && providers[i].getEditorTypeId().equals(textProviderId)) {
+      for (FileEditorWithProvider editorWithProvider : editorsWithProviders) {
+        FileEditor editor = editorWithProvider.getFileEditor();
+        if (editor instanceof TextEditor && editorWithProvider.getProvider().getEditorTypeId().equals(textProviderId)) {
           target = (TextEditor)editor;
           break;
         }
       }
     }
     setSelectedEditor(target);
-    return target;
+    return target.getEditor();
+  }
+
+  @Override
+  public FileEditor @NotNull [] getSelectedEditorWithRemotes() {
+    List<FileEditor> result = new ArrayList<>();
+    Collections.addAll(result, getSelectedEditors());
+    for (ClientFileEditorManager m : getAllClientFileEditorManagers()) {
+      result.addAll(m.getSelectedEditors());
+    }
+    return result.toArray(FileEditor.EMPTY_ARRAY);
+  }
+
+  @Override
+  public Editor @NotNull [] getSelectedTextEditorWithRemotes() {
+    List<Editor> result = new ArrayList<>();
+    for(FileEditor e: getSelectedEditorWithRemotes()) {
+      if (e instanceof TextEditor) {
+        result.add(((TextEditor)e).getEditor());
+      }
+    }
+    return result.toArray(Editor.EMPTY_ARRAY);
   }
 
   @Override
@@ -1372,13 +1416,22 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
   }
 
   public Editor getSelectedTextEditor(boolean lockfree) {
+    if (!ClientId.isCurrentlyUnderLocalId()) {
+      ClientFileEditorManager clientManager = getClientFileEditorManager();
+      if (clientManager == null) {
+        return null;
+      }
+      FileEditor selectedEditor = clientManager.getSelectedEditor();
+      return selectedEditor instanceof TextEditor ? ((TextEditor)selectedEditor).getEditor() : null;
+    }
+
     if (!lockfree) {
       assertDispatchThread();
     }
 
     EditorWindow currentWindow = lockfree ? getMainSplitters().getCurrentWindow() : getSplitters().getCurrentWindow();
     if (currentWindow != null) {
-      EditorWithProviderComposite selectedEditor = currentWindow.getSelectedEditor();
+      EditorComposite selectedEditor = currentWindow.getSelectedComposite();
       if (selectedEditor != null && selectedEditor.getSelectedEditor() instanceof TextEditor) {
         return ((TextEditor)selectedEditor.getSelectedEditor()).getEditor();
       }
@@ -1389,7 +1442,12 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
 
   @Override
   public boolean isFileOpen(@NotNull VirtualFile file) {
-    for (EditorComposite editor : myOpenedEditors) {
+    if (!ClientId.isCurrentlyUnderLocalId()) {
+      ClientFileEditorManager clientManager = getClientFileEditorManager();
+      if (clientManager == null) return false;
+      return clientManager.isFileOpen(file);
+    }
+    for (EditorComposite editor : myOpenedComposites) {
       if (editor.getFile().equals(file)) {
         return true;
       }
@@ -1399,20 +1457,45 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
 
   @Override
   public VirtualFile @NotNull [] getOpenFiles() {
+    if (!ClientId.isCurrentlyUnderLocalId()) {
+      ClientFileEditorManager clientManager = getClientFileEditorManager();
+      if (clientManager == null) {
+        return VirtualFile.EMPTY_ARRAY;
+      }
+      return clientManager.getAllFiles().toArray(VirtualFile.EMPTY_ARRAY);
+    }
     Set<VirtualFile> files = new LinkedHashSet<>();
-    for (EditorComposite composite : myOpenedEditors) {
+    for (EditorComposite composite : myOpenedComposites) {
       files.add(composite.getFile());
     }
     return VfsUtilCore.toVirtualFileArray(files);
   }
 
   @Override
+  public VirtualFile @NotNull [] getOpenFilesWithRemotes() {
+    List<VirtualFile> result = new ArrayList<>();
+    Collections.addAll(result, getOpenFiles());
+    for (ClientFileEditorManager m : getAllClientFileEditorManagers()) {
+      result.addAll(m.getAllFiles());
+    }
+    return result.toArray(VirtualFile.EMPTY_ARRAY);
+  }
+
+  @Override
   public boolean hasOpenFiles() {
-    return !myOpenedEditors.isEmpty();
+    return !myOpenedComposites.isEmpty();
   }
 
   @Override
   public VirtualFile @NotNull [] getSelectedFiles() {
+    if (!ClientId.isCurrentlyUnderLocalId()) {
+      ClientFileEditorManager clientManager = getClientFileEditorManager();
+      if (clientManager == null) {
+        return VirtualFile.EMPTY_ARRAY;
+      }
+      return clientManager.getSelectedFiles().toArray(VirtualFile.EMPTY_ARRAY);
+    }
+
     Set<VirtualFile> selectedFiles = new LinkedHashSet<>();
     EditorsSplitters activeSplitters = getSplitters();
     ContainerUtil.addAll(selectedFiles, activeSplitters.getSelectedFiles());
@@ -1426,6 +1509,11 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
 
   @Override
   public FileEditor @NotNull [] getSelectedEditors() {
+    if (!ClientId.isCurrentlyUnderLocalId()) {
+      ClientFileEditorManager clientManager = getClientFileEditorManager();
+      return clientManager == null ? FileEditor.EMPTY_ARRAY : clientManager.getSelectedEditors().toArray(FileEditor.EMPTY_ARRAY);
+    }
+
     Set<FileEditor> selectedEditors = new SmartHashSet<>();
     for (EditorsSplitters splitters : getAllSplitters()) {
       splitters.addSelectedEditorsTo(selectedEditors);
@@ -1435,16 +1523,19 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
 
   @Override
   public @NotNull EditorsSplitters getSplitters() {
-    EditorsSplitters active = null;
-    if (ApplicationManager.getApplication().isDispatchThread()) active = getActiveSplittersSync();
-    return active == null ? getMainSplitters() : active;
+    return ApplicationManager.getApplication().isDispatchThread() ? getActiveSplittersSync() : getMainSplitters();
   }
 
   @Override
   public @Nullable FileEditor getSelectedEditor() {
+    if (!ClientId.isCurrentlyUnderLocalId()) {
+      ClientFileEditorManager clientManager = getClientFileEditorManager();
+      return clientManager == null ? null : clientManager.getSelectedEditor();
+    }
+
     EditorWindow window = getSplitters().getCurrentWindow();
     if (window != null) {
-      EditorComposite selected = window.getSelectedEditor();
+      EditorComposite selected = window.getSelectedComposite();
       if (selected != null) return selected.getSelectedEditor();
     }
     return super.getSelectedEditor();
@@ -1460,74 +1551,73 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
   @Override
   public @Nullable FileEditorWithProvider getSelectedEditorWithProvider(@NotNull VirtualFile file) {
     ApplicationManager.getApplication().assertIsDispatchThread();
-    if (file instanceof VirtualFileWindow) file = ((VirtualFileWindow)file).getDelegate();
-    file = BackedVirtualFile.getOriginFileIfBacked(file);
-    EditorWithProviderComposite composite = getCurrentEditorWithProviderComposite(file);
-    if (composite != null) {
-      return composite.getSelectedWithProvider();
-    }
-
-    List<EditorWithProviderComposite> composites = getEditorComposites(file);
-    return composites.isEmpty() ? null : composites.get(0).getSelectedWithProvider();
+    EditorComposite composite = getComposite(file);
+    return composite == null ? null : composite.getSelectedWithProvider();
   }
 
   @Override
   public @NotNull Pair<FileEditor[], FileEditorProvider[]> getEditorsWithProviders(@NotNull VirtualFile file) {
     ApplicationManager.getApplication().assertIsDispatchThread();
-    EditorWithProviderComposite composite = getCurrentEditorWithProviderComposite(file);
-    if (composite != null) {
-      return new Pair<>(composite.getEditors(), composite.getProviders());
-    }
-
-    List<EditorWithProviderComposite> composites = getEditorComposites(file);
-    if (!composites.isEmpty()) {
-      return new Pair<>(composites.get(0).getEditors(), composites.get(0).getProviders());
-    }
-    return new Pair<>(FileEditor.EMPTY_ARRAY, EMPTY_PROVIDER_ARRAY);
+    EditorComposite composite = getComposite(file);
+    return EditorComposite.retrofit(composite);
   }
 
   @Override
   public FileEditor @NotNull [] getEditors(@NotNull VirtualFile file) {
     ApplicationManager.getApplication().assertIsDispatchThread();
-    if (file instanceof VirtualFileWindow) {
-      file = ((VirtualFileWindow)file).getDelegate();
-    }
-    file = BackedVirtualFile.getOriginFileIfBacked(file);
-
-    EditorWithProviderComposite composite = getCurrentEditorWithProviderComposite(file);
-    if (composite != null) {
-      return composite.getEditors();
-    }
-
-    List<EditorWithProviderComposite> composites = getEditorComposites(file);
-    if (!composites.isEmpty()) {
-      return composites.get(0).getEditors();
-    }
-    return FileEditor.EMPTY_ARRAY;
+    return getEditorsWithProviders(file).getFirst();
   }
 
   @Override
   public FileEditor @NotNull [] getAllEditors(@NotNull VirtualFile file) {
     List<FileEditor> result = new ArrayList<>();
-    myOpenedEditors.forEach(composite -> {
-      if (composite.getFile().equals(file)) ContainerUtil.addAll(result, composite.myEditors);
-    });
+    // reuse getAllComposites(file)? Are there cases some composites are not accessible via splitters?
+    for (EditorComposite composite : myOpenedComposites) {
+      if (composite.getFile().equals(file)) {
+        result.addAll(composite.getAllEditors());
+      }
+    }
+    for (ClientFileEditorManager clientManager : getAllClientFileEditorManagers()) {
+      result.addAll(clientManager.getEditors(file));
+    }
+
     return result.toArray(FileEditor.EMPTY_ARRAY);
   }
 
-  private @Nullable EditorWithProviderComposite getCurrentEditorWithProviderComposite(@NotNull VirtualFile virtualFile) {
+  public @Nullable EditorComposite getComposite(@NotNull VirtualFile file) {
+    ApplicationManager.getApplication().assertIsDispatchThread();
+    if (!ClientId.isCurrentlyUnderLocalId()) {
+      ClientFileEditorManager clientManager = getClientFileEditorManager();
+      return clientManager == null ? null : clientManager.getComposite(file);
+    }
+    VirtualFile originalFile = getOriginalFile(file);
+
     EditorWindow editorWindow = getSplitters().getCurrentWindow();
     if (editorWindow != null) {
-      return editorWindow.findFileComposite(virtualFile);
+      EditorComposite composite = editorWindow.getComposite(file);
+      if (composite != null) {
+        return composite;
+      }
     }
+    for (EditorsSplitters each : getAllSplitters()) {
+      EditorComposite composite = ContainerUtil.find(each.getAllComposites(originalFile), it -> it.getFile().equals(originalFile));
+      if (composite != null) {
+        return composite;
+      }
+    }
+
     return null;
   }
 
-  private @NotNull List<EditorWithProviderComposite> getEditorComposites(@NotNull VirtualFile file) {
-    List<EditorWithProviderComposite> result = new ArrayList<>();
+  public @NotNull List<EditorComposite> getAllComposites(@NotNull VirtualFile file) {
+    if (!ClientId.isCurrentlyUnderLocalId()) {
+      ClientFileEditorManager clientManager = getClientFileEditorManager();
+      return clientManager == null ? new ArrayList<>() : clientManager.getAllComposites(file);
+    }
+    List<EditorComposite> result = new ArrayList<>();
     Set<EditorsSplitters> all = getAllSplitters();
     for (EditorsSplitters each : all) {
-      result.addAll(each.findEditorComposites(file));
+      result.addAll(each.getAllComposites(file));
     }
     return result;
   }
@@ -1535,21 +1625,25 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
   @Override
   public FileEditor @NotNull [] getAllEditors() {
     List<FileEditor> result = new ArrayList<>();
-    myOpenedEditors.forEach(composite -> ContainerUtil.addAll(result, composite.myEditors));
+    for (EditorComposite composite : myOpenedComposites) {
+      result.addAll(composite.getAllEditors());
+    }
+    for (ClientFileEditorManager clientManager : getAllClientFileEditorManagers()) {
+      result.addAll(clientManager.getAllEditors());
+    }
     return result.toArray(FileEditor.EMPTY_ARRAY);
   }
 
-
   public @NotNull List<JComponent> getTopComponents(@NotNull FileEditor editor) {
     ApplicationManager.getApplication().assertIsDispatchThread();
-    EditorComposite composite = getEditorComposite(editor);
-    return composite != null ? composite.getTopComponents(editor) : Collections.emptyList();
+    EditorComposite composite = getComposite(editor);
+    return composite == null ? Collections.emptyList() : composite.getTopComponents(editor);
   }
 
   @Override
   public void addTopComponent(@NotNull FileEditor editor, @NotNull JComponent component) {
     ApplicationManager.getApplication().assertIsDispatchThread();
-    EditorComposite composite = getEditorComposite(editor);
+    EditorComposite composite = getComposite(editor);
     if (composite != null) {
       composite.addTopComponent(editor, component);
     }
@@ -1558,7 +1652,7 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
   @Override
   public void removeTopComponent(@NotNull FileEditor editor, @NotNull JComponent component) {
     ApplicationManager.getApplication().assertIsDispatchThread();
-    EditorComposite composite = getEditorComposite(editor);
+    EditorComposite composite = getComposite(editor);
     if (composite != null) {
       composite.removeTopComponent(editor, component);
     }
@@ -1567,7 +1661,7 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
   @Override
   public void addBottomComponent(@NotNull FileEditor editor, @NotNull JComponent component) {
     ApplicationManager.getApplication().assertIsDispatchThread();
-    EditorComposite composite = getEditorComposite(editor);
+    EditorComposite composite = getComposite(editor);
     if (composite != null) {
       composite.addBottomComponent(editor, component);
     }
@@ -1576,7 +1670,7 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
   @Override
   public void removeBottomComponent(@NotNull FileEditor editor, @NotNull JComponent component) {
     ApplicationManager.getApplication().assertIsDispatchThread();
-    EditorComposite composite = getEditorComposite(editor);
+    EditorComposite composite = getComposite(editor);
     if (composite != null) {
       composite.removeBottomComponent(editor, component);
     }
@@ -1648,19 +1742,16 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
     getMainSplitters().readExternal(state);
   }
 
-  protected  @Nullable EditorWithProviderComposite getEditorComposite(@NotNull FileEditor editor) {
+  public @Nullable EditorComposite getComposite(@NotNull FileEditor editor) {
+    if (!ClientId.isCurrentlyUnderLocalId()) {
+      ClientFileEditorManager clientManager = getClientFileEditorManager();
+      return clientManager == null ? null : clientManager.getComposite(editor);
+    }
     for (EditorsSplitters splitters : getAllSplitters()) {
-      List<EditorWithProviderComposite> editorsComposites = splitters.getEditorComposites();
+      List<EditorComposite> editorsComposites = splitters.getAllComposites();
       for (int i = editorsComposites.size() - 1; i >= 0; i--) {
-        EditorWithProviderComposite composite = editorsComposites.get(i);
-        FileEditor[] editors = composite.getEditors();
-        for (int j = editors.length - 1; j >= 0; j--) {
-          FileEditor _editor = editors[j];
-          LOG.assertTrue(_editor != null);
-          if (editor.equals(_editor)) {
-            return composite;
-          }
-        }
+        EditorComposite composite = editorsComposites.get(i);
+        if (composite.getAllEditors().contains(editor)) return composite;
       }
     }
     return null;
@@ -1674,45 +1765,34 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
     ApplicationManager.getApplication().assertReadAccessAllowed();
   }
 
+  @ApiStatus.Internal
   public void fireSelectionChanged(@Nullable EditorComposite newSelectedComposite) {
-    Trinity<VirtualFile, FileEditor, FileEditorProvider> oldData = extract(SoftReference.dereference(myLastSelectedComposite));
-    Trinity<VirtualFile, FileEditor, FileEditorProvider> newData = extract(newSelectedComposite);
+    @Nullable EditorComposite composite = SoftReference.dereference(myLastSelectedComposite);
+    FileEditorWithProvider oldEditorWithProvider = composite == null ? null : composite.getSelectedWithProvider();
+    FileEditorWithProvider newEditorWithProvider = newSelectedComposite == null ? null : newSelectedComposite.getSelectedWithProvider();
     myLastSelectedComposite = newSelectedComposite == null ? null : new WeakReference<>(newSelectedComposite);
-    boolean filesEqual = Objects.equals(oldData.first, newData.first);
-    boolean editorsEqual = Objects.equals(oldData.second, newData.second);
-    if (!filesEqual || !editorsEqual) {
-      FileEditorManagerEvent event =
-        new FileEditorManagerEvent(this, oldData.first, oldData.second, oldData.third, newData.first, newData.second, newData.third);
+    if (!Objects.equals(oldEditorWithProvider, newEditorWithProvider)) {
+      FileEditorManagerEvent event = new FileEditorManagerEvent(this, oldEditorWithProvider, newEditorWithProvider);
       FileEditorManagerListener publisher = getProject().getMessageBus().syncPublisher(FileEditorManagerListener.FILE_EDITOR_MANAGER);
 
-      if (newData.first != null) {
-        JComponent component = newData.second.getComponent();
+      if (newEditorWithProvider != null) {
+        JComponent component =  newEditorWithProvider.getFileEditor().getComponent();
         EditorWindowHolder holder =
           ComponentUtil.getParentOfType((Class<? extends EditorWindowHolder>)EditorWindowHolder.class, (Component)component);
-        if (holder != null) {
-          addSelectionRecord(newData.first, holder.getEditorWindow());
+        VirtualFile file = newEditorWithProvider.getFileEditor().getFile();
+        if (holder != null && file != null) {
+          addSelectionRecord(file, holder.getEditorWindow());
         }
       }
       notifyPublisher(() -> publisher.selectionChanged(event));
     }
   }
 
-  private static @NotNull Trinity<VirtualFile, FileEditor, FileEditorProvider> extract(@Nullable EditorComposite composite) {
-    VirtualFile file;
-    FileEditor editor;
-    FileEditorProvider provider;
-    if (composite == null) {
-      file = null;
-      editor = null;
-      provider = null;
+  protected static @NotNull VirtualFile getOriginalFile(@NotNull VirtualFile file) {
+    if (file instanceof VirtualFileWindow) {
+      file = ((VirtualFileWindow)file).getDelegate();
     }
-    else {
-      file = composite.getFile();
-      FileEditorWithProvider pair = composite.getSelectedWithProvider();
-      editor = pair.getFileEditor();
-      provider = pair.getProvider();
-    }
-    return new Trinity<>(file, editor, provider);
+    return BackedVirtualFile.getOriginFileIfBacked(file);
   }
 
   @Override
@@ -1725,40 +1805,47 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
     return status != FileStatus.UNKNOWN && status != FileStatus.NOT_CHANGED;
   }
 
-  void disposeComposite(@NotNull EditorWithProviderComposite editor) {
-    myOpenedEditors.remove(editor);
+  protected void disposeComposite(@NotNull EditorComposite composite) {
+    if (!ClientId.isCurrentlyUnderLocalId()) {
+      ClientFileEditorManager clientManager = getClientFileEditorManager();
+      if (clientManager != null) {
+        clientManager.removeComposite(composite);
+      }
+      return;
+    }
+
+    myOpenedComposites.remove(composite);
 
     if (getAllEditors().length == 0) {
       setCurrentWindow(null);
     }
 
-    if (editor.equals(getLastSelected())) {
-      editor.getSelectedEditor().deselectNotify();
+    if (composite.equals(getLastSelected())) {
+      composite.getSelectedEditor().deselectNotify();
       getSplitters().setCurrentWindow(null, false);
     }
 
-    FileEditor[] editors = editor.getEditors();
-    FileEditorProvider[] providers = editor.getProviders();
+    List<FileEditorWithProvider> editorsWithProviders = composite.getAllEditorsWithProviders();
 
-    FileEditor selectedEditor = editor.getSelectedEditor();
-    for (int i = editors.length - 1; i >= 0; i--) {
-      FileEditor editor1 = editors[i];
-      FileEditorProvider provider = providers[i];
+    FileEditor selectedEditor = composite.getSelectedEditor();
+    for (FileEditorWithProvider editorWithProvider : ContainerUtil.reverse(editorsWithProviders)) {
+      FileEditor editor = editorWithProvider.getFileEditor();
+      FileEditorProvider provider = editorWithProvider.getProvider();
       // we already notified the myEditor (when fire event)
-      if (selectedEditor.equals(editor1)) {
-        editor1.deselectNotify();
+      if (selectedEditor.equals(editor)) {
+        editor.deselectNotify();
       }
-      editor1.removePropertyChangeListener(myEditorPropertyChangeListener);
-      provider.disposeEditor(editor1);
+      editor.removePropertyChangeListener(myEditorPropertyChangeListener);
+      provider.disposeEditor(editor);
     }
 
-    Disposer.dispose(editor);
+    Disposer.dispose(composite);
   }
 
   private @Nullable EditorComposite getLastSelected() {
     EditorWindow currentWindow = getActiveSplittersSync().getCurrentWindow();
     if (currentWindow != null) {
-      return currentWindow.getSelectedEditor();
+      return currentWindow.getSelectedComposite();
     }
     return null;
   }
@@ -1785,12 +1872,12 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
       change.run(splitters);
     }
     else {
-      splitters.myInsideChange++;
+      splitters.insideChange++;
       try {
         change.run(splitters);
       }
       finally {
-        splitters.myInsideChange--;
+        splitters.insideChange--;
 
         if (!splitters.isInsideChange()) {
           splitters.validate();
@@ -1831,7 +1918,7 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
       assertDispatchThread();
 
       VirtualFile file = event.getFile();
-      VirtualFile[] openFiles = getOpenFiles();
+      VirtualFile[] openFiles = getOpenFilesWithRemotes();
       for (int i = openFiles.length - 1; i >= 0; i--) {
         if (VfsUtilCore.isAncestor(file, openFiles[i], false)) {
           closeFile(openFiles[i],true, true);
@@ -1886,7 +1973,7 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
       String propertyName = e.getPropertyName();
       if (FileEditor.PROP_MODIFIED.equals(propertyName)) {
         FileEditor editor = (FileEditor)e.getSource();
-        EditorComposite composite = getEditorComposite(editor);
+        EditorComposite composite = getComposite(editor);
         if (composite != null) {
           updateFileIcon(composite.getFile());
         }
@@ -1896,7 +1983,7 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
         if (!valid) {
           FileEditor editor = (FileEditor)e.getSource();
           LOG.assertTrue(editor != null);
-          EditorComposite composite = getEditorComposite(editor);
+          EditorComposite composite = getComposite(editor);
           if (composite != null) {
             closeFile(composite.getFile());
           }
@@ -1966,10 +2053,11 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
     }
 
     private void changeHappened() {
+      if (LightEdit.owns(myProject)) return;
       AppUIExecutor
         .onUiThread(ModalityState.any())
         .expireWith(myProject)
-        .submit(() -> StreamEx.of(getWindows()).flatArray(EditorWindow::getEditors).toList())
+        .submit(() -> StreamEx.of(getWindows()).toFlatList(EditorWindow::getAllComposites))
         .onSuccess(allEditors -> ReadAction
           .nonBlocking(() -> calcEditorReplacements(allEditors))
           .inSmartMode(myProject)
@@ -1978,12 +2066,12 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
           .submit(AppExecutorUtil.getAppExecutorService()));
     }
 
-    private Map<EditorWithProviderComposite, Pair<VirtualFile, Integer>> calcEditorReplacements(List<EditorWithProviderComposite> allEditors) {
+    private Map<EditorComposite, Pair<VirtualFile, Integer>> calcEditorReplacements(List<EditorComposite> composites) {
       List<EditorFileSwapper> swappers = EditorFileSwapper.EP_NAME.getExtensionList();
-      return StreamEx.of(allEditors).mapToEntry(editor -> {
-        if (editor.getFile().isValid()) {
+      return StreamEx.of(composites).mapToEntry(composite -> {
+        if (composite.getFile().isValid()) {
           for (EditorFileSwapper each : swappers) {
-            Pair<VirtualFile, Integer> fileAndOffset = each.getFileToSwapTo(myProject, editor);
+            Pair<VirtualFile, Integer> fileAndOffset = each.getFileToSwapTo(myProject, composite);
             if (fileAndOffset != null) return fileAndOffset;
           }
         }
@@ -1991,18 +2079,18 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
       }).nonNullValues().toMap();
     }
 
-    private void replaceEditors(Map<EditorWithProviderComposite, Pair<VirtualFile, Integer>> replacements) {
+    private void replaceEditors(Map<EditorComposite, Pair<VirtualFile, Integer>> replacements) {
       if (replacements.isEmpty()) return;
 
       for (EditorWindow eachWindow : getWindows()) {
-        EditorWithProviderComposite selected = eachWindow.getSelectedEditor();
-        EditorWithProviderComposite[] editors = eachWindow.getEditors();
-        for (int i = 0; i < editors.length; i++) {
-          EditorWithProviderComposite editor = editors[i];
-          VirtualFile file = editor.getFile();
+        EditorComposite selected = eachWindow.getSelectedComposite();
+        List<EditorComposite> composites = eachWindow.getAllComposites();
+        for (int i = 0; i < composites.size(); i++) {
+          EditorComposite composite = composites.get(i);
+          VirtualFile file = composite.getFile();
           if (!file.isValid()) continue;
 
-          Pair<VirtualFile, Integer> newFilePair = replacements.get(editor);
+          Pair<VirtualFile, Integer> newFilePair = replacements.get(composite);
           if (newFilePair == null) continue;
 
           VirtualFile newFile = newFilePair.first;
@@ -2013,7 +2101,7 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
 
           FileEditorOpenOptions openOptions = new FileEditorOpenOptions()
             .withIndex(i)
-            .withRequestFocus(editor == selected);
+            .withRequestFocus(composite == selected);
           Pair<FileEditor[], FileEditorProvider[]> pair = openFileImpl2(eachWindow, newFile, openOptions);
 
           if (newFilePair.second != null) {
@@ -2050,18 +2138,12 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
         each.setTabsPlacement(uiSettings.getEditorTabPlacement());
         each.trimToSize();
 
-        if (JBTabsImpl.NEW_TABS) {
-          TabsLayoutInfo tabsLayoutInfo = TabsLayoutSettingsManager.getInstance().getSelectedTabsLayoutInfo();
-          each.updateTabsLayout(tabsLayoutInfo);
+        // Tab layout policy
+        if (uiSettings.getScrollTabLayoutInEditor()) {
+          each.setTabLayoutPolicy(JTabbedPane.SCROLL_TAB_LAYOUT);
         }
         else {
-          // Tab layout policy
-          if (uiSettings.getScrollTabLayoutInEditor()) {
-            each.setTabLayoutPolicy(JTabbedPane.SCROLL_TAB_LAYOUT);
-          }
-          else {
-            each.setTabLayoutPolicy(JTabbedPane.WRAP_TAB_LAYOUT);
-          }
+          each.setTabLayoutPolicy(JTabbedPane.WRAP_TAB_LAYOUT);
         }
       }
 
@@ -2085,7 +2167,7 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
 
     CommandProcessor.getInstance().executeCommand(myProject, () -> {
       ourOpenFilesSetModificationCount.incrementAndGet();
-      runBulkTabChange(getSplitters(), splitters -> splitters.closeAllFiles());
+      runBulkTabChange(getSplitters(), EditorsSplitters::closeAllFiles);
     }, "", null);
   }
 
@@ -2095,7 +2177,7 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
   }
 
   void queueUpdateFile(@NotNull VirtualFile file) {
-    myQueue.queue(new Update(file) {
+    queue.queue(new Update(file) {
       @Override
       public void run() {
         if (isFileOpen(file)) {
@@ -2104,7 +2186,6 @@ public class FileEditorManagerImpl extends FileEditorManagerEx implements Persis
           updateFileBackgroundColor(file);
           resetPreviewFlag(file);
         }
-
       }
     });
   }
