@@ -1,19 +1,19 @@
-// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.ide.plugins;
 
-import com.intellij.idea.Bombed;
 import com.intellij.openapi.extensions.PluginId;
 import com.intellij.openapi.util.BuildNumber;
+import com.intellij.openapi.util.Ref;
 import com.intellij.openapi.util.io.IoTestUtil;
 import com.intellij.openapi.util.text.HtmlChunk;
 import com.intellij.openapi.util.text.StringUtil;
-import com.intellij.platform.util.plugins.DataLoader;
-import com.intellij.platform.util.plugins.LocalFsDataLoader;
+import com.intellij.openapi.util.text.Strings;
 import com.intellij.testFramework.PlatformTestUtil;
 import com.intellij.testFramework.UsefulTestCase;
 import com.intellij.testFramework.rules.TempDirectory;
-import com.intellij.util.XmlDomReader;
-import com.intellij.util.XmlElement;
+import com.intellij.util.TriConsumer;
+import com.intellij.util.xml.dom.XmlDomReader;
+import com.intellij.util.xml.dom.XmlElement;
 import org.easymock.EasyMock;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -26,17 +26,16 @@ import javax.xml.stream.XMLStreamWriter;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Calendar;
-import java.util.Collections;
-import java.util.Map;
+import java.util.*;
 import java.util.function.Function;
 
+import static com.intellij.ide.plugins.DynamicPluginsTestUtil.createPluginLoadingResult;
 import static com.intellij.ide.plugins.DynamicPluginsTestUtil.loadDescriptorInTest;
 import static com.intellij.openapi.util.io.IoTestUtil.assumeSymLinkCreationIsSupported;
 import static com.intellij.testFramework.assertions.Assertions.assertThat;
-import static java.util.Objects.requireNonNull;
 import static org.easymock.EasyMock.expect;
 import static org.easymock.EasyMock.replay;
 import static org.junit.Assert.*;
@@ -87,6 +86,25 @@ public class PluginManagerTest {
   }
 
   @Test
+  public void ignoredCompatibility() {
+    TriConsumer<String, String, String> checkCompatibility = (String ideVersion, String sinceBuild, String untilBuild) -> {
+      boolean ignoreCompatibility = PluginManagerCore.isIgnoreCompatibility();
+      try {
+        assertIncompatible(ideVersion, sinceBuild, untilBuild);
+
+        PluginManagerCore.setIgnoreCompatibility(true);
+        assertCompatible(ideVersion, sinceBuild, untilBuild);
+      }
+      finally {
+        PluginManagerCore.setIgnoreCompatibility(ignoreCompatibility);
+      }
+    };
+
+    checkCompatibility.accept("42", "43", null);
+    checkCompatibility.accept("43", null, "42");
+  }
+
+  @Test
   public void compatibilityBranchBasedStar() {
     assertCompatible("145.10", "144.*", null);
     assertIncompatible("145.10", "145.*", null);
@@ -129,9 +147,32 @@ public class PluginManagerTest {
   }
 
   @Test
-  @Bombed(user = "Vladimir Krivosheev / Andrew Kozlow", day = 1, month = Calendar.SEPTEMBER, year = 2021)
   public void testSimplePluginSort() throws Exception {
      doPluginSortTest("simplePluginSort", false);
+  }
+
+  /**
+
+   Actual result:
+
+   HTTP Client (main)
+   Endpoints (main)
+   HTTP Client (intellij.restClient.microservicesUI, depends on Endpoints)
+
+   Expected:
+
+   Endpoints (main)
+   HTTP Client (main)
+   HTTP Client (intellij.restClient.microservicesUI, depends on Endpoints)
+
+   But graph is correct - HTTP Client (main) it is node that doesn't depend on Endpoints (main),
+   so, no reason for DFSTBuilder to put it after.
+
+   See CachingSemiGraph.getSortedPlugins for solution
+   */
+  @Test
+  public void moduleSort() throws Exception {
+     doPluginSortTest("moduleSort", true);
   }
 
   @Test
@@ -142,41 +183,25 @@ public class PluginManagerTest {
   @Test
   public void testModulePluginIdContract() {
     Path pluginsPath = Path.of(PlatformTestUtil.getPlatformTestDataPath(), "plugins", "withModules");
-    IdeaPluginDescriptorImpl descriptorBundled = loadDescriptorInTest(pluginsPath, Collections.emptySet(), true);
-    Map<PluginId, IdeaPluginDescriptorImpl> idMap = PluginManagerCore.buildPluginIdMap(Collections.singletonList(descriptorBundled));
+    IdeaPluginDescriptorImpl descriptorBundled = loadDescriptorInTest(pluginsPath, true);
+    PluginSet pluginSet = new PluginSetBuilder(Set.of(descriptorBundled))
+      .createPluginSetWithEnabledModulesMap();
+
     PluginId moduleId = PluginId.getId("foo.bar");
     PluginId corePlugin = PluginId.getId("my.plugin");
-    assertEquals(corePlugin, idMap.get(moduleId).getPluginId());
+    assertThat(pluginSet.findEnabledPlugin(moduleId).getPluginId()).isEqualTo(corePlugin);
   }
 
   @Test
   public void testIdentifyPreInstalledPlugins() {
     Path pluginsPath = Path.of(PlatformTestUtil.getPlatformTestDataPath(), "plugins", "updatedBundled");
-    IdeaPluginDescriptorImpl descriptorBundled = loadDescriptorInTest(pluginsPath.resolve("bundled"), Collections.emptySet(), true);
-    IdeaPluginDescriptorImpl descriptorInstalled = loadDescriptorInTest(pluginsPath.resolve("updated"), Collections.emptySet(), false);
-    assertEquals(descriptorBundled.getPluginId(), descriptorInstalled.getPluginId());
-    PluginLoadingResult loadingResult = createPluginLoadingResult(false);
-    loadingResult.add(descriptorBundled, false);
-    loadingResult.add(descriptorInstalled, false);
-    assertPluginPreInstalled(loadingResult, descriptorInstalled.getPluginId());
-  }
+    IdeaPluginDescriptorImpl bundled = loadDescriptorInTest(pluginsPath.resolve("bundled"), true);
+    IdeaPluginDescriptorImpl updated = loadDescriptorInTest(pluginsPath.resolve("updated"));
+    PluginId expectedPluginId = updated.getPluginId();
+    assertEquals(expectedPluginId, bundled.getPluginId());
 
-  private static @NotNull PluginLoadingResult createPluginLoadingResult(boolean checkModuleDependencies) {
-    BuildNumber buildNumber = BuildNumber.fromString("2042.42");
-    return new PluginLoadingResult(Collections.emptyMap(), () -> buildNumber, checkModuleDependencies);
-  }
-
-  @Test
-  public void testIdentifyPreInstalledPluginsInReverseOrder() {
-    Path pluginsPath = Path.of(PlatformTestUtil.getPlatformTestDataPath(), "plugins", "updatedBundled");
-    IdeaPluginDescriptorImpl descriptorBundled = loadDescriptorInTest(pluginsPath.resolve("bundled"), Collections.emptySet(), true);
-    IdeaPluginDescriptorImpl descriptorInstalled = loadDescriptorInTest(pluginsPath.resolve("updated"), Collections.emptySet(), false);
-    assertEquals(descriptorBundled.getPluginId(), descriptorInstalled.getPluginId());
-
-    PluginLoadingResult resultInReverseOrder = createPluginLoadingResult(false);
-    resultInReverseOrder.add(descriptorInstalled, false);
-    resultInReverseOrder.add(descriptorBundled, false);
-    assertPluginPreInstalled(resultInReverseOrder, descriptorInstalled.getPluginId());
+    assertPluginPreInstalled(expectedPluginId, bundled, updated);
+    assertPluginPreInstalled(expectedPluginId, updated, bundled);
   }
 
   @Test
@@ -185,20 +210,29 @@ public class PluginManagerTest {
 
     Path configPath = tempDir.getRoot().toPath().resolve("config-link");
     IoTestUtil.createSymbolicLink(configPath, tempDir.newDirectory("config-target").toPath());
-    DisabledPluginsState.saveDisabledPlugins(configPath, "a");
+    DisabledPluginsState.saveDisabledPluginsAndInvalidate(configPath, "a");
     assertThat(configPath.resolve(DisabledPluginsState.DISABLED_PLUGINS_FILENAME)).hasContent("a" + System.lineSeparator());
   }
 
-  private static void assertPluginPreInstalled(PluginLoadingResult loadingResult, PluginId pluginId) {
-    assertTrue("Plugin should be pre installed", loadingResult.shadowedBundledIds.contains(pluginId));
+  private static void assertPluginPreInstalled(@NotNull PluginId expectedPluginId,
+                                               IdeaPluginDescriptorImpl... descriptors) {
+    PluginLoadingResult loadingResult = createPluginLoadingResult();
+    for (IdeaPluginDescriptorImpl descriptor : descriptors) {
+      loadingResult.add(descriptor, false);
+    }
+    assertTrue("Plugin should be pre installed", loadingResult.shadowedBundledIds.contains(expectedPluginId));
   }
 
   private static void doPluginSortTest(String testDataName, boolean isBundled) throws IOException, XMLStreamException {
     PluginManagerCore.getAndClearPluginLoadingErrors();
     PluginManagerState loadPluginResult = loadAndInitializeDescriptors(testDataName + ".xml", isBundled);
     StringBuilder text = new StringBuilder();
-    for (IdeaPluginDescriptorImpl descriptor : loadPluginResult.pluginSet.enabledPlugins) {
-      text.append(descriptor.isEnabled() ? "+ " : "  ").append(descriptor.getPluginId().getIdString()).append('\n');
+    for (IdeaPluginDescriptorImpl descriptor : loadPluginResult.pluginSet.getRawListOfEnabledModules()) {
+      text.append(descriptor.isEnabled() ? "+ " : "  ").append(descriptor.getPluginId().getIdString());
+      if (descriptor.moduleName != null) {
+        text.append(" | ").append(descriptor.moduleName);
+      }
+      text.append('\n');
     }
     text.append("\n\n");
     for (HtmlChunk html : PluginManagerCore.getAndClearPluginLoadingErrors()) {
@@ -211,30 +245,43 @@ public class PluginManagerTest {
     assertEquals(result, PluginManager.convertExplicitBigNumberInUntilBuildToStar(untilBuild));
   }
 
-  private static void assertIncompatible(String ideVersion, String sinceBuild, String untilBuild) {
+  private static void assertIncompatible(@NotNull String ideVersion,
+                                         @Nullable String sinceBuild,
+                                         @Nullable String untilBuild) {
     assertNotNull(checkCompatibility(ideVersion, sinceBuild, untilBuild));
   }
 
-  private static @Nullable String checkCompatibility(String ideVersion, String sinceBuild, String untilBuild) {
+  private static @Nullable PluginLoadingError checkCompatibility(@NotNull String ideVersion,
+                                                                 @Nullable String sinceBuild,
+                                                                 @Nullable String untilBuild) {
     IdeaPluginDescriptor mock = EasyMock.niceMock(IdeaPluginDescriptor.class);
     expect(mock.getSinceBuild()).andReturn(sinceBuild).anyTimes();
     expect(mock.getUntilBuild()).andReturn(untilBuild).anyTimes();
     replay(mock);
-    PluginLoadingError error =
-      PluginManagerCore.checkBuildNumberCompatibility(mock, requireNonNull(BuildNumber.fromString(ideVersion)));
-    return error != null ? error.getDetailedMessage() : null;
+
+    return PluginManagerCore.checkBuildNumberCompatibility(mock,
+                                                           Objects.requireNonNull(BuildNumber.fromString(ideVersion)));
   }
 
-  private static void assertCompatible(String ideVersion, String sinceBuild, String untilBuild) {
+  private static void assertCompatible(@NotNull String ideVersion,
+                                       @Nullable String sinceBuild,
+                                       @Nullable String untilBuild) {
     assertNull(checkCompatibility(ideVersion, sinceBuild, untilBuild));
   }
 
-  private static PluginManagerState loadAndInitializeDescriptors(String testDataName, boolean isBundled) throws IOException, XMLStreamException {
+  private static PluginManagerState loadAndInitializeDescriptors(String testDataName, boolean isBundled)
+    throws IOException, XMLStreamException {
     Path file = Path.of(getTestDataPath(), testDataName);
-    DescriptorListLoadingContext parentContext =
-      new DescriptorListLoadingContext(Collections.emptySet(), createPluginLoadingResult(true), false, false, false, false);
+    DescriptorListLoadingContext parentContext = new DescriptorListLoadingContext(Set.of(),
+                                                                                  createPluginLoadingResult(true),
+                                                                                  false,
+                                                                                  false,
+                                                                                  false,
+                                                                                  false);
 
     XmlElement root = XmlDomReader.readXmlAsModel(Files.newInputStream(file));
+    Ref<Boolean> autoGenerateModuleDescriptor = new Ref<>(false);
+    Map<String, XmlElement> moduleMap = new HashMap<>();
     PathResolver pathResolver = new PathResolver() {
       @Override
       public boolean isFlat() {
@@ -257,7 +304,7 @@ public class PluginManagerTest {
                                                       @Nullable RawPluginDescriptor readInto) {
         for (XmlElement child : root.children) {
           if (child.name.equals("config-file-idea-plugin")) {
-            String url = requireNonNull(child.getAttributeValue("url"));
+            String url = Objects.requireNonNull(child.getAttributeValue("url"));
             if (url.endsWith("/" + relativePath)) {
               try {
                 return XmlReader.readModuleDescriptor(elementAsBytes(child), readContext, this, dataLoader, null, readInto, null);
@@ -276,24 +323,64 @@ public class PluginManagerTest {
                                                             @NotNull DataLoader dataLoader,
                                                             @NotNull String path,
                                                             @Nullable RawPluginDescriptor readInto) {
+        if (autoGenerateModuleDescriptor.get() && path.startsWith("intellij.")) {
+          XmlElement element = moduleMap.get(path);
+          if (element != null) {
+            try {
+              return XmlReader.readModuleDescriptorForTest(elementAsBytes(element));
+            }
+            catch (XMLStreamException e) {
+              throw new RuntimeException(e);
+            }
+          }
+
+          assert readInto == null;
+          // auto-generate empty descriptor
+          return XmlReader.readModuleDescriptorForTest(("<idea-plugin package=\"" + path + "\"></idea-plugin>")
+                                                         .getBytes(StandardCharsets.UTF_8));
+        }
         return resolvePath(readContext, dataLoader, path, readInto);
       }
     };
+
+    for (XmlElement element : root.children) {
+      String moduleFile = element.attributes.get("moduleFile");
+      if (moduleFile != null) {
+        moduleMap.put(moduleFile, element);
+      }
+    }
 
     for (XmlElement element : root.children) {
       if (!element.name.equals("idea-plugin")) {
         continue;
       }
 
-      Path pluginPath = Path.of(StringUtil.trimStart(requireNonNull(element.getAttributeValue("url")), "file://"));
-      IdeaPluginDescriptorImpl descriptor = PluginDescriptorTestKt.createFromDescriptor(
-        pluginPath, isBundled, elementAsBytes(element), parentContext, pathResolver, new LocalFsDataLoader(pluginPath));
+      String url = element.getAttributeValue("url");
+      Path pluginPath;
+      if (url == null) {
+        XmlElement id = element.getChild("id");
+        if (id == null) {
+          assert element.attributes.containsKey("moduleFile");
+          continue;
+        }
+
+        pluginPath = Path.of(id.content.replace('.', '_') + ".xml");
+        autoGenerateModuleDescriptor.set(true);
+      }
+      else {
+        pluginPath = Path.of(Strings.trimStart(Objects.requireNonNull(url), "file://"));
+      }
+      IdeaPluginDescriptorImpl descriptor = PluginDescriptorTestKt.createFromDescriptor(pluginPath,
+                                                                                        isBundled,
+                                                                                        elementAsBytes(element),
+                                                                                        parentContext,
+                                                                                        pathResolver,
+                                                                                        new LocalFsDataLoader(pluginPath));
       parentContext.result.add(descriptor,  /* overrideUseIfCompatible = */ false);
-      descriptor.jarFiles = Collections.emptyList();
+      descriptor.jarFiles = List.of();
     }
     parentContext.close();
-    parentContext.result.finishLoading();
-    return PluginManagerCore.initializePlugins(parentContext, PluginManagerTest.class.getClassLoader(), /* checkEssentialPlugins = */ false);
+    return PluginManagerCore.initializePlugins(parentContext, PluginManagerTest.class.getClassLoader(), /* checkEssentialPlugins = */ false, null);
   }
 
   private static byte @NotNull [] elementAsBytes(XmlElement child) throws XMLStreamException {
