@@ -14,7 +14,6 @@ import javax.swing.*;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class VcsScopeItem implements ModelScopeItem {
   private final ChangeListManager myChangeListManager;
@@ -59,8 +58,7 @@ public class VcsScopeItem implements ModelScopeItem {
     else {
       LocalChangeList list = myChangeListManager.findChangeList(changeList.getName());
       if (list != null) {
-        files = ChangesUtil.getAfterRevisionsFiles(list.getChanges().stream())
-          .collect(Collectors.toList());
+        files = ChangesUtil.iterateAfterRevisionsFiles(list.getChanges()).toList();
       }
       else {
         files = Collections.emptyList();
