@@ -26,7 +26,6 @@ import org.jetbrains.annotations.Nullable;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.ExecutionException;
-import java.util.stream.Collectors;
 
 import static com.intellij.openapi.vcs.changes.actions.diff.lst.LocalChangeListDiffTool.ALLOW_EXCLUDE_FROM_COMMIT;
 
@@ -43,7 +42,11 @@ public class ShowDiffFromLocalChangesActionProvider implements AnActionExtension
 
   public static void updateAvailability(@NotNull AnActionEvent e) {
     Project project = e.getData(CommonDataKeys.PROJECT);
-    ChangesListView view = e.getRequiredData(ChangesListView.DATA_KEY);
+    ChangesListView view = e.getData(ChangesListView.DATA_KEY);
+    if (view == null) {
+      e.getPresentation().setEnabled(false);
+      return;
+    }
 
     JBIterable<Change> changes = view.getSelectedChanges();
     JBIterable<FilePath> unversionedFiles = view.getSelectedUnversionedFiles();
@@ -105,7 +108,7 @@ public class ShowDiffFromLocalChangesActionProvider implements AnActionExtension
     else {
       ListSelection<Producer> producers = collectRequestProducers(project, changes, unversioned, view);
       if (producers.isEmpty()) return;
-      chain = new ChangeDiffRequestChain(producers.getList(), producers.getSelectedIndex());
+      chain = new ChangeDiffRequestChain(producers);
     }
 
     chain.putUserData(DiffUserDataKeysEx.LAST_REVISION_WITH_LOCAL, true);
@@ -142,9 +145,9 @@ public class ShowDiffFromLocalChangesActionProvider implements AnActionExtension
 
   @NotNull
   public static ListSelection<Producer> collectRequestProducers(@NotNull Project project,
-                                                                 @NotNull List<? extends Change> changes,
-                                                                 @NotNull List<? extends FilePath> unversioned,
-                                                                 @NotNull ChangesListView changesView) {
+                                                                @NotNull List<? extends Change> changes,
+                                                                @NotNull List<? extends FilePath> unversioned,
+                                                                @NotNull ChangesListView changesView) {
     if (changes.size() == 1 && unversioned.isEmpty()) { // show all changes from this changelist
       Change selectedChange = changes.get(0);
       List<Change> selectedChanges = changesView.getAllChangesFromSameChangelist(selectedChange);
@@ -160,14 +163,15 @@ public class ShowDiffFromLocalChangesActionProvider implements AnActionExtension
 
     if (unversioned.size() == 1 && changes.isEmpty()) { // show all unversioned changes
       FilePath selectedFile = unversioned.get(0);
-      List<FilePath> allUnversioned = changesView.getUnversionedFiles().collect(Collectors.toList());
+      List<FilePath> allUnversioned = changesView.getUnversionedFiles().toList();
       int selectedIndex = allUnversioned.indexOf(selectedFile);
       return createUnversionedProducers(project, allUnversioned, selectedIndex);
     }
 
     ListSelection<Producer> changeProducers = createChangeProducers(project, changes, 0);
     ListSelection<Producer> unversionedProducers = createUnversionedProducers(project, unversioned, 0);
-    return ListSelection.createAt(ContainerUtil.concat(changeProducers.getList(), unversionedProducers.getList()), 0);
+    return ListSelection.createAt(ContainerUtil.concat(changeProducers.getList(), unversionedProducers.getList()), 0)
+      .asExplicitSelection();
   }
 
   private static ListSelection<Producer> createChangeProducers(@NotNull Project project,
