@@ -1,4 +1,4 @@
-// Copyright 2000-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.vfs.newvfs.persistent;
 
 import com.intellij.concurrency.ConcurrentCollectionFactory;
@@ -63,28 +63,26 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
   private final VirtualDirectoryCache myIdToDirCache = new VirtualDirectoryCache();
   private final ReadWriteLock myInputLock = new ReentrantReadWriteLock();
 
-  private final AtomicBoolean myShutDown = new AtomicBoolean(false);
+  private final AtomicBoolean myConnected = new AtomicBoolean(false);
   private final AtomicInteger myStructureModificationCount = new AtomicInteger();
   private BulkFileListener myPublisher;
-  private final VfsData myVfsData = new VfsData();
+  private volatile VfsData myVfsData = new VfsData();
 
   public PersistentFSImpl() {
-    if (SystemInfoRt.isFileSystemCaseSensitive) {
-      myRoots = new ConcurrentHashMap<>(10, 0.4f, JobSchedulerImpl.getCPUCoresCount());
-    }
-    else {
-      myRoots = ConcurrentCollectionFactory.createConcurrentMap(10, 0.4f, JobSchedulerImpl.getCPUCoresCount(), HashingStrategy.caseInsensitive());
-    }
+    myRoots = SystemInfoRt.isFileSystemCaseSensitive
+              ? new ConcurrentHashMap<>(10, 0.4f, JobSchedulerImpl.getCPUCoresCount())
+              : ConcurrentCollectionFactory.createConcurrentMap(10, 0.4f, JobSchedulerImpl.getCPUCoresCount(),
+                                                                HashingStrategy.caseInsensitive());
 
-    ShutDownTracker.getInstance().registerShutdownTask(this::performShutdown);
+    ShutDownTracker.getInstance().registerShutdownTask(this::disconnect);
     LowMemoryWatcher.register(this::clearIdCache, this);
 
     AsyncEventSupport.startListening();
 
-    ApplicationManager.getApplication().getMessageBus().connect().subscribe(DynamicPluginListener.TOPIC, new DynamicPluginListener(){
+    ApplicationManager.getApplication().getMessageBus().simpleConnect().subscribe(DynamicPluginListener.TOPIC, new DynamicPluginListener(){
       @Override
       public void pluginUnloaded(@NotNull IdeaPluginDescriptor pluginDescriptor, boolean isUpdate) {
-        // myIdToDirCache could retain alien file systems
+        // `myIdToDirCache` could retain alien file systems
         clearIdCache();
         // remove alien file system references from myRoots
         for (Iterator<Map.Entry<String, VirtualFileSystemEntry>> iterator = myRoots.entrySet().iterator(); iterator.hasNext(); ) {
@@ -97,15 +95,50 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
         }
       }
     });
-    Activity activity = StartUpMeasurer.startActivity("connect FSRecords", ActivityCategory.DEFAULT);
-    FSRecords.connect();
-    activity.end();
+
+    connect();
+  }
+
+  @ApiStatus.Internal
+  public void connect() {
+    myIdToDirCache.clear();
+    myVfsData = new VfsData();
+    LOG.assertTrue(!myConnected.get());
+    doConnect();
+    PersistentFsConnectionListener.EP_NAME.extensions().forEach(PersistentFsConnectionListener::connectionOpen);
+  }
+
+  @ApiStatus.Internal
+  public void disconnect() {
+    if (myConnected.compareAndSet(true, false)) {
+      PersistentFsConnectionListener.EP_NAME.extensions().forEach(PersistentFsConnectionListener::beforeConnectionClosed);
+      // TODO make sure we don't have files in memory
+      FileNameCache.drop();
+      myRoots.clear();
+      myIdToDirCache.clear();
+      LOG.info("VFS dispose started");
+      FSRecords.dispose();
+      LOG.info("VFS dispose completed");
+    }
+  }
+
+  private void doConnect() {
+    if (myConnected.compareAndSet(false, true)) {
+      Activity activity = StartUpMeasurer.startActivity("connect FSRecords", ActivityCategory.DEFAULT);
+      FSRecords.connect();
+      activity.end();
+    }
+  }
+
+  @ApiStatus.Internal
+  public boolean isConnected() {
+    return myConnected.get();
   }
 
   private @NotNull BulkFileListener getPublisher() {
     BulkFileListener publisher = myPublisher;
     if (publisher == null) {
-      // cannot be in constructor, to ensure that lazy listeners will be not created too early
+      // cannot be in constructor, to ensure that lazy listeners won't be created too early
       publisher = ApplicationManager.getApplication().getMessageBus().syncPublisher(VirtualFileManager.VFS_CHANGES);
       myPublisher = publisher;
     }
@@ -114,15 +147,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
 
   @Override
   public void dispose() {
-    performShutdown();
-  }
-
-  private void performShutdown() {
-    if (myShutDown.compareAndSet(false, true)) {
-      LOG.info("VFS dispose started");
-      FSRecords.dispose();
-      LOG.info("VFS dispose completed");
-    }
+    disconnect();
   }
 
   @Override
@@ -169,11 +194,11 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
   }
 
   // return actual children
-  private static @NotNull List<? extends ChildInfo> persistAllChildren(@NotNull VirtualFile file, int id) {
-    NewVirtualFileSystem fs = replaceWithNativeFS(getDelegate(file));
+  private static @NotNull List<? extends ChildInfo> persistAllChildren(@NotNull VirtualFile dir, int id) {
+    final NewVirtualFileSystem fs = replaceWithNativeFS(getDelegate(dir));
     Map<String, ChildInfo> justCreated = new HashMap<>();
-    String[] delegateNames = VfsUtil.filterNames(fs.list(file));
-    ListResult saved = FSRecords.update(file, id, current -> {
+    String[] delegateNames = VfsUtil.filterNames(fs.list(dir));
+    ListResult saved = FSRecords.update(dir, id, current -> {
       List<? extends ChildInfo> currentChildren = current.children;
       if (delegateNames.length == 0 && !currentChildren.isEmpty()) {
         return current;
@@ -181,28 +206,29 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
       // preserve current children which match delegateNames (to have stable id)
       // (on case-insensitive system replace those from current with case-changes ones from delegateNames preserving the id)
       // add those from delegateNames which are absent from current
-      Set<String> toAddNames = CollectionFactory.createFilePathSet(delegateNames, file.isCaseSensitive());
+      boolean caseSensitive = dir.isCaseSensitive();
+      Set<String> toAddNames = CollectionFactory.createFilePathSet(delegateNames, caseSensitive);
       for (ChildInfo currentChild : currentChildren) {
         toAddNames.remove(currentChild.getName().toString());
       }
 
       List<ChildInfo> toAddChildren = new ArrayList<>(toAddNames.size());
       if (fs instanceof BatchingFileSystem) {
-        Map<String, FileAttributes> map = ((BatchingFileSystem)fs).listWithAttributes(file, toAddNames);
+        Map<String, FileAttributes> map = ((BatchingFileSystem)fs).listWithAttributes(dir, toAddNames);
         for (Map.Entry<String, FileAttributes> entry : map.entrySet()) {
           String newName = entry.getKey();
-          Pair<@NotNull FileAttributes, String> childData = getChildData(fs, file, newName, entry.getValue(), null);
+          Pair<@NotNull FileAttributes, String> childData = getChildData(fs, dir, newName, entry.getValue(), null);
           if (childData != null) {
-            ChildInfo newChild = justCreated.computeIfAbsent(newName, name -> makeChildRecord(file, id, name, childData, fs, null));
+            ChildInfo newChild = justCreated.computeIfAbsent(newName, name -> makeChildRecord(dir, id, name, childData, fs, null));
             toAddChildren.add(newChild);
           }
         }
       }
       else {
         for (String newName : toAddNames) {
-          Pair<@NotNull FileAttributes, String> childData = getChildData(fs, file, newName, null, null);
+          Pair<@NotNull FileAttributes, String> childData = getChildData(fs, dir, newName, null, null);
           if (childData != null) {
-            ChildInfo newChild = justCreated.computeIfAbsent(newName, name -> makeChildRecord(file, id, name, childData, fs, null));
+            ChildInfo newChild = justCreated.computeIfAbsent(newName, name -> makeChildRecord(dir, id, name, childData, fs, null));
             toAddChildren.add(newChild);
           }
         }
@@ -210,7 +236,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
 
       // some clients (e.g. RefreshWorker) expect subsequent list() calls to return equal arrays
       toAddChildren.sort(ChildInfo.BY_ID);
-      return current.merge(toAddChildren, file.isCaseSensitive());
+      return current.merge(toAddChildren, caseSensitive);
     });
 
     setChildrenCached(id);
@@ -239,12 +265,12 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
   }
 
   @Override
-  public @Nullable DataInputStream readAttribute(@NotNull VirtualFile file, @NotNull FileAttribute att) {
+  public @Nullable AttributeInputStream readAttribute(@NotNull VirtualFile file, @NotNull FileAttribute att) {
     return FSRecords.readAttributeWithLock(getFileId(file), att);
   }
 
   @Override
-  public @NotNull DataOutputStream writeAttribute(@NotNull VirtualFile file, @NotNull FileAttribute att) {
+  public @NotNull AttributeOutputStream writeAttribute(@NotNull VirtualFile file, @NotNull FileAttribute att) {
     return FSRecords.writeAttribute(getFileId(file), att);
   }
 
@@ -288,18 +314,20 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     myStructureModificationCount.incrementAndGet();
   }
 
+  @TestOnly
   @Override
   public int getFilesystemModificationCount() {
     return FSRecords.getPersistentModCount();
   }
 
-  // return nameId>0 if write successful, -1 if not
+  // returns `nameId` > 0 if write successful, -1 if not
   private static int writeAttributesToRecord(int id,
                                              @Nullable VirtualFile parentFile,
                                              int parentId,
                                              @NotNull CharSequence name,
                                              @NotNull NewVirtualFileSystem fs,
-                                             @NotNull FileAttributes attributes) {
+                                             @NotNull FileAttributes attributes,
+                                             boolean overwriteMissed) {
     assert id > 0 : id;
     assert parentId >= 0 : parentId; // 0 means there's no parent
     if (name.length() != 0) {
@@ -309,7 +337,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
       if (areChildrenLoaded(id)) return -1; // TODO: hack
     }
 
-    return FSRecords.writeAttributesToRecord(id, parentId, attributes, name.toString());
+    return FSRecords.writeAttributesToRecord(id, parentId, attributes, name.toString(), overwriteMissed);
   }
 
   @Override
@@ -435,17 +463,17 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     if (children.isEmpty()) {
       return null;
     }
-    // fast path, check that some child has same nameId as given name to avoid overhead on retrieving names for non-cached children
+    // fast path, check that some child has the same `nameId` as a given name - to avoid an overhead on retrieving names of non-cached children
     int nameId = FSRecords.getNameId(childName);
     for (ChildInfo info : children) {
       if (nameId == info.getNameId()) {
         return info;
       }
     }
-    // for case sensitive system the above check is exhaustive in consistent state of vfs
+    // for case-sensitive systems, the above check is exhaustive in consistent state of VFS
     if (!parent.isCaseSensitive()) {
       for (ChildInfo info : children) {
-        if (namesEqual(fs, parent, childName, FSRecords.getNameByNameId(info.getNameId()))) {
+        if (namesEqual(fs, parent, childName, FileNameCache.getVFileName(info.getNameId()))) {
           return info;
         }
       }
@@ -552,8 +580,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
 
   @Override
   public byte @NotNull [] contentsToByteArray(@NotNull VirtualFile file, boolean cacheContent) throws IOException {
-    InputStream contentStream = null;
-    boolean reloadFromDelegate;
+    InputStream contentStream;
     boolean outdated;
     int fileId;
     long length;
@@ -563,19 +590,19 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
       fileId = getFileId(file);
       length = getLengthIfUpToDate(file);
       outdated = length == -1 || mustReloadContent(file);
-      reloadFromDelegate = outdated || (contentStream = readContent(file)) == null;
+      contentStream = outdated ? null : readContent(file);
     }
     finally {
       myInputLock.readLock().unlock();
     }
 
-    if (reloadFromDelegate) {
+    if (contentStream == null) {
       NewVirtualFileSystem delegate = getDelegate(file);
 
       byte[] content;
       if (outdated) {
-        // in this case, file can have out-of-date length. so, update it first (it's needed for correct contentsToByteArray() work)
-        // see IDEA-90813 for possible bugs
+        // In this case, the file can have an out-of-date length. So, update it first (needed for the correct work of `contentsToByteArray`)
+        // See IDEA-90813 for possible bugs.
         setLength(fileId, delegate.getLength(file));
         content = delegate.contentsToByteArray(file);
       }
@@ -586,14 +613,9 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
       }
 
       Application application = ApplicationManager.getApplication();
-      // we should cache every local files content
-      // because the local history feature is currently depends on this cache,
-      // perforce offline mode as well
-      if ((!delegate.isReadOnly() ||
-           // do not cache archive content unless asked
-           cacheContent && !application.isInternal() && !application.isUnitTestMode()) &&
-          shouldCache(content.length)) {
-
+      // we should cache every local file's content, because the local history feature and Perforce offline mode depend on the cache
+      // (do not cache archive content unless explicitly asked)
+      if ((!delegate.isReadOnly() || cacheContent && !application.isInternal() && !application.isUnitTestMode()) && shouldCache(content.length)) {
         myInputLock.writeLock().lock();
         try {
           writeContent(file, ByteArraySequence.create(content), delegate.isReadOnly());
@@ -606,18 +628,20 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
 
       return content;
     }
+
     try {
       assert length >= 0 : file;
       return contentStream.readNBytes((int)length);
     }
     catch (IOException e) {
       FSRecords.handleError(e);
+      return ArrayUtil.EMPTY_BYTE_ARRAY;
     }
-    return ArrayUtil.EMPTY_BYTE_ARRAY;
   }
 
   @Override
   public byte @NotNull [] contentsToByteArray(int contentId) throws IOException {
+    //noinspection resource
     return readContentById(contentId).readAllBytes();
   }
 
@@ -664,7 +688,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
   }
 
   private static long reloadLengthFromDelegate(@NotNull VirtualFile file, @NotNull FileSystemInterface delegate) {
-    long len = delegate.getLength(file);
+    final long len = delegate.getLength(file);
     int fileId = getFileId(file);
     setLength(fileId, len);
     return len;
@@ -716,11 +740,13 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
 
   private void storeContentToStorage(long fileLength,
                                      @NotNull VirtualFile file,
-                                     boolean readOnly, byte @NotNull [] bytes, int bytesLength) {
+                                     boolean readOnly,
+                                     byte @NotNull [] bytes,
+                                     int byteLength) {
     myInputLock.writeLock().lock();
     try {
-      if (bytesLength == fileLength) {
-        writeContent(file, new ByteArraySequence(bytes, 0, bytesLength), readOnly);
+      if (byteLength == fileLength) {
+        writeContent(file, new ByteArraySequence(bytes, 0, byteLength), readOnly);
         setFlag(file, Flags.MUST_RELOAD_CONTENT, false);
         setFlag(file, Flags.MUST_RELOAD_LENGTH, false);
       }
@@ -738,17 +764,14 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     return FSRecords.getContentHash(getFileId(file));
   }
 
-  // returns last recorded length or -1 if must reload from delegate
+  // returns last recorded length or -1 if it must reload from delegate
   private static long getLengthIfUpToDate(@NotNull VirtualFile file) {
     int fileId = getFileId(file);
     return BitUtil.isSet(FSRecords.getFlags(fileId), Flags.MUST_RELOAD_LENGTH) ? -1 : FSRecords.getLength(fileId);
   }
 
   @Override
-  public @NotNull OutputStream getOutputStream(@NotNull VirtualFile file,
-                                               Object requestor,
-                                               long modStamp,
-                                               long timeStamp) {
+  public @NotNull OutputStream getOutputStream(@NotNull VirtualFile file, Object requestor, long modStamp, long timeStamp) {
     return new ByteArrayOutputStream() {
       private boolean closed; // protection against user calling .close() twice
 
@@ -760,12 +783,13 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
         ApplicationManager.getApplication().assertWriteAccessAllowed();
 
         long oldLength = getLastRecordedLength(file);
-        VFileContentChangeEvent event = new VFileContentChangeEvent(requestor, file, file.getModificationStamp(), modStamp, file.getTimeStamp(), -1, oldLength, count, false);
-        List<VFileContentChangeEvent> events = Collections.singletonList(event);
+        VFileContentChangeEvent event = new VFileContentChangeEvent(
+          requestor, file, file.getModificationStamp(), modStamp, file.getTimeStamp(), -1, oldLength, count, false);
+        List<VFileEvent> events = List.of(event);
         fireBeforeEvents(getPublisher(), events);
 
         NewVirtualFileSystem delegate = getDelegate(file);
-        // FSRecords.ContentOutputStream already buffered, no need to wrap in BufferedStream
+        // `FSRecords.ContentOutputStream` already buffered, no need to wrap in `BufferedStream`
         try (OutputStream persistenceStream = writeContent(file, delegate.isReadOnly())) {
           persistenceStream.write(buf, 0, count);
         }
@@ -803,6 +827,10 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     return FSRecords.getContentId(getFileId(file));
   }
 
+  public boolean isOwnData(@NotNull VfsData data) {
+    return data == myVfsData;
+  }
+
   @Override
   public void moveFile(Object requestor, @NotNull VirtualFile file, @NotNull VirtualFile newParent) throws IOException {
     getDelegate(file).moveFile(requestor, file, newParent);
@@ -811,9 +839,8 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
 
   private void processEvent(@NotNull VFileEvent event) {
     ApplicationManager.getApplication().assertWriteAccessAllowed();
-    if (!event.isValid()) {
-      return;
-    }
+    if (!event.isValid()) return;
+
     List<VFileEvent> outValidatedEvents = new ArrayList<>();
     outValidatedEvents.add(event);
     List<Runnable> outApplyActions = new ArrayList<>();
@@ -822,9 +849,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     if (jarDeleteEvents.isEmpty() && outApplyActions.isEmpty()) {
       // optimisation: skip all groupings
       fireBeforeEvents(publisher, outValidatedEvents);
-
       applyEvent(event);
-
       fireAfterEvents(publisher, outValidatedEvents);
     }
     else {
@@ -834,25 +859,24 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
         outApplyActions.add(() -> applyEvent(jarDeleteEvent));
         outValidatedEvents.add(jarDeleteEvent);
       }
-
       applyMultipleEvents(publisher, outApplyActions, outValidatedEvents, false);
     }
   }
 
-  // Tries to find a group of non-conflicting events in range [startIndex..inEvents.size()).
+  // Tries to find a group of non-conflicting events in range [`startIndex`..`inEvents.size()`).
   // Two events are conflicting if the originating file of one event is an ancestor (non-strict) of the file from the other.
-  // E.g. "change(a/b/c/x.txt)" and "delete(a/b/c)" are conflicting because "a/b/c/x.txt" is under the "a/b/c" directory from the other event.
+  // E.g., "change(a/b/c/x.txt)" and "delete(a/b/c)" are conflicting because "a/b/c/x.txt" is under the "a/b/c" directory from the other event.
   //
   // returns index after the last grouped event.
-  private static int groupByPath(List<? extends CompoundVFileEvent> events,
+  private static int groupByPath(@NotNull List<? extends CompoundVFileEvent> events,
                                  int startIndex,
                                  @NotNull MostlySingularMultiMap<String, VFileEvent> filesInvolved,
                                  @NotNull Set<? super String> middleDirsInvolved,
                                  @NotNull Set<? super VirtualFile> deleted,
-                                 @NotNull Map<VirtualDirectoryImpl, Object> toCreate,// dir -> VFileCreateEvent or Collection<VFileCreateEvent> in this dir
+                                 @NotNull Map<VirtualDirectoryImpl, Object> toCreate,// dir -> VFileCreateEvent|Collection<VFileCreateEvent> in this dir
                                  @NotNull Set<? super VFileEvent> eventsToRemove) {
     // store all paths from all events (including all parents)
-    // check the each new event's path against this set and if it's there, this event is conflicting
+    // check each new event's path against this set and if it's there, this event is conflicting
     int i;
     for (i = startIndex; i < events.size(); i++) {
       VFileEvent event = events.get(i).getFileEvent();
@@ -871,8 +895,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
         else {
           if (createEvents instanceof VFileCreateEvent) {
             VFileCreateEvent prevEvent = (VFileCreateEvent)createEvents;
-            Set<VFileCreateEvent> children = parent.isCaseSensitive() ? new LinkedHashSet<>() :
-                                             CollectionFactory.createLinkedCustomHashingStrategySet(CASE_INSENSITIVE_STRATEGY);
+            Set<VFileCreateEvent> children = parent.isCaseSensitive() ? new LinkedHashSet<>() : CollectionFactory.createLinkedCustomHashingStrategySet(CASE_INSENSITIVE_STRATEGY);
             children.add(prevEvent);
             toCreate.put(parent, children);
             createEvents = children;
@@ -889,8 +912,8 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
       if (eventConflictsWithPrevious(event, path, filesInvolved, middleDirsInvolved)) {
         break;
       }
-      // some synthetic events really are composite events, e.g. VFileMoveEvent = VFileDeleteEvent+VFileCreateEvent,
-      // so both paths should be checked for conflicts
+      // Some events are composite (e.g. `VFileMoveEvent` = `VFileDeleteEvent` + `VFileCreateEvent`),
+      // so both paths should be checked for conflicts.
       String path2 = getAlternativePath(event);
       if (path2 != null &&
           !(SystemInfoRt.isFileSystemCaseSensitive ? path2.equals(path) : path2.equalsIgnoreCase(path)) &&
@@ -932,7 +955,6 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
         return true;
       }
     }
-
     return false;
   }
 
@@ -965,7 +987,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
         // conflicting event found for ancestor, stop
         return true;
       }
-      if (!middleDirs.add(parentDir)) break;  // all parents up already stored, stop
+      if (!middleDirs.add(parentDir)) break;  // all parents are already stored; stop
       li = liPrev;
     }
 
@@ -975,17 +997,16 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
   private static boolean isContentChangeLikeHarmlessEvent(@NotNull VFileEvent event) {
     if (event instanceof VFileContentChangeEvent) return true;
     if (event instanceof VFilePropertyChangeEvent) {
-      String prop = ((VFilePropertyChangeEvent)event).getPropertyName();
-      return prop.equals(VirtualFile.PROP_WRITABLE)
-             || prop.equals(VirtualFile.PROP_ENCODING)
-             || prop.equals(VirtualFile.PROP_CHILDREN_CASE_SENSITIVITY);
+      String p = ((VFilePropertyChangeEvent)event).getPropertyName();
+      return p.equals(VirtualFile.PROP_WRITABLE) || p.equals(VirtualFile.PROP_ENCODING) || p.equals(VirtualFile.PROP_CHILDREN_CASE_SENSITIVITY);
     }
     return false;
   }
 
-  // finds a group of non-conflicting events, validate them.
-  // "outApplyActions" will contain handlers for applying the grouped events
-  // "outValidatedEvents" will contain events for which VFileEvent.isValid() is true
+  // Finds a group of non-conflicting events and validates them.
+  // The `outApplyActions` will contain handlers for applying grouped events.
+  // The `outValidatedEvents` will contain events for which `VFileEvent#isValid` is true.
+  //
   // return index after the last processed event
   private int groupAndValidate(@NotNull List<? extends CompoundVFileEvent> events,
                                int startIndex,
@@ -999,7 +1020,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
                                boolean excludeAsyncListeners) {
     int endIndex = groupByPath(events, startIndex, filesInvolved, middleDirsInvolved, toDelete, toCreate, toIgnore);
     assert endIndex > startIndex : events.get(startIndex) +"; files: "+filesInvolved+"; middleDirs: "+middleDirsInvolved;
-    // since all events in the group events[startIndex..endIndex) are mutually non-conflicting, we can re-arrange creations/deletions together
+    // since all events in the group events[`startIndex`..`endIndex`) are mutually non-conflicting, we can re-arrange creations/deletions together
     groupCreations(outValidatedEvents, outApplyActions, toCreate);
     groupDeletions(events, startIndex, endIndex, outValidatedEvents, outApplyActions, toIgnore);
     groupOthers(events, startIndex, endIndex, outValidatedEvents, outApplyActions);
@@ -1021,8 +1042,8 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     return endIndex;
   }
 
-  // find all VFileCreateEvent events in [start..end)
-  // group them by parent directory, validate in bulk for each directory, and return "applyCreations()" runnable
+  // Finds all `VFileCreateEvent` instances in [`start`..`end`), groups them by parent directory, validates in bulk for each directory,
+  // and returns `applyCreations()` runnable
   private void groupCreations(@NotNull List<? super VFileEvent> outValidated,
                               @NotNull List<? super Runnable> outApplyActions,
                               @NotNull Map<VirtualDirectoryImpl, Object> created) {
@@ -1034,7 +1055,8 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
         VirtualDirectoryImpl directory = entry.getKey();
         Object value = entry.getValue();
         //noinspection unchecked
-        Set<VFileCreateEvent> createEvents = value instanceof VFileCreateEvent ? new HashSet<>(Collections.singletonList((VFileCreateEvent)value)) : (Set<VFileCreateEvent>)value;
+        Set<VFileCreateEvent> createEvents =
+          value instanceof VFileCreateEvent ? new HashSet<>(List.of((VFileCreateEvent)value)) : (Set<VFileCreateEvent>)value;
         directory.validateChildrenToCreate(createEvents);
         hasValidEvents |= !createEvents.isEmpty();
         outValidated.addAll(createEvents);
@@ -1042,7 +1064,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
       }
 
       if (hasValidEvents) {
-        //noinspection unchecked
+        //noinspection unchecked,rawtypes
         Map<VirtualDirectoryImpl, Set<VFileCreateEvent>> finalGrouped = (Map)created;
         outApplyActions.add((Runnable)() -> {
           applyCreations(finalGrouped);
@@ -1052,8 +1074,8 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     }
   }
 
-  // find all VFileDeleteEvent events in [start..end)
-  // group them by parent directory (can be null), filter out files which parent dir is to be deleted too, and return "applyDeletions()" runnable
+  // Finds all `VFileDeleteEvent` instances in [`start`..`end`), groups them by parent directory (can be null),
+  // filters out files which parent dir is to be deleted too, and returns `applyDeletions()` runnable.
   private void groupDeletions(@NotNull List<? extends CompoundVFileEvent> events,
                               int start,
                               int end,
@@ -1085,8 +1107,8 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     }
   }
 
-  // find events other than VFileCreateEvent or VFileDeleteEvent in [start..end)
-  // validate and return "applyEvent()" runnable for each event because it's assumed there won't be too many of them
+  // Finds events other than `VFileCreateEvent` or `VFileDeleteEvent` in [`start`..`end`), validates,
+  // and returns `applyEvent()` runnable for each event because it's assumed there won't be too many of them.
   private void groupOthers(@NotNull List<? extends CompoundVFileEvent> events,
                            int start,
                            int end,
@@ -1101,6 +1123,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
   }
 
   private static final int INNER_ARRAYS_THRESHOLD = 1024; // max initial size, to avoid OOM on million-events processing
+
   @Override
   public void processEvents(@NotNull List<? extends @NotNull VFileEvent> events) {
     processEventsImpl(ContainerUtil.map(events, e -> new CompoundVFileEvent(e)), false);
@@ -1133,16 +1156,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
       toCreate.clear();
       toIgnore.clear();
       toDelete.clear();
-      startIndex = groupAndValidate(events,
-                                    startIndex,
-                                    applyActions,
-                                    validated,
-                                    files,
-                                    middleDirs,
-                                    toCreate,
-                                    toIgnore,
-                                    toDelete,
-                                    excludeAsyncListeners);
+      startIndex = groupAndValidate(events, startIndex, applyActions, validated, files, middleDirs, toCreate, toIgnore, toDelete, excludeAsyncListeners);
 
       if (!validated.isEmpty()) {
         applyMultipleEvents(publisher, applyActions, validated, excludeAsyncListeners);
@@ -1152,24 +1166,46 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
 
   private static void applyMultipleEvents(@NotNull BulkFileListener publisher,
                                           @NotNull List<? extends Runnable> applyActions,
-                                          @NotNull List<? extends VFileEvent> applyEvents, boolean excludeAsyncListeners) {
+                                          @NotNull List<VFileEvent> applyEvents,
+                                          boolean excludeAsyncListeners) {
     PingProgress.interactWithEdtProgress();
     // do defensive copy to cope with ill-written listeners that save passed list for later processing
     List<VFileEvent> toSend = ContainerUtil.immutableList(applyEvents.toArray(new VFileEvent[0]));
+    Throwable x = null;
 
     try {
       if (excludeAsyncListeners) AsyncEventSupport.markAsynchronouslyProcessedEvents(toSend);
 
-      fireBeforeEvents(publisher, toSend);
+      try {
+        fireBeforeEvents(publisher, toSend);
+      }
+      catch (Throwable t) {
+        x = t;
+      }
 
       PingProgress.interactWithEdtProgress();
-      applyActions.forEach(Runnable::run);
+      for (Runnable runnable : applyActions) {
+        try {
+          runnable.run();
+        }
+        catch (Throwable t) {
+          if (x != null) t.addSuppressed(x);
+          x = t;
+        }
+      }
 
       PingProgress.interactWithEdtProgress();
-      fireAfterEvents(publisher, toSend);
+      try {
+        fireAfterEvents(publisher, toSend);
+      }
+      catch (Throwable t) {
+        if (x != null) t.addSuppressed(x);
+        x = t;
+      }
     }
     finally {
       if (excludeAsyncListeners) AsyncEventSupport.unmarkAsynchronouslyProcessedEvents(toSend);
+      if (x != null) ExceptionUtil.rethrow(x);
     }
   }
 
@@ -1227,14 +1263,15 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     int parentId = getFileId(parent);
     NewVirtualFile vf = findFileById(parentId);
     if (!(vf instanceof VirtualDirectoryImpl)) return;
-    parent = (VirtualDirectoryImpl)vf;  // retain in myIdToDirCache at least for the duration of this block in order to subsequent findFileById() won't crash
+    parent = (VirtualDirectoryImpl)vf;  // retain in `myIdToDirCache` at least for the duration of this block, so that subsequent `findFileById` won't crash
     NewVirtualFileSystem delegate = replaceWithNativeFS(getDelegate(parent));
 
     List<ChildInfo> childrenAdded = new ArrayList<>(createEvents.size());
     for (VFileCreateEvent createEvent : createEvents) {
       createEvent.resetCache();
       String name = createEvent.getChildName();
-      Pair<@NotNull FileAttributes, String> childData = getChildData(delegate, createEvent.getParent(), name, createEvent.getAttributes(), createEvent.getSymlinkTarget());
+      Pair<@NotNull FileAttributes, String> childData = getChildData(
+        delegate, createEvent.getParent(), name, createEvent.getAttributes(), createEvent.getSymlinkTarget());
       if (childData != null) {
         ChildInfo child = makeChildRecord(parent, parentId, name, childData, delegate, createEvent.getChildren());
         childrenAdded.add(child);
@@ -1267,7 +1304,8 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
           List<ChildInfo> added = new ArrayList<>(scannedChildren.size());
           for (ChildInfo childInfo : scannedChildren) {
             CharSequence childName = childInfo.getName();
-            Pair<@NotNull FileAttributes, String> childData = getChildData(delegate, directory, childName.toString(), childInfo.getFileAttributes(), childInfo.getSymlinkTarget());
+            Pair<@NotNull FileAttributes, String> childData = getChildData(
+              delegate, directory, childName.toString(), childInfo.getFileAttributes(), childInfo.getSymlinkTarget());
             if (childData != null) {
               ChildInfo newChild = makeChildRecord(directory, directoryId, childName, childData, delegate, childInfo.getChildren());
               added.add(newChild);
@@ -1292,6 +1330,10 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
 
   @Override
   public @Nullable VirtualFileSystemEntry findRoot(@NotNull String path, @NotNull NewVirtualFileSystem fs) {
+    if (!myConnected.get()) {
+      LOG.info("VFS disconnected. Can't provide root for " + path + " in " + fs);
+      return null;
+    }
     if (path.isEmpty()) {
       LOG.error("Invalid root, fs=" + fs);
       return null;
@@ -1301,27 +1343,32 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     VirtualFileSystemEntry root = myRoots.get(rootUrl);
     if (root != null) return root;
 
-    CharSequence rootName;
+    String rootName;
     String rootPath;
+    FileAttributes attributes;
     if (fs instanceof ArchiveFileSystem) {
       ArchiveFileSystem afs = (ArchiveFileSystem)fs;
       VirtualFile localFile = afs.findLocalByRootPath(path);
       if (localFile == null) return null;
-      rootName = localFile.getNameSequence();
+      rootName = localFile.getName();
       rootPath = afs.getRootPathByLocal(localFile);
       rootUrl = UriUtil.trimTrailingSlashes(VirtualFileManager.constructUrl(fs.getProtocol(), rootPath));
+      attributes = afs.getArchiveRootAttributes(new StubVirtualFile(fs) {
+        @Override public @NotNull String getPath() { return rootPath; }
+        @Override public @Nullable VirtualFile getParent() { return null; }
+      });
     }
     else {
       rootName = rootPath = path;
+      attributes = loadAttributes(fs, rootPath);
     }
 
-    FileAttributes attributes = loadAttributes(fs, rootPath);
     if (attributes == null || !attributes.isDirectory()) {
       return null;
     }
     // assume roots have the FS default case sensitivity
     attributes = attributes.withCaseSensitivity(fs.isCaseSensitive() ? FileAttributes.CaseSensitivity.SENSITIVE : FileAttributes.CaseSensitivity.INSENSITIVE);
-    // avoid creating zillion of roots which are not actual roots
+    // avoid creating gazillions of roots which are not actual roots
     String parentPath = fs instanceof LocalFileSystem ? PathUtil.getParentPath(rootPath) : "";
     if (!parentPath.isEmpty()) {
       FileAttributes parentAttributes = loadAttributes(fs, parentPath);
@@ -1332,8 +1379,9 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     }
 
     int rootId = FSRecords.findRootRecord(rootUrl);
+    FSRecords.loadRootData(rootId, path, fs);
 
-    int rootNameId = FileNameCache.storeName(rootName.toString());
+    int rootNameId = FileNameCache.storeName(rootName);
     boolean mark;
     VirtualFileSystemEntry newRoot;
     synchronized (myRoots) {
@@ -1341,7 +1389,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
       if (root != null) return root;
 
       try {
-        String pathBeforeSlash = StringUtil.trimTrailing(rootPath, '/');
+        String pathBeforeSlash = UriUtil.trimTrailingSlashes(rootPath);
         newRoot = new FsRoot(rootId, rootNameId, myVfsData, fs, pathBeforeSlash, attributes, path);
       }
       catch (VfsData.FileAlreadyCreatedException e) {
@@ -1356,7 +1404,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
                                    " path='" + path + "'; fs=" + fs + "; rootUrl='" + rootUrl + "'", e);
       }
       incStructuralModificationCount();
-      mark = writeAttributesToRecord(rootId, null, 0, rootName, fs, attributes) != -1;
+      mark = writeAttributesToRecord(rootId, null, 0, rootName, fs, attributes, false) != -1;
 
       myRoots.put(rootUrl, newRoot);
       myIdToDirCache.cacheDir(newRoot);
@@ -1372,14 +1420,10 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
   }
 
   private static @Nullable FileAttributes loadAttributes(@NotNull NewVirtualFileSystem fs, @NotNull String path) {
-    StubVirtualFile file = new StubVirtualFile(fs) {
-      @Override
-      public @NotNull String getPath() { return path; }
-
-      @Override
-      public @Nullable VirtualFile getParent() { return null; }
-    };
-    return fs.getAttributes(file);
+    return fs.getAttributes(new StubVirtualFile(fs) {
+      @Override public @NotNull String getPath() { return path; }
+      @Override public @Nullable VirtualFile getParent() { return null; }
+    });
   }
 
   @Override
@@ -1498,6 +1542,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     }
   }
 
+  @ApiStatus.Internal
   public static void executeChangeCaseSensitivity(@NotNull VirtualFile file, @NotNull FileAttributes.CaseSensitivity newCaseSensitivity) {
     VirtualDirectoryImpl directory = (VirtualDirectoryImpl)file;
     setFlag(directory, Flags.CHILDREN_CASE_SENSITIVE, newCaseSensitivity == FileAttributes.CaseSensitivity.SENSITIVE);
@@ -1534,35 +1579,59 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
     VirtualDirectoryImpl dir = (VirtualDirectoryImpl)parent;
     VirtualFileSystemEntry child = dir.createChild(name, childId, dir.getFileSystem(), fileAttributesToFlags(childData.first), isEmptyDirectory);
     if (isEmptyDirectory) {
-      // when creating empty directory we need to make sure every file created inside will fire "file created" event
-      // in order to virtual file pointer manager get those events to update its pointers properly
-      // (because currently VirtualFilePointerManager ignores empty directory creation events for performance reasons)
+      // When creating an empty directory, we need to make sure every file created inside will fire a "file created" event,
+      // in order to `VirtualFilePointerManager` get those events to update its pointers properly
+      // (because currently it ignores empty directory creation events for performance reasons).
       setChildrenCached(childId);
     }
     dir.addChild(child);
     incStructuralModificationCount();
   }
 
-  private static @NotNull ChildInfo makeChildRecord(@NotNull VirtualFile parentFile,
-                                                    int parentId,
-                                                    @NotNull CharSequence name,
-                                                    @NotNull Pair<@NotNull FileAttributes, String> childData,
-                                                    @NotNull NewVirtualFileSystem fs,
-                                                    ChildInfo @Nullable [] children) {
-    int childId = FSRecords.createRecord();
+  @NotNull
+  private static ChildInfo makeChildRecord(@NotNull VirtualFile parentFile,
+                                           int parentId,
+                                           @NotNull CharSequence name,
+                                           @NotNull Pair<@NotNull FileAttributes, String> childData,
+                                           @NotNull NewVirtualFileSystem fs,
+                                           @NotNull ChildInfo @Nullable [] children) {
     FileAttributes attributes = childData.first;
-    int nameId = writeAttributesToRecord(childId, parentFile, parentId, name, fs, attributes);
+
+    int childId = FSRecords.createRecord();
+    int nameId = writeAttributesToRecord(childId, parentFile, parentId, name, fs, attributes, true);
+
     assert childId > 0 : childId;
+    if (attributes.isDirectory()) {
+      FSRecords.loadDirectoryData(childId, childPath(parentFile, name), fs);
+    }
     return new ChildInfoImpl(childId, nameId, attributes, children, childData.second);
+  }
+
+  private static @NotNull String childPath(@NotNull VirtualFile parentFile, @NotNull CharSequence name) {
+    final StringBuilder sb = new StringBuilder(parentFile.getPath());
+    if (!StringUtil.endsWithChar(sb, '/')) {
+      sb.append('/');
+    }
+    sb.append(name);
+    return sb.toString();
+  }
+
+  public static void moveChildrenRecords(int fromParentId, int toParentId) {
+    if (fromParentId == -1) return;
+
+    for (ChildInfo childToMove : FSRecords.list(fromParentId).children) {
+      FSRecords.setParent(childToMove.getId(), toParentId);
+    }
+    FSRecords.moveChildren(fromParentId, toParentId);
   }
 
   // return File attributes, symlink target
   // null when file not found
   private static @Nullable Pair<@NotNull FileAttributes, String> getChildData(@NotNull NewVirtualFileSystem fs,
-                                                                    @NotNull VirtualFile parent,
-                                                                    @NotNull String name,
-                                                                    @Nullable FileAttributes attributes,
-                                                                    @Nullable String symlinkTarget) {
+                                                                              @NotNull VirtualFile parent,
+                                                                              @NotNull String name,
+                                                                              @Nullable FileAttributes attributes,
+                                                                              @Nullable String symlinkTarget) {
     if (attributes == null) {
       FakeVirtualFile virtualFile = new FakeVirtualFile(parent, name);
       attributes = fs.getAttributes(virtualFile);
@@ -1626,7 +1695,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
 
   private static void executeRename(@NotNull VirtualFile file, @NotNull String newName) {
     int id = getFileId(file);
-    FSRecords.setName(id, newName);
+    FSRecords.setName(id, newName, ((VirtualFileSystemEntry)file).getNameId());
     ((VirtualFileSystemEntry)file).setNewName(newName);
   }
 
@@ -1702,7 +1771,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
   }
 
   @Override
-  public String getName(int id) {
+  public @NotNull String getName(int id) {
     assert id > 0;
     return FSRecords.getName(id);
   }
@@ -1742,7 +1811,7 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
   }
 
   @TestOnly
-  @NotNull Collection<VirtualFileSystemEntry> getDirCache() {
+  @NotNull Collection<? extends VirtualFileSystemEntry> getDirCache() {
     return myIdToDirCache.getCachedDirs();
   }
 
@@ -1753,8 +1822,13 @@ public final class PersistentFSImpl extends PersistentFS implements Disposable {
                                  attributes.isHidden(), sensitivity != FileAttributes.CaseSensitivity.UNKNOWN, isCaseSensitive);
   }
 
-  public static @Attributes int fileAttributesToFlags(boolean isDirectory, boolean isWritable, boolean isSymLink, boolean isSpecial,
-                                                      boolean isHidden, boolean isChildrenCaseSensitivityCached, boolean areChildrenCaseSensitive) {
+  public static @Attributes int fileAttributesToFlags(boolean isDirectory,
+                                                      boolean isWritable,
+                                                      boolean isSymLink,
+                                                      boolean isSpecial,
+                                                      boolean isHidden,
+                                                      boolean isChildrenCaseSensitivityCached,
+                                                      boolean areChildrenCaseSensitive) {
     return (isDirectory ? Flags.IS_DIRECTORY : 0) |
            (isWritable ? 0 : Flags.IS_READ_ONLY) |
            (isSymLink ? Flags.IS_SYMLINK : 0) |
