@@ -1,21 +1,25 @@
-// Copyright 2000-2018 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.java.decompiler.modules.decompiler;
 
 import org.jetbrains.java.decompiler.code.CodeConstants;
 import org.jetbrains.java.decompiler.code.Instruction;
 import org.jetbrains.java.decompiler.code.InstructionSequence;
 import org.jetbrains.java.decompiler.code.cfg.BasicBlock;
+import org.jetbrains.java.decompiler.main.ClassesProcessor;
 import org.jetbrains.java.decompiler.main.DecompilerContext;
-import org.jetbrains.java.decompiler.util.TextBuffer;
 import org.jetbrains.java.decompiler.main.collectors.BytecodeMappingTracer;
+import org.jetbrains.java.decompiler.modules.decompiler.StatEdge.EdgeType;
 import org.jetbrains.java.decompiler.modules.decompiler.exps.*;
 import org.jetbrains.java.decompiler.modules.decompiler.sforms.DirectGraph;
 import org.jetbrains.java.decompiler.modules.decompiler.sforms.DirectNode;
 import org.jetbrains.java.decompiler.modules.decompiler.sforms.FlattenStatementsHelper;
 import org.jetbrains.java.decompiler.modules.decompiler.sforms.FlattenStatementsHelper.FinallyPathWrapper;
 import org.jetbrains.java.decompiler.modules.decompiler.stats.*;
+import org.jetbrains.java.decompiler.modules.decompiler.stats.Statement.StatementType;
+import org.jetbrains.java.decompiler.modules.decompiler.typeann.TypeAnnotationWriteHelper;
 import org.jetbrains.java.decompiler.modules.decompiler.vars.VarProcessor;
 import org.jetbrains.java.decompiler.struct.StructClass;
+import org.jetbrains.java.decompiler.struct.StructTypePathEntry;
 import org.jetbrains.java.decompiler.struct.attr.StructBootstrapMethodsAttribute;
 import org.jetbrains.java.decompiler.struct.attr.StructGeneralAttribute;
 import org.jetbrains.java.decompiler.struct.consts.ConstantPool;
@@ -23,24 +27,26 @@ import org.jetbrains.java.decompiler.struct.consts.LinkConstant;
 import org.jetbrains.java.decompiler.struct.consts.PooledConstant;
 import org.jetbrains.java.decompiler.struct.consts.PrimitiveConstant;
 import org.jetbrains.java.decompiler.struct.gen.MethodDescriptor;
+import org.jetbrains.java.decompiler.struct.gen.Type;
 import org.jetbrains.java.decompiler.struct.gen.VarType;
-import org.jetbrains.java.decompiler.util.TextUtil;
+import org.jetbrains.java.decompiler.util.TextBuffer;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class ExprProcessor implements CodeConstants {
+  @SuppressWarnings("SpellCheckingInspection")
   public static final String UNDEFINED_TYPE_STRING = "<undefinedtype>";
   public static final String UNKNOWN_TYPE_STRING = "<unknown>";
   public static final String NULL_TYPE_STRING = "<null>";
 
-  private static final Map<Integer, Integer> mapConsts = new HashMap<>();
-  static {
-    mapConsts.put(opc_arraylength, FunctionExprent.FUNCTION_ARRAY_LENGTH);
-    mapConsts.put(opc_checkcast, FunctionExprent.FUNCTION_CAST);
-    mapConsts.put(opc_instanceof, FunctionExprent.FUNCTION_INSTANCEOF);
-  }
+  private static final Map<Integer, Integer> functionMap = Map.of(
+    opc_arraylength, FunctionExprent.FUNCTION_ARRAY_LENGTH,
+    opc_checkcast, FunctionExprent.FUNCTION_CAST,
+    opc_instanceof, FunctionExprent.FUNCTION_INSTANCEOF
+  );
 
-  private static final VarType[] consts = {
+  private static final VarType[] constants = {
     VarType.VARTYPE_INT, VarType.VARTYPE_FLOAT, VarType.VARTYPE_LONG, VarType.VARTYPE_DOUBLE, VarType.VARTYPE_CLASS, VarType.VARTYPE_STRING
   };
 
@@ -94,6 +100,8 @@ public class ExprProcessor implements CodeConstants {
 
   private static final String[] typeNames = {"byte", "char", "double", "float", "int", "long", "short", "boolean"};
 
+  private static final String EMPTY_ENTRY_POINTS_KEY = "-";
+
   private final MethodDescriptor methodDescriptor;
   private final VarProcessor varProcessor;
 
@@ -103,28 +111,28 @@ public class ExprProcessor implements CodeConstants {
   }
 
   public void processStatement(RootStatement root, StructClass cl) {
-    FlattenStatementsHelper flatthelper = new FlattenStatementsHelper();
-    DirectGraph dgraph = flatthelper.buildDirectGraph(root);
+    FlattenStatementsHelper flattenHelper = new FlattenStatementsHelper();
+    DirectGraph dgraph = flattenHelper.buildDirectGraph(root);
 
     // collect finally entry points
     Set<String> setFinallyShortRangeEntryPoints = new HashSet<>();
-    for (List<FinallyPathWrapper> lst : dgraph.mapShortRangeFinallyPaths.values()) {
-      for (FinallyPathWrapper finwrap : lst) {
-        setFinallyShortRangeEntryPoints.add(finwrap.entry);
+    for (List<FinallyPathWrapper> wrappers : dgraph.mapShortRangeFinallyPaths.values()) {
+      for (FinallyPathWrapper wrapper : wrappers) {
+        setFinallyShortRangeEntryPoints.add(wrapper.entry);
       }
     }
 
     Set<String> setFinallyLongRangeEntryPaths = new HashSet<>();
-    for (List<FinallyPathWrapper> lst : dgraph.mapLongRangeFinallyPaths.values()) {
-      for (FinallyPathWrapper finwrap : lst) {
-        setFinallyLongRangeEntryPaths.add(finwrap.source + "##" + finwrap.entry);
+    for (List<FinallyPathWrapper> wrappers : dgraph.mapLongRangeFinallyPaths.values()) {
+      for (FinallyPathWrapper wrapper : wrappers) {
+        setFinallyLongRangeEntryPaths.add(wrapper.source + "##" + wrapper.entry);
       }
     }
 
     Map<String, VarExprent> mapCatch = new HashMap<>();
-    collectCatchVars(root, flatthelper, mapCatch);
+    collectCatchVars(root, flattenHelper, mapCatch);
 
-    Map<DirectNode, Map<String, PrimitiveExprsList>> mapData = new HashMap<>();
+    Map<DirectNode, Map<String, PrimitiveExpressionList>> mapData = new HashMap<>();
 
     LinkedList<DirectNode> stack = new LinkedList<>();
     LinkedList<LinkedList<String>> stackEntryPoint = new LinkedList<>();
@@ -132,38 +140,37 @@ public class ExprProcessor implements CodeConstants {
     stack.add(dgraph.first);
     stackEntryPoint.add(new LinkedList<>());
 
-    Map<String, PrimitiveExprsList> map = new HashMap<>();
-    map.put(null, new PrimitiveExprsList());
+    Map<String, PrimitiveExpressionList> map = new HashMap<>();
+    map.put(EMPTY_ENTRY_POINTS_KEY, new PrimitiveExpressionList());
     mapData.put(dgraph.first, map);
 
     while (!stack.isEmpty()) {
-
       DirectNode node = stack.removeFirst();
-      LinkedList<String> entrypoints = stackEntryPoint.removeFirst();
+      LinkedList<String> entryPoints = stackEntryPoint.removeFirst();
 
-      PrimitiveExprsList data;
+      PrimitiveExpressionList data;
       if (mapCatch.containsKey(node.id)) {
         data = getExpressionData(mapCatch.get(node.id));
       }
       else {
-        data = mapData.get(node).get(buildEntryPointKey(entrypoints));
+        data = mapData.get(node).get(buildEntryPointKey(entryPoints));
       }
 
       BasicBlockStatement block = node.block;
       if (block != null) {
         processBlock(block, data, cl);
-        block.setExprents(data.getLstExprents());
+        block.setExprents(data.getExpressions());
       }
 
-      String currentEntrypoint = entrypoints.isEmpty() ? null : entrypoints.getLast();
+      String currentEntrypoint = entryPoints.isEmpty() ? null : entryPoints.getLast();
 
-      for (DirectNode nd : node.succs) {
-
+      for (DirectNode nd : node.successors) {
         boolean isSuccessor = true;
+
         if (currentEntrypoint != null && dgraph.mapLongRangeFinallyPaths.containsKey(node.id)) {
           isSuccessor = false;
-          for (FinallyPathWrapper finwraplong : dgraph.mapLongRangeFinallyPaths.get(node.id)) {
-            if (finwraplong.source.equals(currentEntrypoint) && finwraplong.destination.equals(nd.id)) {
+          for (FinallyPathWrapper wrapper : dgraph.mapLongRangeFinallyPaths.get(node.id)) {
+            if (wrapper.source.equals(currentEntrypoint) && wrapper.destination.equals(nd.id)) {
               isSuccessor = true;
               break;
             }
@@ -171,33 +178,30 @@ public class ExprProcessor implements CodeConstants {
         }
 
         if (isSuccessor) {
-          Map<String, PrimitiveExprsList> mapSucc = mapData.computeIfAbsent(nd, k -> new HashMap<>());
-          LinkedList<String> ndentrypoints = new LinkedList<>(entrypoints);
+          Map<String, PrimitiveExpressionList> successorMap = mapData.computeIfAbsent(nd, k -> new HashMap<>());
+          LinkedList<String> nodeEntryPoints = new LinkedList<>(entryPoints);
 
           if (setFinallyLongRangeEntryPaths.contains(node.id + "##" + nd.id)) {
-            ndentrypoints.addLast(node.id);
+            nodeEntryPoints.addLast(node.id);
           }
           else if (!setFinallyShortRangeEntryPoints.contains(nd.id) && dgraph.mapLongRangeFinallyPaths.containsKey(node.id)) {
-            ndentrypoints.removeLast(); // currentEntrypoint should
-            // not be null at this point
+            nodeEntryPoints.removeLast(); // currentEntrypoint should not be null at this point
           }
 
           // handling of entry point loops
-          int succ_entry_index = ndentrypoints.indexOf(nd.id);
-          if (succ_entry_index >=
-              0) { // we are in a loop (e.g. continue in a finally block), drop all entry points in the list beginning with succ_entry_index
-            for (int elements_to_remove = ndentrypoints.size() - succ_entry_index; elements_to_remove > 0; elements_to_remove--) {
-              ndentrypoints.removeLast();
+          int successorEntryIndex = nodeEntryPoints.indexOf(nd.id);
+          if (successorEntryIndex >= 0) {
+            // we are in a loop (e.g. continue in a 'finally' block): drop all entry points in the list beginning with successor index
+            for (int elementsToRemove = nodeEntryPoints.size() - successorEntryIndex; elementsToRemove > 0; elementsToRemove--) {
+              nodeEntryPoints.removeLast();
             }
           }
 
-          String ndentrykey = buildEntryPointKey(ndentrypoints);
-          if (!mapSucc.containsKey(ndentrykey)) {
-
-            mapSucc.put(ndentrykey, copyVarExprents(data.copyStack()));
-
+          String nodeEntryKey = buildEntryPointKey(nodeEntryPoints);
+          if (!successorMap.containsKey(nodeEntryKey)) {
+            successorMap.put(nodeEntryKey, data.copy());
             stack.add(nd);
-            stackEntryPoint.add(ndentrypoints);
+            stackEntryPoint.add(nodeEntryPoints);
           }
         }
       }
@@ -207,43 +211,28 @@ public class ExprProcessor implements CodeConstants {
   }
 
   // FIXME: Ugly code, to be rewritten. A tuple class is needed.
-  private static String buildEntryPointKey(LinkedList<String> entrypoints) {
-    if (entrypoints.isEmpty()) {
-      return null;
+  private static String buildEntryPointKey(LinkedList<String> entryPoints) {
+    if (entryPoints.isEmpty()) {
+      return EMPTY_ENTRY_POINTS_KEY;
+    }
+    else if (entryPoints.size() == 1) {
+      return entryPoints.getFirst();
     }
     else {
-      StringBuilder buffer = new StringBuilder();
-      for (String point : entrypoints) {
-        buffer.append(point);
-        buffer.append(":");
-      }
-      return buffer.toString();
-    }
-  }
-
-  private static PrimitiveExprsList copyVarExprents(PrimitiveExprsList data) {
-    ExprentStack stack = data.getStack();
-    copyEntries(stack);
-    return data;
-  }
-
-  public static void copyEntries(List<Exprent> stack) {
-    for (int i = 0; i < stack.size(); i++) {
-      stack.set(i, stack.get(i).copy());
+      return String.join(":", entryPoints);
     }
   }
 
   private static void collectCatchVars(Statement stat, FlattenStatementsHelper flatthelper, Map<String, VarExprent> map) {
-
     List<VarExprent> lst = null;
 
-    if (stat.type == Statement.TYPE_CATCHALL) {
+    if (stat.type == StatementType.CATCH_ALL) {
       CatchAllStatement catchall = (CatchAllStatement)stat;
       if (!catchall.isFinally()) {
         lst = catchall.getVars();
       }
     }
-    else if (stat.type == Statement.TYPE_TRYCATCH) {
+    else if (stat.type == StatementType.TRY_CATCH) {
       lst = ((CatchStatement)stat).getVars();
     }
 
@@ -266,63 +255,59 @@ public class ExprProcessor implements CodeConstants {
     }
   }
 
-  public void processBlock(BasicBlockStatement stat, PrimitiveExprsList data, StructClass cl) {
-
+  public void processBlock(BasicBlockStatement stat, PrimitiveExpressionList data, StructClass cl) {
     ConstantPool pool = cl.getPool();
     StructBootstrapMethodsAttribute bootstrap = cl.getAttribute(StructGeneralAttribute.ATTRIBUTE_BOOTSTRAP_METHODS);
-
     BasicBlock block = stat.getBlock();
-
-    ExprentStack stack = data.getStack();
-    List<Exprent> exprlist = data.getLstExprents();
-
+    ExpressionStack stack = data.getStack();
+    List<Exprent> exprList = data.getExpressions();
     InstructionSequence seq = block.getSeq();
 
     for (int i = 0; i < seq.length(); i++) {
-
       Instruction instr = seq.getInstr(i);
-      Integer bytecode_offset = block.getOldOffset(i);
-      Set<Integer> bytecode_offsets = bytecode_offset >= 0 ? Collections.singleton(bytecode_offset) : null;
+      Integer offset = block.getOriginalOffset(i);
+      Set<Integer> offsets = offset >= 0 ? Set.of(offset) : null;
 
       switch (instr.opcode) {
         case opc_aconst_null:
-          pushEx(stack, exprlist, new ConstExprent(VarType.VARTYPE_NULL, null, bytecode_offsets));
+          pushEx(stack, exprList, new ConstExprent(VarType.VARTYPE_NULL, null, offsets));
           break;
         case opc_bipush:
         case opc_sipush:
-          pushEx(stack, exprlist, new ConstExprent(instr.operand(0), true, bytecode_offsets));
+          pushEx(stack, exprList, new ConstExprent(instr.operand(0), true, offsets));
           break;
         case opc_lconst_0:
         case opc_lconst_1:
-          pushEx(stack, exprlist, new ConstExprent(VarType.VARTYPE_LONG, (long)(instr.opcode - opc_lconst_0), bytecode_offsets));
+          pushEx(stack, exprList, new ConstExprent(VarType.VARTYPE_LONG, (long)(instr.opcode - opc_lconst_0), offsets));
           break;
         case opc_fconst_0:
         case opc_fconst_1:
         case opc_fconst_2:
-          pushEx(stack, exprlist, new ConstExprent(VarType.VARTYPE_FLOAT, (float)(instr.opcode - opc_fconst_0), bytecode_offsets));
+          pushEx(stack, exprList, new ConstExprent(VarType.VARTYPE_FLOAT, (float)(instr.opcode - opc_fconst_0), offsets));
           break;
         case opc_dconst_0:
         case opc_dconst_1:
-          pushEx(stack, exprlist, new ConstExprent(VarType.VARTYPE_DOUBLE, (double)(instr.opcode - opc_dconst_0), bytecode_offsets));
+          pushEx(stack, exprList, new ConstExprent(VarType.VARTYPE_DOUBLE, (double)(instr.opcode - opc_dconst_0), offsets));
           break;
         case opc_ldc:
         case opc_ldc_w:
-        case opc_ldc2_w:
+        case opc_ldc2_w: {
           PooledConstant cn = pool.getConstant(instr.operand(0));
           if (cn instanceof PrimitiveConstant) {
-            pushEx(stack, exprlist, new ConstExprent(consts[cn.type - CONSTANT_Integer], ((PrimitiveConstant)cn).value, bytecode_offsets));
+            pushEx(stack, exprList, new ConstExprent(constants[cn.type - CONSTANT_Integer], ((PrimitiveConstant)cn).value, offsets));
           }
           else if (cn instanceof LinkConstant) {
             //TODO: for now treat Links as Strings
-            pushEx(stack, exprlist, new ConstExprent(VarType.VARTYPE_STRING, ((LinkConstant)cn).elementname, bytecode_offsets));
+            pushEx(stack, exprList, new ConstExprent(VarType.VARTYPE_STRING, ((LinkConstant)cn).elementname, offsets));
           }
           break;
+        }
         case opc_iload:
         case opc_lload:
         case opc_fload:
         case opc_dload:
         case opc_aload:
-          pushEx(stack, exprlist, new VarExprent(instr.operand(0), varTypes[instr.opcode - opc_iload], varProcessor, bytecode_offset));
+          pushEx(stack, exprList, new VarExprent(instr.operand(0), varTypes[instr.opcode - opc_iload], varProcessor, offset));
           break;
         case opc_iaload:
         case opc_laload:
@@ -331,31 +316,24 @@ public class ExprProcessor implements CodeConstants {
         case opc_aaload:
         case opc_baload:
         case opc_caload:
-        case opc_saload:
+        case opc_saload: {
           Exprent index = stack.pop();
           Exprent arr = stack.pop();
-
-          VarType vartype = null;
-          switch (instr.opcode) {
-            case opc_laload:
-              vartype = VarType.VARTYPE_LONG;
-              break;
-            case opc_daload:
-              vartype = VarType.VARTYPE_DOUBLE;
-          }
-          pushEx(stack, exprlist, new ArrayExprent(arr, index, arrTypes[instr.opcode - opc_iaload], bytecode_offsets), vartype);
+          VarType type = instr.opcode == opc_laload ? VarType.VARTYPE_LONG : instr.opcode == opc_daload ? VarType.VARTYPE_DOUBLE : null;
+          pushEx(stack, exprList, new ArrayExprent(arr, index, arrTypes[instr.opcode - opc_iaload], offsets), type);
           break;
+        }
         case opc_istore:
         case opc_lstore:
         case opc_fstore:
         case opc_dstore:
-        case opc_astore:
-          Exprent expr = stack.pop();
-          int varindex = instr.operand(0);
-          AssignmentExprent assign = new AssignmentExprent(
-            new VarExprent(varindex, varTypes[instr.opcode - opc_istore], varProcessor, nextMeaningfulOffset(block, i)), expr, bytecode_offsets);
-          exprlist.add(assign);
+        case opc_astore: {
+          Exprent value = stack.pop();
+          int varIndex = instr.operand(0);
+          VarExprent left = new VarExprent(varIndex, varTypes[instr.opcode - opc_istore], varProcessor, nextMeaningfulOffset(block, i));
+          exprList.add(new AssignmentExprent(left, value, offsets));
           break;
+        }
         case opc_iastore:
         case opc_lastore:
         case opc_fastore:
@@ -363,15 +341,14 @@ public class ExprProcessor implements CodeConstants {
         case opc_aastore:
         case opc_bastore:
         case opc_castore:
-        case opc_sastore:
+        case opc_sastore: {
           Exprent value = stack.pop();
-          Exprent index_store = stack.pop();
-          Exprent arr_store = stack.pop();
-          AssignmentExprent arrassign =
-            new AssignmentExprent(new ArrayExprent(arr_store, index_store, arrTypes[instr.opcode - opc_iastore], bytecode_offsets), value,
-                                  bytecode_offsets);
-          exprlist.add(arrassign);
+          Exprent index = stack.pop();
+          Exprent array = stack.pop();
+          ArrayExprent left = new ArrayExprent(array, index, arrTypes[instr.opcode - opc_iastore], offsets);
+          exprList.add(new AssignmentExprent(left, value, offsets));
           break;
+        }
         case opc_iadd:
         case opc_ladd:
         case opc_fadd:
@@ -392,7 +369,7 @@ public class ExprProcessor implements CodeConstants {
         case opc_lrem:
         case opc_frem:
         case opc_drem:
-          pushEx(stack, exprlist, new FunctionExprent(func1[(instr.opcode - opc_iadd) / 4], stack, bytecode_offsets));
+          pushEx(stack, exprList, new FunctionExprent(func1[(instr.opcode - opc_iadd) / 4], stack, offsets));
           break;
         case opc_ishl:
         case opc_lshl:
@@ -406,21 +383,21 @@ public class ExprProcessor implements CodeConstants {
         case opc_lor:
         case opc_ixor:
         case opc_lxor:
-          pushEx(stack, exprlist, new FunctionExprent(func2[(instr.opcode - opc_ishl) / 2], stack, bytecode_offsets));
+          pushEx(stack, exprList, new FunctionExprent(func2[(instr.opcode - opc_ishl) / 2], stack, offsets));
           break;
         case opc_ineg:
         case opc_lneg:
         case opc_fneg:
         case opc_dneg:
-          pushEx(stack, exprlist, new FunctionExprent(FunctionExprent.FUNCTION_NEG, stack, bytecode_offsets));
+          pushEx(stack, exprList, new FunctionExprent(FunctionExprent.FUNCTION_NEG, stack, offsets));
           break;
-        case opc_iinc:
-          VarExprent vevar = new VarExprent(instr.operand(0), VarType.VARTYPE_INT, varProcessor);
-          exprlist.add(new AssignmentExprent(vevar, new FunctionExprent(
-            instr.operand(1) < 0 ? FunctionExprent.FUNCTION_SUB : FunctionExprent.FUNCTION_ADD, Arrays
-            .asList(vevar.copy(), new ConstExprent(VarType.VARTYPE_INT, Math.abs(instr.operand(1)), null)),
-            bytecode_offsets), bytecode_offsets));
+        case opc_iinc: {
+          VarExprent varExpr = new VarExprent(instr.operand(0), VarType.VARTYPE_INT, varProcessor);
+          int type = instr.operand(1) < 0 ? FunctionExprent.FUNCTION_SUB : FunctionExprent.FUNCTION_ADD;
+          List<Exprent> operands = Arrays.asList(varExpr.copy(), new ConstExprent(VarType.VARTYPE_INT, Math.abs(instr.operand(1)), null));
+          exprList.add(new AssignmentExprent(varExpr, new FunctionExprent(type, operands, offsets), offsets));
           break;
+        }
         case opc_i2l:
         case opc_i2f:
         case opc_i2d:
@@ -436,14 +413,14 @@ public class ExprProcessor implements CodeConstants {
         case opc_i2b:
         case opc_i2c:
         case opc_i2s:
-          pushEx(stack, exprlist, new FunctionExprent(func3[instr.opcode - opc_i2l], stack, bytecode_offsets));
+          pushEx(stack, exprList, new FunctionExprent(func3[instr.opcode - opc_i2l], stack, offsets));
           break;
         case opc_lcmp:
         case opc_fcmpl:
         case opc_fcmpg:
         case opc_dcmpl:
         case opc_dcmpg:
-          pushEx(stack, exprlist, new FunctionExprent(func4[instr.opcode - opc_lcmp], stack, bytecode_offsets));
+          pushEx(stack, exprList, new FunctionExprent(func4[instr.opcode - opc_lcmp], stack, offsets));
           break;
         case opc_ifeq:
         case opc_ifne:
@@ -451,7 +428,7 @@ public class ExprProcessor implements CodeConstants {
         case opc_ifge:
         case opc_ifgt:
         case opc_ifle:
-          exprlist.add(new IfExprent(negIfs[func5[instr.opcode - opc_ifeq]], stack, bytecode_offsets));
+          exprList.add(new IfExprent(negIfs[func5[instr.opcode - opc_ifeq]], stack, offsets));
           break;
         case opc_if_icmpeq:
         case opc_if_icmpne:
@@ -461,15 +438,15 @@ public class ExprProcessor implements CodeConstants {
         case opc_if_icmple:
         case opc_if_acmpeq:
         case opc_if_acmpne:
-          exprlist.add(new IfExprent(negIfs[func6[instr.opcode - opc_if_icmpeq]], stack, bytecode_offsets));
+          exprList.add(new IfExprent(negIfs[func6[instr.opcode - opc_if_icmpeq]], stack, offsets));
           break;
         case opc_ifnull:
         case opc_ifnonnull:
-          exprlist.add(new IfExprent(negIfs[func7[instr.opcode - opc_ifnull]], stack, bytecode_offsets));
+          exprList.add(new IfExprent(negIfs[func7[instr.opcode - opc_ifnull]], stack, offsets));
           break;
         case opc_tableswitch:
         case opc_lookupswitch:
-          exprlist.add(new SwitchExprent(stack.pop(), bytecode_offsets));
+          exprList.add(new SwitchExprent(stack.pop(), offsets));
           break;
         case opc_ireturn:
         case opc_lreturn:
@@ -478,34 +455,32 @@ public class ExprProcessor implements CodeConstants {
         case opc_areturn:
         case opc_return:
         case opc_athrow:
-          exprlist.add(new ExitExprent(instr.opcode == opc_athrow ? ExitExprent.EXIT_THROW : ExitExprent.EXIT_RETURN,
+          exprList.add(new ExitExprent(instr.opcode == opc_athrow ? ExitExprent.EXIT_THROW : ExitExprent.EXIT_RETURN,
                                        instr.opcode == opc_return ? null : stack.pop(),
                                        instr.opcode == opc_athrow ? null : methodDescriptor.ret,
-                                       bytecode_offsets));
+                                       offsets));
           break;
         case opc_monitorenter:
         case opc_monitorexit:
-          exprlist.add(new MonitorExprent(func8[instr.opcode - opc_monitorenter], stack.pop(), bytecode_offsets));
+          exprList.add(new MonitorExprent(func8[instr.opcode - opc_monitorenter], stack.pop(), offsets));
           break;
         case opc_checkcast:
         case opc_instanceof:
           stack.push(new ConstExprent(new VarType(pool.getPrimitiveConstant(instr.operand(0)).getString(), true), null, null));
         case opc_arraylength:
-          pushEx(stack, exprlist, new FunctionExprent(mapConsts.get(instr.opcode), stack, bytecode_offsets));
+          pushEx(stack, exprList, new FunctionExprent(functionMap.get(instr.opcode), stack, offsets));
           break;
         case opc_getstatic:
         case opc_getfield:
-          pushEx(stack, exprlist,
-                 new FieldExprent(pool.getLinkConstant(instr.operand(0)), instr.opcode == opc_getstatic ? null : stack.pop(),
-                                  bytecode_offsets));
+          pushEx(stack, exprList,
+                 new FieldExprent(pool.getLinkConstant(instr.operand(0)), instr.opcode == opc_getstatic ? null : stack.pop(), offsets));
           break;
         case opc_putstatic:
         case opc_putfield:
           Exprent valfield = stack.pop();
           Exprent exprfield =
-            new FieldExprent(pool.getLinkConstant(instr.operand(0)), instr.opcode == opc_putstatic ? null : stack.pop(),
-                             bytecode_offsets);
-          exprlist.add(new AssignmentExprent(exprfield, valfield, bytecode_offsets));
+            new FieldExprent(pool.getLinkConstant(instr.operand(0)), instr.opcode == opc_putstatic ? null : stack.pop(), offsets);
+          exprList.add(new AssignmentExprent(exprfield, valfield, offsets));
           break;
         case opc_invokevirtual:
         case opc_invokespecial:
@@ -520,12 +495,12 @@ public class ExprProcessor implements CodeConstants {
               bootstrap_arguments = bootstrap.getMethodArguments(invoke_constant.index1);
             }
 
-            InvocationExprent exprinv = new InvocationExprent(instr.opcode, invoke_constant, bootstrap_arguments, stack, bytecode_offsets);
-            if (exprinv.getDescriptor().ret.type == CodeConstants.TYPE_VOID) {
-              exprlist.add(exprinv);
+            InvocationExprent exprinv = new InvocationExprent(instr.opcode, invoke_constant, bootstrap_arguments, stack, offsets);
+            if (exprinv.getDescriptor().ret.getType() == CodeConstants.TYPE_VOID) {
+              exprList.add(exprinv);
             }
             else {
-              pushEx(stack, exprlist, exprinv);
+              pushEx(stack, exprList, exprinv);
             }
           }
           break;
@@ -535,74 +510,74 @@ public class ExprProcessor implements CodeConstants {
           int dimensions = (instr.opcode == opc_new) ? 0 : (instr.opcode == opc_anewarray) ? 1 : instr.operand(1);
           VarType arrType = new VarType(pool.getPrimitiveConstant(instr.operand(0)).getString(), true);
           if (instr.opcode != opc_multianewarray) {
-            arrType = arrType.resizeArrayDim(arrType.arrayDim + dimensions);
+            arrType = arrType.resizeArrayDim(arrType.getArrayDim() + dimensions);
           }
-          pushEx(stack, exprlist, new NewExprent(arrType, stack, dimensions, bytecode_offsets));
+          pushEx(stack, exprList, new NewExprent(arrType, stack, dimensions, offsets));
           break;
         case opc_newarray:
-          pushEx(stack, exprlist, new NewExprent(new VarType(arrTypeIds[instr.operand(0) - 4], 1), stack, 1, bytecode_offsets));
+          pushEx(stack, exprList, new NewExprent(new VarType(arrTypeIds[instr.operand(0) - 4], 1), stack, 1, offsets));
           break;
         case opc_dup:
-          pushEx(stack, exprlist, stack.getByOffset(-1).copy());
+          pushEx(stack, exprList, stack.getByOffset(-1).copy());
           break;
         case opc_dup_x1:
-          insertByOffsetEx(-2, stack, exprlist, -1);
+          insertByOffsetEx(-2, stack, exprList, -1);
           break;
         case opc_dup_x2:
-          if (stack.getByOffset(-2).getExprType().stackSize == 2) {
-            insertByOffsetEx(-2, stack, exprlist, -1);
+          if (stack.getByOffset(-2).getExprType().getStackSize() == 2) {
+            insertByOffsetEx(-2, stack, exprList, -1);
           }
           else {
-            insertByOffsetEx(-3, stack, exprlist, -1);
+            insertByOffsetEx(-3, stack, exprList, -1);
           }
           break;
         case opc_dup2:
-          if (stack.getByOffset(-1).getExprType().stackSize == 2) {
-            pushEx(stack, exprlist, stack.getByOffset(-1).copy());
+          if (stack.getByOffset(-1).getExprType().getStackSize() == 2) {
+            pushEx(stack, exprList, stack.getByOffset(-1).copy());
           }
           else {
-            pushEx(stack, exprlist, stack.getByOffset(-2).copy());
-            pushEx(stack, exprlist, stack.getByOffset(-2).copy());
+            pushEx(stack, exprList, stack.getByOffset(-2).copy());
+            pushEx(stack, exprList, stack.getByOffset(-2).copy());
           }
           break;
         case opc_dup2_x1:
-          if (stack.getByOffset(-1).getExprType().stackSize == 2) {
-            insertByOffsetEx(-2, stack, exprlist, -1);
+          if (stack.getByOffset(-1).getExprType().getStackSize() == 2) {
+            insertByOffsetEx(-2, stack, exprList, -1);
           }
           else {
-            insertByOffsetEx(-3, stack, exprlist, -2);
-            insertByOffsetEx(-3, stack, exprlist, -1);
+            insertByOffsetEx(-3, stack, exprList, -2);
+            insertByOffsetEx(-3, stack, exprList, -1);
           }
           break;
         case opc_dup2_x2:
-          if (stack.getByOffset(-1).getExprType().stackSize == 2) {
-            if (stack.getByOffset(-2).getExprType().stackSize == 2) {
-              insertByOffsetEx(-2, stack, exprlist, -1);
+          if (stack.getByOffset(-1).getExprType().getStackSize() == 2) {
+            if (stack.getByOffset(-2).getExprType().getStackSize() == 2) {
+              insertByOffsetEx(-2, stack, exprList, -1);
             }
             else {
-              insertByOffsetEx(-3, stack, exprlist, -1);
+              insertByOffsetEx(-3, stack, exprList, -1);
             }
           }
           else {
-            if (stack.getByOffset(-3).getExprType().stackSize == 2) {
-              insertByOffsetEx(-3, stack, exprlist, -2);
-              insertByOffsetEx(-3, stack, exprlist, -1);
+            if (stack.getByOffset(-3).getExprType().getStackSize() == 2) {
+              insertByOffsetEx(-3, stack, exprList, -2);
+              insertByOffsetEx(-3, stack, exprList, -1);
             }
             else {
-              insertByOffsetEx(-4, stack, exprlist, -2);
-              insertByOffsetEx(-4, stack, exprlist, -1);
+              insertByOffsetEx(-4, stack, exprList, -2);
+              insertByOffsetEx(-4, stack, exprList, -1);
             }
           }
           break;
         case opc_swap:
-          insertByOffsetEx(-2, stack, exprlist, -1);
+          insertByOffsetEx(-2, stack, exprList, -1);
           stack.pop();
           break;
         case opc_pop:
           stack.pop();
           break;
         case opc_pop2:
-          if (stack.getByOffset(-1).getExprType().stackSize == 1) {
+          if (stack.getByOffset(-1).getExprType().getStackSize() == 1) {
             // Since value at the top of the stack is a value of category 1 (JVMS9 2.11.1)
             // we should remove one more item from the stack.
             // See JVMS9 pop2 chapter.
@@ -626,16 +601,22 @@ public class ExprProcessor implements CodeConstants {
         case opc_astore:
           continue;
       }
-      return block.getOldOffset(index);
+      return block.getOriginalOffset(index);
     }
+
+    List<BasicBlock> successors = block.getSuccessors();
+    if (successors.size() == 1) {
+      return successors.get(0).getOriginalOffset(0);
+    }
+
     return -1;
   }
 
-  private void pushEx(ExprentStack stack, List<Exprent> exprlist, Exprent exprent) {
+  private void pushEx(ExpressionStack stack, List<Exprent> exprlist, Exprent exprent) {
     pushEx(stack, exprlist, exprent, null);
   }
 
-  private void pushEx(ExprentStack stack, List<Exprent> exprlist, Exprent exprent, VarType vartype) {
+  private void pushEx(ExpressionStack stack, List<Exprent> exprlist, Exprent exprent, VarType vartype) {
     int varindex = VarExprent.STACK_BASE + stack.size();
     VarExprent var = new VarExprent(varindex, vartype == null ? exprent.getExprType() : vartype, varProcessor);
     var.setStack(true);
@@ -644,7 +625,7 @@ public class ExprProcessor implements CodeConstants {
     stack.push(var.copy());
   }
 
-  private void insertByOffsetEx(int offset, ExprentStack stack, List<Exprent> exprlist, int copyoffset) {
+  private void insertByOffsetEx(int offset, ExpressionStack stack, List<Exprent> exprlist, int copyoffset) {
 
     int base = VarExprent.STACK_BASE + stack.size();
 
@@ -669,56 +650,211 @@ public class ExprProcessor implements CodeConstants {
     }
   }
 
-  public static String getTypeName(VarType type) {
-    return getTypeName(type, true);
+  public static String getTypeName(VarType type, List<TypeAnnotationWriteHelper> typePathWriteHelper) {
+    return getTypeName(type, true, typePathWriteHelper);
   }
 
-  public static String getTypeName(VarType type, boolean getShort) {
-    int tp = type.type;
+  public static String getTypeName(VarType type, boolean getShort, List<TypeAnnotationWriteHelper> typeAnnWriteHelpers) {
+    int tp = type.getType();
+    StringBuilder sb = new StringBuilder();
+    typeAnnWriteHelpers = writeTypeAnnotationBeforeType(type, sb, typeAnnWriteHelpers);
     if (tp <= CodeConstants.TYPE_BOOLEAN) {
-      return typeNames[tp];
+      sb.append(typeNames[tp]);
+      return sb.toString();
     }
     else if (tp == CodeConstants.TYPE_UNKNOWN) {
-      return UNKNOWN_TYPE_STRING; // INFO: should not occur
+      sb.append(UNKNOWN_TYPE_STRING);
+      return sb.toString(); // INFO: should not occur
     }
     else if (tp == CodeConstants.TYPE_NULL) {
-      return NULL_TYPE_STRING; // INFO: should not occur
+      sb.append(NULL_TYPE_STRING);
+      return sb.toString(); // INFO: should not occur
     }
     else if (tp == CodeConstants.TYPE_VOID) {
-      return "void";
+      sb.append("void");
+      return sb.toString();
     }
     else if (tp == CodeConstants.TYPE_OBJECT) {
-      String ret = buildJavaClassName(type.value);
+      String ret;
       if (getShort) {
-        ret = DecompilerContext.getImportCollector().getShortName(ret);
+        ret = DecompilerContext.getImportCollector().getNestedName(type.getValue());
+      } else {
+        ret = buildJavaClassName(type.getValue());
       }
-
       if (ret == null) {
-        // FIXME: a warning should be logged
-        ret = UNDEFINED_TYPE_STRING;
+        return UNDEFINED_TYPE_STRING; // FIXME: a warning should be logged
       }
-      return ret;
+      List<String> nestedTypes = Arrays.asList(ret.split("\\."));
+      writeNestedClass(sb, type, nestedTypes, typeAnnWriteHelpers);
+      popNestedTypeAnnotation(typeAnnWriteHelpers);
+      return sb.toString();
     }
 
     throw new RuntimeException("invalid type");
   }
 
-  public static String getCastTypeName(VarType type) {
-    return getCastTypeName(type, true);
+  public static List<TypeAnnotationWriteHelper> writeTypeAnnotationBeforeType(
+    Type type,
+    StringBuilder sb,
+    List<TypeAnnotationWriteHelper> typeAnnWriteHelpers
+  ) {
+    return typeAnnWriteHelpers.stream().filter(typeAnnWriteHelper -> { // TODO remove duplicate
+      if (typeAnnWriteHelper.getAnnotation().isWrittenBeforeType(type)) {
+        typeAnnWriteHelper.writeTo(sb);
+        return false;
+      }
+      StructTypePathEntry pathEntry = typeAnnWriteHelper.getPaths().peek();
+      if (pathEntry != null
+          && pathEntry.getTypePathEntryKind() == StructTypePathEntry.Kind.NESTED.getId()
+          && type.isAnnotatable()
+      ) typeAnnWriteHelper.getPaths().pop();
+      return true;
+    }).collect(Collectors.toList());
   }
 
-  public static String getCastTypeName(VarType type, boolean getShort) {
-    StringBuilder s = new StringBuilder(getTypeName(type, getShort));
-    TextUtil.append(s, "[]", type.arrayDim);
-    return s.toString();
+  public static List<TypeAnnotationWriteHelper> writeNestedClass(
+    StringBuilder sb,
+    Type type,
+    List<String> nestedTypes,
+    List<TypeAnnotationWriteHelper> typeAnnWriteHelpers
+  ) {
+    List<ClassesProcessor.ClassNode> enclosingClasses = enclosingClassList();
+    StringBuilder curPathBldr = new StringBuilder(type.getValue().substring(0, type.getValue().lastIndexOf('/') + 1));
+    for (int i = 0; i < nestedTypes.size(); i++) {
+      String nestedType = nestedTypes.get(i);
+      boolean shouldWrite = true;
+      if (!enclosingClasses.isEmpty() && i != nestedTypes.size() - 1) {
+        String enclosingType = enclosingClasses.remove(0).simpleName;
+        shouldWrite = !nestedType.equals(enclosingType);
+      }
+      if (i == 0) { // first annotation can be written already
+        if (!sb.toString().isEmpty()) shouldWrite = true; // write if annotation exists
+      } else {
+        if (canWriteNestedTypeAnnotation(curPathBldr + nestedType + '$', nestedTypes.subList(i + 1, nestedTypes.size()))) {
+          List<TypeAnnotationWriteHelper> notWrittenTypeAnnotations = writeNestedTypeAnnotations(sb, typeAnnWriteHelpers);
+          shouldWrite |= (notWrittenTypeAnnotations.size() != typeAnnWriteHelpers.size());
+          typeAnnWriteHelpers = notWrittenTypeAnnotations;
+          if (i != nestedTypes.size() - 1) popNestedTypeAnnotation(typeAnnWriteHelpers);
+        }
+      }
+      if (shouldWrite) {
+        sb.append(nestedType);
+        curPathBldr.append(nestedType);
+        if (i != nestedTypes.size() - 1) {
+          curPathBldr.append('$');
+          sb.append('.');
+        }
+      }
+    }
+    return typeAnnWriteHelpers;
   }
 
-  public static PrimitiveExprsList getExpressionData(VarExprent var) {
-    PrimitiveExprsList prlst = new PrimitiveExprsList();
+  /**
+   * Nested type annotations can only be written when all types on the right of the currently annotated type don't reference a static class.
+   */
+  public static boolean canWriteNestedTypeAnnotation(String curPath, List<String> nestedTypes) {
+    if (nestedTypes.isEmpty()) return true;
+    String fullName = curPath + nestedTypes.get(0);
+    ClassesProcessor.ClassNode classNode = DecompilerContext.getClassProcessor().getMapRootClasses().get(fullName);
+    if (classNode == null) return false;
+    return (classNode.access & CodeConstants.ACC_STATIC) == 0 && canWriteNestedTypeAnnotation(fullName + "$", nestedTypes.subList(1, nestedTypes.size()));
+  }
+
+  public static List<ClassesProcessor.ClassNode> enclosingClassList() {
+    ClassesProcessor.ClassNode enclosingClass = (ClassesProcessor.ClassNode) DecompilerContext.getProperty(
+      DecompilerContext.CURRENT_CLASS_NODE
+    );
+    List<ClassesProcessor.ClassNode> enclosingClassList = new ArrayList<>(List.of(enclosingClass));
+    while (enclosingClass.parent != null) {
+      enclosingClass = enclosingClass.parent;
+      enclosingClassList.add(0, enclosingClass);
+    }
+    return enclosingClassList.stream()
+      .filter(classNode -> classNode.type != ClassesProcessor.ClassNode.CLASS_ANONYMOUS &&
+                           classNode.type != ClassesProcessor.ClassNode.CLASS_LAMBDA
+      ).collect(Collectors.toList());
+  }
+
+  public static List<TypeAnnotationWriteHelper> writeNestedTypeAnnotations(
+    StringBuilder sb,
+    List<TypeAnnotationWriteHelper> typeAnnWriteHelpers
+  ) {
+    return typeAnnWriteHelpers.stream().filter(typeAnnWriteHelper -> {
+      StructTypePathEntry path = typeAnnWriteHelper.getPaths().peek();
+      if (path == null) {
+        typeAnnWriteHelper.writeTo(sb);
+        return false;
+      }
+      return true;
+    }).collect(Collectors.toList());
+  }
+
+  /**
+   * Pops the nested path entry of the type annotation helper stack. Should be called after writing a nested type.
+   */
+  public static void popNestedTypeAnnotation(List<TypeAnnotationWriteHelper> typeAnnWriteHelpers) {
+    typeAnnWriteHelpers.forEach(typeAnnWriteHelper -> {
+      StructTypePathEntry path = typeAnnWriteHelper.getPaths().peek();
+      if (path != null && path.getTypePathEntryKind() == StructTypePathEntry.Kind.NESTED.getId()) {
+        typeAnnWriteHelper.getPaths().pop();
+      }
+    });
+  }
+
+  public static String getCastTypeName(VarType type, List<TypeAnnotationWriteHelper> typePathWriteHelper) {
+    return getCastTypeName(type, true, typePathWriteHelper);
+  }
+
+  public static String getCastTypeName(VarType type, boolean getShort, List<TypeAnnotationWriteHelper> typeAnnWriteHelpers) {
+    List<TypeAnnotationWriteHelper> arrayTypeAnnWriteHelpers = arrayPath(type, typeAnnWriteHelpers);
+    List<TypeAnnotationWriteHelper> nonArrayTypeAnnWriteHelpers = nonArrayPath(type, typeAnnWriteHelpers);
+    StringBuilder sb = new StringBuilder(getTypeName(type, getShort, nonArrayTypeAnnWriteHelpers));
+    writeArray(sb, type.getArrayDim(), arrayTypeAnnWriteHelpers);
+    return sb.toString();
+  }
+
+
+  public static List<TypeAnnotationWriteHelper> arrayPath(Type type, List<TypeAnnotationWriteHelper> typeAnnWriteHelpers) {
+    return typeAnnWriteHelpers.stream()
+      .filter(typeAnnWriteHelper -> typeAnnWriteHelper.getPaths().size() < type.getArrayDim())
+      .collect(Collectors.toList());
+  }
+
+  public static List<TypeAnnotationWriteHelper> nonArrayPath(Type type, List<TypeAnnotationWriteHelper> typeAnnWriteHelpers) {
+    return typeAnnWriteHelpers.stream().filter(stack -> {
+      boolean isArrayPath = stack.getPaths().size() < type.getArrayDim();
+      if (stack.getPaths().size() > type.getArrayDim()) {
+        for (int i = 0; i < type.getArrayDim(); i++) {
+          stack.getPaths().poll(); // remove all trailing
+        }
+      }
+      return !isArrayPath;
+    }).collect(Collectors.toList());
+  }
+
+
+  public static void writeArray(StringBuilder sb, int arrayDim, List<TypeAnnotationWriteHelper> typeAnnWriteHelpers) {
+    for (int i = 0; i < arrayDim; i++) {
+      boolean firstIteration = true;
+      for (TypeAnnotationWriteHelper typeAnnotationWriteHelper : typeAnnWriteHelpers) {
+        if (i == typeAnnotationWriteHelper.getPaths().size()) {
+          if (firstIteration) {
+            sb.append(' ');
+            firstIteration = false;
+          }
+          typeAnnotationWriteHelper.writeTo(sb);
+        }
+      }
+      sb.append("[]");
+    }
+  }
+
+  public static PrimitiveExpressionList getExpressionData(VarExprent var) {
+    PrimitiveExpressionList prlst = new PrimitiveExpressionList();
     VarExprent vartmp = new VarExprent(VarExprent.STACK_BASE, var.getExprType(), var.getProcessor());
     vartmp.setStack(true);
 
-    prlst.getLstExprents().add(new AssignmentExprent(vartmp, var.copy(), null));
+    prlst.getExpressions().add(new AssignmentExprent(vartmp, var.copy(), null));
     prlst.getStack().push(vartmp.copy());
     return prlst;
   }
@@ -734,7 +870,7 @@ public class ExprProcessor implements CodeConstants {
   private static void addDeletedGotoInstructionMapping(Statement stat, BytecodeMappingTracer tracer) {
     if (stat instanceof BasicBlockStatement) {
       BasicBlock block = ((BasicBlockStatement)stat).getBlock();
-      List<Integer> offsets = block.getInstrOldOffsets();
+      List<Integer> offsets = block.getOriginalOffsets();
       if (!offsets.isEmpty() &&
           offsets.size() > block.getSeq().length()) { // some instructions have been deleted, but we still have offsets
         tracer.addMapping(offsets.get(offsets.size() - 1)); // add the last offset
@@ -745,24 +881,23 @@ public class ExprProcessor implements CodeConstants {
   public static TextBuffer jmpWrapper(Statement stat, int indent, boolean semicolon, BytecodeMappingTracer tracer) {
     TextBuffer buf = stat.toJava(indent, tracer);
 
-    List<StatEdge> lstSuccs = stat.getSuccessorEdges(Statement.STATEDGE_DIRECT_ALL);
+    List<StatEdge> lstSuccs = stat.getSuccessorEdges(EdgeType.DIRECT_ALL);
     if (lstSuccs.size() == 1) {
       StatEdge edge = lstSuccs.get(0);
-      if (edge.getType() != StatEdge.TYPE_REGULAR && edge.explicit && edge.getDestination().type != Statement.TYPE_DUMMYEXIT) {
+      if (edge.getType() != EdgeType.REGULAR && edge.explicit && edge.getDestination().type != StatementType.DUMMY_EXIT) {
         buf.appendIndent(indent);
 
-        switch (edge.getType()) {
-          case StatEdge.TYPE_BREAK:
-            addDeletedGotoInstructionMapping(stat, tracer);
-            buf.append("break");
-            break;
-          case StatEdge.TYPE_CONTINUE:
-            addDeletedGotoInstructionMapping(stat, tracer);
-            buf.append("continue");
+        if (EdgeType.BREAK.equals(edge.getType())) {
+          addDeletedGotoInstructionMapping(stat, tracer);
+          buf.append("break");
+        }
+        else if (EdgeType.CONTINUE.equals(edge.getType())) {
+          addDeletedGotoInstructionMapping(stat, tracer);
+          buf.append("continue");
         }
 
         if (edge.labeled) {
-          buf.append(" label").append(edge.closure.id.toString());
+          buf.append(" label").append(Integer.toString(edge.closure.id));
         }
         buf.append(";").appendLineSeparator();
         tracer.incrementCurrentSourceLine();
@@ -828,16 +963,16 @@ public class ExprProcessor implements CodeConstants {
 
   public static ConstExprent getDefaultArrayValue(VarType arrType) {
     ConstExprent defaultVal;
-    if (arrType.type == CodeConstants.TYPE_OBJECT || arrType.arrayDim > 0) {
+    if (arrType.getType() == CodeConstants.TYPE_OBJECT || arrType.getArrayDim() > 0) {
       defaultVal = new ConstExprent(VarType.VARTYPE_NULL, null, null);
     }
-    else if (arrType.type == CodeConstants.TYPE_FLOAT) {
+    else if (arrType.getType() == CodeConstants.TYPE_FLOAT) {
       defaultVal = new ConstExprent(VarType.VARTYPE_FLOAT, 0f, null);
     }
-    else if (arrType.type == CodeConstants.TYPE_LONG) {
+    else if (arrType.getType() == CodeConstants.TYPE_LONG) {
       defaultVal = new ConstExprent(VarType.VARTYPE_LONG, 0L, null);
     }
-    else if (arrType.type == CodeConstants.TYPE_DOUBLE) {
+    else if (arrType.getType() == CodeConstants.TYPE_DOUBLE) {
       defaultVal = new ConstExprent(VarType.VARTYPE_DOUBLE, 0d, null);
     }
     else { // integer types
@@ -869,9 +1004,9 @@ public class ExprProcessor implements CodeConstants {
       // "unbox" invocation parameters, e.g. 'byteSet.add((byte)123)' or 'new ShortContainer((short)813)'
       if (exprent.type == Exprent.EXPRENT_INVOCATION && ((InvocationExprent)exprent).isBoxingCall()) {
         InvocationExprent invocationExprent = (InvocationExprent)exprent;
-        exprent = invocationExprent.getLstParameters().get(0);
-        int paramType = invocationExprent.getDescriptor().params[0].type;
-        if (exprent.type == Exprent.EXPRENT_CONST && ((ConstExprent)exprent).getConstType().type != paramType) {
+        exprent = invocationExprent.getParameters().get(0);
+        int paramType = invocationExprent.getDescriptor().params[0].getType();
+        if (exprent.type == Exprent.EXPRENT_CONST && ((ConstExprent)exprent).getConstType().getType() != paramType) {
           leftType = new VarType(paramType);
         }
       }
@@ -881,8 +1016,8 @@ public class ExprProcessor implements CodeConstants {
 
     boolean cast =
       castAlways ||
-      (!leftType.isSuperset(rightType) && (rightType.equals(VarType.VARTYPE_OBJECT) || leftType.type != CodeConstants.TYPE_OBJECT)) ||
-      (castNull && rightType.type == CodeConstants.TYPE_NULL && !UNDEFINED_TYPE_STRING.equals(getTypeName(leftType))) ||
+      (!leftType.isSuperset(rightType) && (rightType.equals(VarType.VARTYPE_OBJECT) || leftType.getType() != CodeConstants.TYPE_OBJECT)) ||
+      (castNull && rightType.getType() == CodeConstants.TYPE_NULL && !UNDEFINED_TYPE_STRING.equals(getTypeName(leftType, Collections.emptyList()))) ||
       (castNarrowing && isIntConstant(exprent) && isNarrowedIntType(leftType));
 
     boolean quote = cast && exprent.getPrecedence() >= FunctionExprent.getPrecedence(FunctionExprent.FUNCTION_CAST);
@@ -897,7 +1032,7 @@ public class ExprProcessor implements CodeConstants {
       }
     }
 
-    if (cast) buffer.append('(').append(getCastTypeName(leftType)).append(')');
+    if (cast) buffer.append('(').append(ExprProcessor.getCastTypeName(leftType, Collections.emptyList())).append(')');
 
     if (quote) buffer.append('(');
 
@@ -914,7 +1049,7 @@ public class ExprProcessor implements CodeConstants {
 
   private static boolean isIntConstant(Exprent exprent) {
     if (exprent.type == Exprent.EXPRENT_CONST) {
-      switch (((ConstExprent)exprent).getConstType().type) {
+      switch (((ConstExprent)exprent).getConstType().getType()) {
         case CodeConstants.TYPE_BYTE:
         case CodeConstants.TYPE_BYTECHAR:
         case CodeConstants.TYPE_SHORT:
@@ -928,7 +1063,6 @@ public class ExprProcessor implements CodeConstants {
   }
 
   private static boolean isNarrowedIntType(VarType type) {
-    return VarType.VARTYPE_INT.isStrictSuperset(type) ||
-           type.equals(VarType.VARTYPE_BYTE_OBJ) || type.equals(VarType.VARTYPE_SHORT_OBJ);
+    return VarType.VARTYPE_INT.isStrictSuperset(type) || type.equals(VarType.VARTYPE_BYTE_OBJ) || type.equals(VarType.VARTYPE_SHORT_OBJ);
   }
 }
